--- a/Web/workbook/0x00.md
+++ b/Web/workbook/0x00.md
@@ -9,12 +9,12 @@
 
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | Intro | 3 Lectures | 12m 00s |  |
+| Section 0 | Intro | 3 Lectures / 12m 00s | ✅ |  |
 | Chapter 0-1 | 🚀 [필독] 강의의 속도를 확인해주세요! | | ✅ | |
 | Chapter 0-2 | 강의 소개 (+ 자바를 배우는 이유) | 03m 49s | ✅ | |
 | Chapter 0-3 | 자바는 어떤 언어인가요? (+ JVM, JRE, JDK) | 08m 55s | ✅ | | 
 | | | | | |
-| Section 1 | 수강을 위한 준비 | 6 Lectures | 43m | ✅ | |
+| Section 1 | 수강을 위한 준비 | 6 Lectures / 43m | ✅ | |
 | Chapter 1-1 | 강의를 수강하는 방법 ( 🛑 필.수.시.청 ) | 08m 26s | ✅ | | 
 | Chapter 1-2 | 질문하는 방법 ( 🛑 필.수.시.청 ) | 05m 17s | ✅ | |
 | Chapter 1-3 | 개발환경 세팅 - 윈도우 | 11m 44s | ✅ | | 
@@ -22,12 +22,12 @@
 | Chapter 1-5 | 개발환경 세팅 - 맥 2 (모든 수강자 필수) | 08m 00s | ✅ | |
 | Chapter 1-6 | IDE 설치 및 설정 | 05m 31s | ✅ | | 
 | | | | | |
-| Section 2 | 자바 시작하기 | 3 Lectures | 52m | ✅ | |
+| Section 2 | 자바 시작하기 | 3 Lectures / 52m | ✅ | |
 | Chapter 2-1 | 자바 프로그램 실행하기 | 19m 33s | ✅ | | 
 | Chapter 2-2 | 주석 | 10m 56s | ✅ | |
 | Chapter 2-3 | 자료형과 변수 | 21m 45s | ✅ | | 
 | | | | | |
-| Section 3 | 자바의 자료형과 연산자 | 11 Lectures | 2h 50m | [:hammer:] | |
+| Section 3 | 자바의 자료형과 연산자 | 11 Lectures / 2h 50m | [:hammer:] | |
 | Chapter 3-1 | 정수 자료형들과 관련 연산자 (상) | 15m 27s | [:hammer:] | | 
 | Chapter 3-2 | 정수 자료형들과 관련 연산자 (하) | 11m 26s | ❌ | |
 | Chapter 3-3 | 실수 자료형들 | 11m 22s | ❌ | | 
@@ -40,7 +40,7 @@
 | Chapter 3-10 | 배열 | 25m 13s | ❌ | | 
 | Chapter 3-11 | 타입 추론 (Java 10+) | 05m 46s | ❌ | | 
 | | | | | |
-| Section 4 | 제어문과 메소드 | 7 Lectures | 2h 04m | ❌ | | 
+| Section 4 | 제어문과 메소드 | 7 Lectures / 2h 04m | ❌ | | 
 | Chapter 4-1 | if / else | 11m 07s | ❌ | | 
 | Chapter 4-2 | switch | 23m 47s | ❌ | | 
 | Chapter 4-3 | for & for-each | 24m 02s | ❌ | | 
@@ -49,7 +49,7 @@
 | Chapter 4-6 | 메소드 더 알아보기 | 15m 22s | ❌ | | 
 | Chapter 4-7 | 키보드 입력 받기 | 18m 08s | ❌ | | 
 | | | | | |
-| Section 5 | 객체지향 프로그래밍 | 10 Lectures | 2h 06m | ❌ | | 
+| Section 5 | 객체지향 프로그래밍 | 10 Lectures / 2h 06m | ❌ | | 
 | Chapter 5-1 | 클래스 기초 | 24m 13s | ❌ | | 
 | Chapter 5-2 | 기초 활용예제들 | 15m 41s | ❌ | | 
 | Chapter 5-3 | 클래스(정적) 필드와 메소드 | 09m 20s | ❌ | | 
@@ -61,7 +61,7 @@
 | Chapter 5-9 | 인터페이스 | 12m 32s | ❌ | | 
 | Chapter 5-10 | 싱글턴 | 08m 50s | ❌ | | 
 | | | | | |
-| Section 6 | 클래스 더 알아보기 | 9 Lectures | 1h 36m | ❌ | | 
+| Section 6 | 클래스 더 알아보기 | 9 Lectures / 1h 36m | ❌ | | 
 | Chapter 6-1 | 블록과 스코프 | 06m 02s | ❌ | | 
 | Chapter 6-2 | 패키지 | 13m 49s | ❌ | | 
 | Chapter 6-3 | 내부 클래스 | 10m 16s | ❌ | | 
@@ -72,13 +72,13 @@
 | Chapter 6-8 | 유용한 라이브러리 클래스들 | 20m 56s | ❌ | | 
 | Chapter 6-9 | 날짜와 시간 관련 클래스들 | 12m 06s | ❌ | | 
 | | | | | |
-| Section 7 | 클래스와 자료형 | 4 Lectures | 1h 06m | ❌ | | 
+| Section 7 | 클래스와 자료형 | 4 Lectures / 1h 06m | ❌ | | 
 | Chapter 7-1 | Object | 24m 01s | ❌ | | 
 | Chapter 7-2 | Wrapper 클래스들 | 15m 21s | ❌ | | 
 | Chapter 7-3 | 제네릭 | 20m 16s | ❌ | | 
 | Chapter 7-4 | 다음 섹션을 위한 게임예제 | 07m 12s | ❌ | | 
 | | | | | |
-| Section 8 | 컬렉션 프레임워크 | 6 Lectures | 1h 23m | ❌ | | 
+| Section 8 | 컬렉션 프레임워크 | 6 Lectures / 1h 23m | ❌ | | 
 | Chapter 8-1 | 컬렉션 프레임워크 | 05m 48s | ❌ | | 
 | Chapter 8-2 | 리스트 | 23m 16s | ❌ | | 
 | Chapter 8-3 | 셋 | 16m 50s | ❌ | | 
@@ -86,7 +86,7 @@
 | Chapter 8-5 | Comparable & Comparator | 13m 36s | ❌ | | 
 | Chapter 8-6 | 이터레이터 | 11m 02s | ❌ | | 
 | | | | | |
-| Section 9 | 함수형 프로그래밍 | 6 Lectures | 1h 32m | ❌ | |
+| Section 9 | 함수형 프로그래밍 | 6 Lectures / 1h 32m | ❌ | |
 | Chapter 9-1 | 람다식과 함수형 인터페이스 | 14m 25s | ❌ | | 
 | Chapter 9-2 | java.util.function 패키지 | 17m 35s | ❌ | | 
 | Chapter 9-3 | 메소드 참조 | 08m 54s | ❌ | | 
@@ -94,7 +94,7 @@
 | Chapter 9-5 | 스트림 연산 (상) | 22m 21s | ❌ | | 
 | Chapter 9-6 | 스트림 연산 (하) | 09m 16s | ❌ | | 
 | | | | | |
-| Section 10 | 오류에 대비하기 | 6 Lectures | 1h 08m | ❌ | |
+| Section 10 | 오류에 대비하기 | 6 Lectures / 1h 08m | ❌ | |
 | Chapter 10-1 | 예외처리 | 10m 45s | ❌ | | 
 | Chapter 10-2 | try 문 더 알아보기 | 11m 18s | ❌ | | 
 | Chapter 10-3 | 예외 정의하고 발생시키기 | 08m 05s | ❌ | | 
@@ -102,7 +102,7 @@
 | Chapter 10-5 | try with resources | 05m 31s | ❌ | | 
 | Chapter 10-6 | NPE와 Optional | 20m 10s | ❌ | | 
 | | | | | |
-| Section 11 | 멀티태스킹 | 9 Lectures | 1h 58m | ❌ | | 
+| Section 11 | 멀티태스킹 | 9 Lectures / 1h 58m | ❌ | | 
 | Chapter 11-1 | 쓰레드 만들기 | 12m 25s | ❌ | | 
 | Chapter 11-2 | 쓰레드 다루기 | 14m 08s | ❌ | | 
 | Chapter 11-3 | 쓰레드 그룹과 데몬 쓰레드 | 11m 33s | ❌ | | 
@@ -113,7 +113,7 @@
 | Chapter 11-8 | 병렬 스트림 | 07m 30s | ❌ | | 
 | Chapter 11-9 | Thread-safe한 클래스들 | 10m 38s | ❌ | | 
 | | | | | |
-| Section 12 | 데이터 입출력과 네트워킹 | 7 Lectures | 1h 39m | ❌ | | 
+| Section 12 | 데이터 입출력과 네트워킹 / 7 Lectures | 1h 39m | ❌ | | 
 | Chapter 12-1 | 기본적인 파일/폴더 다루기 | 12m 18s | ❌ | | 
 | Chapter 12-2 | NIO2로 파일과 폴더 다루기 | 13m 30s | ❌ | | 
 | Chapter 12-3 | I/O 스트림 | 20m 43s | ❌ | | 
@@ -122,19 +122,19 @@
 | Chapter 12-6 | URL로 접속하기 | 12m 03s | ❌ | | 
 | Chapter 12-7 | 소켓 프로그래밍 | 16m 00s | ❌ | | 
 | | | | | |
-| Section 13 | 리플렉션과 어노테이션 | 5 Lectures | 1h 11m | ❌ | | 
+| Section 13 | 리플렉션과 어노테이션 | 5 Lectures / 1h 11m | ❌ | | 
 | Chapter 13-1 | 리플렉션 | 16m 26s | ❌ | | 
 | Chapter 13-2 | 표준 & 메타 어노테이션 | 13m 39s | ❌ | | 
 | Chapter 13-3 | 어노테이션 만들기 | 12m 39s | ❌ | | 
 | Chapter 13-4 | 클래스 로더 (+ 프레임워크 흉내내기) | 15m 36s | ❌ | | 
 | Chapter 13-5 | JavaDoc | 13m 11s | ❌ | | 
 | | | | | |
-| Section 14 | 라이브러리 | 4 Lectures | 55m | ❌ | | 
+| Section 14 | 라이브러리 | 4 Lectures / 55m | ❌ | | 
 | Chapter 14-1 | 소스패스와 클래스패스 | 08m 46s | ❌ | | 
 | Chapter 14-2 | JAR | 11m 11s | ❌ | | 
 | Chapter 14-3 | 빌드 도구 (+ Gradle 사용해보기) | 15m 23s | ❌ | | 
 | Chapter 14-4 | 유용한 외부 라이브러리들 | 20m 00s | ❌ | | 
 | | | | | |
-| Section 15 | 강의를 마무리하며 | 2 Lectures | 0m 47s | ❌ | | 
+| Section 15 | 강의를 마무리하며 | 2 Lectures / 0m 47s | ❌ | | 
 | Chapter 15-1 | 감사합니다. | 00m 47s | ❌ | | 
 | Chapter 15-2 | ✉️ 문의 메일 보내기 | 00m 00s | ❌ | | 
