--- a/Web/workbook/0x00.md
+++ b/Web/workbook/0x00.md
@@ -27,8 +27,8 @@
 | Chapter 2-2 | 주석 | 10m 56s | ✅ | |
 | Chapter 2-3 | 자료형과 변수 | 21m 45s | ✅ | | 
 | | | | | |
-| Section 3 | 자바의 자료형과 연산자 | 11 Lectures / 2h 50m | [:hammer:] | |
-| Chapter 3-1 | 정수 자료형들과 관련 연산자 (상) | 15m 27s | [:hammer:] | | 
+| Section 3 | 자바의 자료형과 연산자 | 11 Lectures / 2h 50m | :hammer: | |
+| Chapter 3-1 | 정수 자료형들과 관련 연산자 (상) | 15m 27s | :hammer: | | 
 | Chapter 3-2 | 정수 자료형들과 관련 연산자 (하) | 11m 26s | ❌ | |
 | Chapter 3-3 | 실수 자료형들 | 11m 22s | ❌ | | 
 | Chapter 3-4 | 문자 자료형 | 11m 15s | ❌ | | 
