Last Review Date

--- a/Web/workbook/0x00.md
+++ b/Web/workbook/0x00.md
@@ -25,7 +25,7 @@
 | Section 2 | 자바 시작하기 | 3 Lectures / 52m | ✅ | |
 | Chapter 2-1 | 자바 프로그램 실행하기 | 19m 33s | ✅ | | 
 | Chapter 2-2 | 주석 | 10m 56s | ✅ | |
-| Chapter 2-3 | 자료형과 변수 | 21m 45s | ✅ | | 
+| Chapter 2-3 | 자료형과 변수 | 21m 45s | ✅ | ~ 23.07.24 | 
 | | | | | |
 | Section 3 | 자바의 자료형과 연산자 | 11 Lectures / 2h 50m | :hammer: | |
 | Chapter 3-1 | 정수 자료형들과 관련 연산자 (상) | 15m 27s | :hammer: | | 
