--- a/Web/workbook/0x00.md
+++ b/Web/workbook/0x00.md
@@ -1,7 +1,10 @@
 # 0x00. 제대로 파는 자바 (Java) - by 알코 [링크](https://www.inflearn.com/course/%EC%A0%9C%EB%8C%80%EB%A1%9C-%ED%8C%8C%EB%8A%94-%EC%9E%90%EB%B0%94)
 
 ## 총 98강 (21 hours 23 minutes)
-    
+
+## 수강 기간 
+- Java 학습          : 2023.07.24 ~ ing
+
 ## Last Update (2023.07.25)    
 
 ![100%](https://progress-bar.dev/12/?scale=98&title=progress&width=500&color=babaca&suffix=/98)
