--- a/C,Game/workbook/0x01.md
+++ b/C,Game/workbook/0x01.md
@@ -1,153 +1,91 @@
-# 0xFFFF. 강의 제목 [링크](#)
+# 0x01. C#과 유니티로 만드는 MMORPG 게임 개발 시리즈 Part1: C# 기초 프로그래밍 입문 [링크](https://www.inflearn.com/course/%EC%9C%A0%EB%8B%88%ED%8B%B0-MMORPG-%EA%B0%9C%EB%B0%9C-part1)
 
-## 총 n강 ( hours  minutes)
+## 총 62강 ( 11 hours 47 minutes)
 
 ## 수강 기간 
-- 학습          : 2023.. ~ ing
+- 학습          : 22.03.28 ~ 22.04.27 // 23.07.28 ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/1/?scale=1&title=progress&width=500&color=babaca&suffix=/1)
+![100%](https://progress-bar.dev/0/?scale=62&title=progress&width=500&color=babaca&suffix=/62)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | Intro |  Lectures / m | ❌ |  |
-| Chapter 0-1 |  |  | ❌ | |
-| Chapter 0-2 |  |  | ❌ | |
-| Chapter 0-3 |  |  | ❌ | | 
+| Section 0 | 개론 | 3 Lectures / 19m | ❌ |  |
+| Chapter 0-1 | 오리엔테이션 | 03m 24s | ❌ | |
+| Chapter 0-2 | [RENEWAL] 환경 설정 | 07m 29s | ❌ | |
+| Chapter 0-3 | [RENEWAL] 프로그래밍 OT | 08m 53s | ❌ | | 
 | | | | | |
-| Section 1 |  |  Lectures / m | ❌ | |
-| Chapter 1-1 |  |  | ❌ | | 
-| Chapter 1-2 |  |  | ❌ | |
-| Chapter 1-3 |  |  | ❌ | | 
-| Chapter 1-4 |  |  | ❌ | |
-| Chapter 1-5 |  |  | ❌ | |
-| Chapter 1-6 |  |  | ❌ | | 
+| Section 1 | 데이터 갖고 놀기 | 15 Lectures / 2h 05m | ❌ | |
+| Chapter 1-1 | [RENEWAL] 데이터 형식 | 08:42 | ❌ | | 
+| Chapter 1-2 | [RENEWAL] 변수 | 12:38 | ❌ | |
+| Chapter 1-3 | [RENEWAL] 정수 형식 | 05:02 | ❌ | | 
+| Chapter 1-4 | [RENEWAL] 2진수, 10진수, 16진수 | 07:06 | ❌ | |
+| Chapter 1-5 | [RENEWAL] 정수 범위의 비밀 | 08:18 | ❌ | |
+| Chapter 1-6 | [RENEWAL] float | 07:06 | ❌ | | 
+| Chapter 1-7 | [RENEWAL] string | 05:55 | ❌ | | 
+| Chapter 1-8 | [RENEWAL] bool | 04:14 | ❌ | |
+| Chapter 1-9 | [RENEWAL] 캐스팅 | 07:25 | ❌ | | 
+| Chapter 1-10 | [RENEWAL] 스트링 포맷 | 11:26 | ❌ | |
+| Chapter 1-11 | [RENEWAL] 산술 연산 #1 | 14:18 | ❌ | |
+| Chapter 1-12 | [RENEWAL] 산술 연산 #2 | 08:22 | ❌ | | 
+| Chapter 1-13 | [RENEWAL] 비교 연산 | 07:14 | ❌ | |
+| Chapter 1-14 | [RENEWAL] 논리 연산 | 10:48 | ❌ | |
+| Chapter 1-15 | [RENEWAL] 데이터 마무리 | 06:42 | ❌ | | 
 | | | | | |
-| Section 2 |  |  Lectures / m | ❌ | |
-| Chapter 2-1 |  |  | ❌ | | 
-| Chapter 2-2 |  |  | ❌ | |
-| Chapter 2-3 |  |  | ❌ | | 
+| Section 2 | 코드의 흐름 제어 | 11 Lectures / 1h 58m | ❌ | |
+| Chapter 2-1 | if와 else | 14:47 | ❌ | | 
+| Chapter 2-2 | switch | 07:23 | ❌ | |
+| Chapter 2-3 | 가위-바위-보 게임 | 09:49 | ❌ | | 
+| Chapter 2-4 | 상수와 열거형 | 08:14 | ❌ | | 
+| Chapter 2-5 | while | 10:30 | ❌ | |
+| Chapter 2-6 | for | 07:54 | ❌ | | 
+| Chapter 2-7 | break, continue | 14:00 | ❌ | | 
+| Chapter 2-8 | 함수 | 15:14 | ❌ | |
+| Chapter 2-9 | ref, out | 10:49 | ❌ | | 
+| Chapter 2-10 | 오버로딩 | 09:22 | ❌ | | 
+| Chapter 2-11 | 연습 문제 | 10:54 | ❌ | | 
 | | | | | |
-| Section 3 |  |  Lectures / h m | ❌ | |
-| Chapter 3-1 |  |  | ❌ | | 
-| Chapter 3-2 |  |  | ❌ | |
-| Chapter 3-3 |  |  | ❌ | | 
-| Chapter 3-4 |  |  | ❌ | | 
-| Chapter 3-5 |  |  | ❌ | | 
-| Chapter 3-6 |  |  | ❌ | | 
-| Chapter 3-7 |  |  | ❌ | |
-| Chapter 3-8 |  |  | ❌ | | 
-| Chapter 3-9 |  |  | ❌ | | 
-| Chapter 3-10 |  |  | ❌ | | 
-| Chapter 3-11 |  |  | ❌ | | 
+| Section 3 | TextRPG | 5 Lectures / 1h 17m | ❌ | |
+| Chapter 3-1 | 디버깅 기초 | 18:07 | ❌ | | 
+| Chapter 3-2 | TextRPG 직업 고르기 | 17:34 | ❌ | |
+| Chapter 3-3 | TextRPG 플레이어 생성 | 14:32 | ❌ | | 
+| Chapter 3-4 | TextRPG 몬스터 생성 | 13:21 | ❌ | | 
+| Chapter 3-5 | TextRPG 전투 | 13:52 | ❌ | | 
 | | | | | |
-| Section 4 |  |  Lectures / h m | ❌ | | 
-| Chapter 4-1 |  |  | ❌ | | 
-| Chapter 4-2 |  |  | ❌ | | 
-| Chapter 4-3 |  |  | ❌ | | 
-| Chapter 4-4 |  |  | ❌ | | 
-| Chapter 4-5 |  |  | ❌ | | 
-| Chapter 4-6 |  |  | ❌ | | 
-| Chapter 4-7 |  |  | ❌ | | 
+| Section 4 | 객체지향 여행 | 10 Lectures / 1h 57m | ❌ | | 
+| Chapter 4-1 | 객체지향의 시작 | 14:20 | ❌ | | 
+| Chapter 4-2 | 복사(값)와 참조 | 10:22 | ❌ | | 
+| Chapter 4-3 | 스택과 힙 | 12:10 | ❌ | | 
+| Chapter 4-4 | 생성자 | 07:57 | ❌ | | 
+| Chapter 4-5 | static의 정체 | 11:03 | ❌ | | 
+| Chapter 4-6 | 상속성 | 12:11 | ❌ | | 
+| Chapter 4-7 | 은닉성 | 12:11 | ❌ | | 
+| Chapter 4-8 | 클래스 형식 변환 | 16:09 | ❌ | | 
+| Chapter 4-9 | 다형성 | 12:43 | ❌ | | 
+| Chapter 4-10 | 문자열 둘러보기 | 08:05 | ❌ | | 
 | | | | | |
-| Section 5 |  |  Lectures / h m | ❌ | | 
-| Chapter 5-1 |  |  | ❌ | | 
-| Chapter 5-2 |  |  | ❌ | | 
-| Chapter 5-3 |  |  | ❌ | | 
-| Chapter 5-4 |  |  | ❌ | | 
-| Chapter 5-5 |  |  | ❌ | | 
-| Chapter 5-6 |  |  | ❌ | | 
-| Chapter 5-7 |  |  | ❌ | | 
+| Section 5 | TextRPG2 | 4 Lectures / 48m | ❌ | | 
+| Chapter 5-1 | TextRPG2 플레이어 생성 | 13:42 | ❌ | | 
+| Chapter 5-2 | TextRPG2 몬스터 생성 | 09:07 | ❌ | | 
+| Chapter 5-3 | TextRPG2 게임 진행 | 10:51 | ❌ | | 
+| Chapter 5-4 | TextRPG2 마무리 | 14:21 | ❌ | | 
 | | | | | |
-| Section 6 |  |  Lectures / h m | ❌ | | 
-| Chapter 6-1 |  |  | ❌ | | 
-| Chapter 6-2 |  |  | ❌ | | 
-| Chapter 6-3 |  |  | ❌ | | 
-| Chapter 6-4 |  |  | ❌ | | 
-| Chapter 6-5 |  |  | ❌ | | 
-| Chapter 6-6 |  |  | ❌ | | 
-| Chapter 6-7 |  |  | ❌ | | 
+| Section 6 | 자료구조 맛보기 | 5 Lectures / 1h 16m | ❌ | | 
+| Chapter 6-1 | 배열 | 17m 13s | ❌ | | 
+| Chapter 6-2 | 연습 문제 | 17m 26s | ❌ | | 
+| Chapter 6-3 | 다차원 배열 | 13m 31s | ❌ | | 
+| Chapter 6-4 | List | 14m 17s | ❌ | | 
+| Chapter 6-5 | Dictionary | 13m 34s | ❌ | | 
 | | | | | |
-| Section 7 |  |  Lectures / h m | ❌ | | 
-| Chapter 7-1 |  |  | ❌ | | 
-| Chapter 7-2 |  |  | ❌ | | 
-| Chapter 7-3 |  |  | ❌ | | 
-| Chapter 7-4 |  |  | ❌ | | 
-| Chapter 7-5 |  |  | ❌ | | 
-| Chapter 7-6 |  |  | ❌ | | 
-| Chapter 7-7 |  |  | ❌ | | 
-| | | | | |
-| Section 8 |  |  Lectures / h m | ❌ | | 
-| Chapter 8-1 |  |  | ❌ | | 
-| Chapter 8-2 |  |  | ❌ | | 
-| Chapter 8-3 |  |  | ❌ | | 
-| Chapter 8-4 |  |  | ❌ | | 
-| Chapter 8-5 |  |  | ❌ | | 
-| Chapter 8-6 |  |  | ❌ | | 
-| Chapter 8-7 |  |  | ❌ | | 
-| | | | | |
-| Section 9 |  |  Lectures / h m | ❌ | | 
-| Chapter 9-1 |  |  | ❌ | | 
-| Chapter 9-2 |  |  | ❌ | | 
-| Chapter 9-3 |  |  | ❌ | | 
-| Chapter 9-4 |  |  | ❌ | | 
-| Chapter 9-5 |  |  | ❌ | | 
-| Chapter 9-6 |  |  | ❌ | | 
-| Chapter 9-7 |  |  | ❌ | | 
-| | | | | |
-| Section 10 |  |  Lectures / h m | ❌ | | 
-| Chapter 10-1 |  |  | ❌ | | 
-| Chapter 10-2 |  |  | ❌ | | 
-| Chapter 10-3 |  |  | ❌ | | 
-| Chapter 10-4 |  |  | ❌ | | 
-| Chapter 10-5 |  |  | ❌ | | 
-| Chapter 10-6 |  |  | ❌ | | 
-| Chapter 10-7 |  |  | ❌ | | 
-| | | | | |
-| Section 11 |  |  Lectures / h m | ❌ | | 
-| Chapter 11-1 |  |  | ❌ | | 
-| Chapter 11-2 |  |  | ❌ | | 
-| Chapter 11-3 |  |  | ❌ | | 
-| Chapter 11-4 |  |  | ❌ | | 
-| Chapter 11-5 |  |  | ❌ | | 
-| Chapter 11-6 |  |  | ❌ | | 
-| Chapter 11-7 |  |  | ❌ | | 
-| | | | | |
-| Section 12 |  |  Lectures / h m | ❌ | | 
-| Chapter 12-1 |  |  | ❌ | | 
-| Chapter 12-2 |  |  | ❌ | | 
-| Chapter 12-3 |  |  | ❌ | | 
-| Chapter 12-4 |  |  | ❌ | | 
-| Chapter 12-5 |  |  | ❌ | | 
-| Chapter 12-6 |  |  | ❌ | | 
-| Chapter 12-7 |  |  | ❌ | | 
-| | | | | |
-| Section 13 |  |  Lectures / h m | ❌ | | 
-| Chapter 13-1 |  |  | ❌ | | 
-| Chapter 13-2 |  |  | ❌ | | 
-| Chapter 13-3 |  |  | ❌ | | 
-| Chapter 13-4 |  |  | ❌ | | 
-| Chapter 13-5 |  |  | ❌ | | 
-| Chapter 13-6 |  |  | ❌ | | 
-| Chapter 13-7 |  |  | ❌ | | 
-| | | | | |
-| Section 14 |  |  Lectures / h m | ❌ | | 
-| Chapter 14-1 |  |  | ❌ | | 
-| Chapter 14-2 |  |  | ❌ | | 
-| Chapter 14-3 |  |  | ❌ | | 
-| Chapter 14-4 |  |  | ❌ | | 
-| Chapter 14-5 |  |  | ❌ | | 
-| Chapter 14-6 |  |  | ❌ | | 
-| Chapter 14-7 |  |  | ❌ | | 
-| | | | | |
-| Section 15 |  |  Lectures / h m | ❌ | | 
-| Chapter 15-1 |  |  | ❌ | | 
-| Chapter 15-2 |  |  | ❌ | | 
-| Chapter 15-3 |  |  | ❌ | | 
-| Chapter 15-4 |  |  | ❌ | | 
-| Chapter 15-5 |  |  | ❌ | | 
-| Chapter 15-6 |  |  | ❌ | | 
-| Chapter 15-7 |  |  | ❌ | | 
-| | | | | |
+| Section 7 | 알아두면 유용한 기타 문법 | 9 Lectures / 2h 4m | ❌ | | 
+| Chapter 7-1 | Generic (일반화) | 13m 46s | ❌ | | 
+| Chapter 7-2 | Interface (인터페이스) | 15m 16s | ❌ | | 
+| Chapter 7-3 | Property (프로퍼티) | 13m 33s | ❌ | | 
+| Chapter 7-4 | Delegate (대리자) | 14m 22s | ❌ | | 
+| Chapter 7-5 | Event (이벤트) | 09m 43s | ❌ | | 
+| Chapter 7-6 | Lambda (람다식) | 20m 35s | ❌ | | 
+| Chapter 7-7 | Exception (예외 처리) | 11m 36s | ❌ | | 
+| Chapter 7-8 | Reflection (리플렉션) | 14m 49s | ❌ | | 
+| Chapter 7-9 | Nullable (널러블) | 11m 07s | ❌ | | 
