--- a/C,Game/workbook/0x02.md
+++ b/C,Game/workbook/0x02.md
@@ -3,7 +3,7 @@
 ## 총 25강 ( 5 hours 45 minutes)
 
 ## 수강 기간 
-- 학습          : 2023.. ~ ing
+- 학습          :  22.03.29 ~ 22.04.27 // 2023.. ~ ing
 
 ## Last Update (d)    
 
