--- a/Web/workbook/0x01.md
+++ b/Web/workbook/0x01.md
@@ -1,37 +1,141 @@
-# 0x01. 누구나 따라하면서 배우는 JSP 커뮤니티 게시판 만들기 [링크](https://www.inflearn.com/course/jsp-%EA%B2%8C%EC%8B%9C%ED%8C%90)
+# 0x01. 김영한의 실전 자바 - 기본편 [링크](https://www.inflearn.com/course/%EA%B9%80%EC%98%81%ED%95%9C%EC%9D%98-%EC%8B%A4%EC%A0%84-%EC%9E%90%EB%B0%94-%EA%B8%B0%EB%B3%B8%ED%8E%B8)
 
-## 총 15강 (02 hours 17 minutes)
+## 총 98강 ( 16 hours 51 minutes)
 
 ## 수강 기간 
-- JSP 학습          : 2022.03.18 ~ 2022.03.23
-- 기능 구현 및 테스트 : 2022.03.23 ~ 2022.03.27
-- 디버깅            : 2022.03.29 ~ 2022.03.29
+- 학습          : 24.01.10 ~ 24.01.22
 
-## Last Update (2023.07.25)    
+## Last Update (d)    
 
-![100%](https://progress-bar.dev/15/?scale=15&title=progress&width=500&color=babaca&suffix=/15)
+![100%](https://progress-bar.dev/98/?scale=98&title=progress&width=500&color=babaca&suffix=/98)
+
+✅❌:hammer:
 
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | Hello World & Login | 4 Lectures / 46m 00s | ✅ |  |
-| Chapter 0-1 | Hello World! | 12m 23s | ✅ | |
-| Chapter 0-2 | 로그인 페이지 디자인 | 13m 23s | ✅ | |
-| Chapter 0-3 | 회원 데이터베이스 구축하기 | 07m 25s | ✅ | | 
-| Chapter 0-4 | 로그인 기능 구현하기 | 12m 49s | ✅ | | 
+| Section 0 | 강의 소개와 자료 | 3 Lectures / 04m | ✅ |  |
+| Chapter 0-1 | 강의 소개 | 04m 46s | ✅ | |
+| Chapter 0-2 | 수업 자료 |  | ✅ | |
+| Chapter 0-3 | 강의 소스 코드 |  | ✅ | | 
 | | | | | |
-| Section 1 | 회원가입 구현, 접속 세션관리 | 3 Lectures / 18m | ✅ | |
-| Chapter 1-1 | 회원가입 페이지 디자인 | 03m 30s | ✅ | | 
-| Chapter 1-2 | 회원가입 기능 구현하기 | 07m 03s | ✅ | |
-| Chapter 1-3 | 접속한 회원 세션 관리하기 | 07m 27s | ✅ | | 
+| Section 1 | 클래스와 데이터 | 9 Lectures / 01h 35m | ✅ | |
+| Chapter 1-1 | 프로젝트 환경 구성 | 09m 16s | ✅ | | 
+| Chapter 1-2 | 클래스가 필요한 이유 | 12m 54s | ✅ | |
+| Chapter 1-3 | 클래스 도입 | 21m 27s | ✅ | | 
+| Chapter 1-4 | 객체 사용 | 06m 42s | ✅ | |
+| Chapter 1-5 | 클래스, 객체, 인스턴스 정리 | 05m 43s | ✅ | |
+| Chapter 1-6 | 배열 도입 - 시작 | 17m 15s | ✅ | | 
+| Chapter 1-7 | 배열 도입 - 리펙토링 | 04m 55s | ✅ | |
+| Chapter 1-8 | 문제와 풀이 | 09m 46s | ✅ | |
+| Chapter 1-9 | 정리 | 07m 30s | ✅ | | 
 | | | | | |
-| Section 2 | 게시판 만들기 | 6 Lectures / 55m | ✅ | |
-| Chapter 2-1 | 게시판 메인 페이지 디자인 | 04m 22s | ✅ | | 
-| Chapter 2-2 | 게시판 데이터베이스 구축하기 | 03m 40s | ✅ | |
-| Chapter 2-3 | 글쓰기 기능 구현하기 | 12m 20s | ✅ | | 
-| Chapter 2-4 | 게시판 글 목록 기능 구현 | 12m 13s | ✅ | | 
-| Chapter 2-5 | 게시글 보기 기능 구현하기 | 12m 25s | ✅ | | 
-| Chapter 2-6 | 게시글 수정 및 삭제 기능 | 10m 56s | ✅ | | 
+| Section 2 | 기본형과 참조형 | 9 Lectures / 01h 46m | ✅ | |
+| Chapter 2-1 | 기본형 vs 참조형1 - 시작 | 07m 53s | ✅ | | 
+| Chapter 2-2 | 기본형 vs 참조형2 - 변수 대입 | 14m 56s | ✅ | |
+| Chapter 2-3 | 기본형 vs 참조형3 - 메서드 호출 | 16m 31s | ✅ | | 
+| Chapter 2-4 | 참조형과 메서드 호출 - 활용 | 20m 08s | ✅ | | 
+| Chapter 2-5 | 변수와 초기화 | 04m 41s | ✅ | |
+| Chapter 2-6 | null | 09m 51s | ✅ | | 
+| Chapter 2-7 | NullPointerException | 09m 13s | ✅ | | 
+| Chapter 2-8 | 문제와 풀이 | 16m 09s | ✅ | |
+| Chapter 2-9 | 정리 | 06m 51s | ✅ | | 
 | | | | | |
-| Section 3 | 웹 사이트 메인페이지 및 마무리 | 2 Lectures / 17m | ✅ | |
-| Chapter 3-1 | 웹 사이트 메인 페이지 디자인 | 08m 40s | ✅ | | 
-| Chapter 3-2 | 프로젝트 완성 및 배포 | 08m 53s | ✅ | [✅](https://github.com/rylahs/JSP-Board) |
+| Section 3 | 객체 지향 프로그래밍 | 7 Lectures / 01h 00m | ✅ | |
+| Chapter 3-1 | 절차 지향 프로그래밍1 - 시작 | 07m 19s | ✅ | | 
+| Chapter 3-2 | 절차 지향 프로그래밍2 - 데이터 묶음 | 04m 01s | ✅ | |
+| Chapter 3-3 | 절차 지향 프로그래밍3 - 메서드 추출 | 10m 29s | ✅ | | 
+| Chapter 3-4 | 클래스와 메서드 | 09m 47s | ✅ | | 
+| Chapter 3-5 | 객체 지향 프로그래밍 | 14m 12s | ✅ | | 
+| Chapter 3-6 | 문제와 풀이 | 09m 45s | ✅ | | 
+| Chapter 3-7 | 정리 | 05m 11s | ✅ | |
+| | | | | |
+| Section 4 | 생성자 | 7 Lectures / 53m | ✅ | | 
+| Chapter 4-1 | 생성자 - 필요한 이유 | 05m 14s | ✅ | | 
+| Chapter 4-2 | this | 14m 52s | ✅ | | 
+| Chapter 4-3 | 생성자 - 도입 | 12m 22s | ✅ | | 
+| Chapter 4-4 | 기본 생성자 | 05m 46s | ✅ | | 
+| Chapter 4-5 | 생성자 - 오버로딩과 this() | 06m 32s | ✅ | | 
+| Chapter 4-6 | 문제와 풀이 | 04m 55s | ✅ | | 
+| Chapter 4-7 | 정리 | 03m 57s | ✅ | | 
+| | | | | |
+| Section 5 | 패키지 | 5 Lectures / 33m | ✅ | | 
+| Chapter 5-1 | 패키지 - 시작 | 08m 38s | ✅ | | 
+| Chapter 5-2 | 패키지 - import | 06m 25s | ✅ | | 
+| Chapter 5-3 | 패키지 규칙 | 07m 47s | ✅ | | 
+| Chapter 5-4 | 패키지 활용 | 05m 30s | ✅ | | 
+| Chapter 5-5 | 정리 | 05m 37s | ✅ | | 
+| | | | | |
+| Section 6 | 접근 제어자 | 8 Lectures / 01h 26m | ✅ | | 
+| Chapter 6-1 | 접근 제어자 이해1 | 09m 45s | ✅ | | 
+| Chapter 6-2 | 접근 제어자 이해2 | 05m 25s | ✅ | | 
+| Chapter 6-3 | 접근 제어자 종류 | 06m 22s | ✅ | | 
+| Chapter 6-4 | 접근 제어자 사용 - 필드, 메서드 | 09m 53s | ✅ | | 
+| Chapter 6-5 | 접근 제어자 사용 - 클래스 레벨 | 10m 53s | ✅ | | 
+| Chapter 6-6 | 캡슐화 | 20m 54s | ✅ | | 
+| Chapter 6-7 | 문제와 풀이 | 20m 47s | ✅ | | 
+| Chapter 6-8 | 정리 | 02m 45s | ✅ | | 
+| | | | | |
+| Section 7 | 자바 메모리 구조와 static | 12 Lectures / 02h 05m | ✅ | | 
+| Chapter 7-1 | 자바 메모리 구조 | 11m 58s | ✅ | | 
+| Chapter 7-2 | 스택과 큐 자료 구조 | 06m 45s | ✅ | | 
+| Chapter 7-3 | 스택 영역 | 06m 27s | ✅ | | 
+| Chapter 7-4 | 스택 영역과 힙 영역 | 09m 14s | ✅ | | 
+| Chapter 7-5 | static 변수1 | 10m 08s | ✅ | | 
+| Chapter 7-6 | static 변수2 | 09m 37s | ✅ | | 
+| Chapter 7-7 | static 변수3 | 12m 02s | ✅ | | 
+| Chapter 7-8 | static 메서드1 | 09m 55s | ✅ | | 
+| Chapter 7-9 | static 메서드2 | 18m 01s | ✅ | | 
+| Chapter 7-10 | static 메서드3 | 09m 22s | ✅ | | 
+| Chapter 7-11 | 문제와 풀이 | 14m 34s | ✅ | | 
+| Chapter 7-12 | 정리 | 07m 20s | ✅ | | 
+| | | | | |
+| Section 8 | final |  Lectures / 37m | ✅ | | 
+| Chapter 8-1 | final 변수와 상수1 | 14m 28s | ✅ | | 
+| Chapter 8-2 | final 변수와 상수2 | 11m 07s | ✅ | | 
+| Chapter 8-3 | final 변수와 참조 | 05m 05s | ✅ | | 
+| Chapter 8-4 | 정리 | 07m 07s | ✅ | | 
+| | | | | |
+| Section 9 | 상속 | 10 Lectures / 01h 39m | ✅ | | 
+| Chapter 9-1 | 상속 - 시작 | 03m 57s | ✅ | | 
+| Chapter 9-2 | 상속 관계 | 10m 41s | ✅ | | 
+| Chapter 9-3 | 상속과 메모리 구조 | 10m 51s | ✅ | | 
+| Chapter 9-4 | 상속과 기능 추가 | 05m 50s | ✅ | | 
+| Chapter 9-5 | 상속과 메서드 오버라이딩 | 18m 07s | ✅ | | 
+| Chapter 9-6 | 상속과 접근 제어 | 11m 25s | ✅ | | 
+| Chapter 9-7 | super - 부모 참조 | 06m 14s | ✅ | | 
+| Chapter 9-8 | super - 생성자 | 15m 08s | ✅ | | 
+| Chapter 9-9 | 문제와 풀이 | 09m 23s | ✅ | | 
+| Chapter 9-10 | 정리 | 07m 33s | ✅ | | 
+| | | | | |
+| Section 10 | 다형성1 | 7 Lectures / 01h 26m | ✅ | | 
+| Chapter 10-1 | 다형성 시작 | 20m 45s | ✅ | | 
+| Chapter 10-2 | 다형성과 캐스팅 | 09m 24s | ✅ | | 
+| Chapter 10-3 | 캐스팅의 종류 | 09m 25s | ✅ | | 
+| Chapter 10-4 | 다운캐스팅과 주의점 | 13m 41s | ✅ | | 
+| Chapter 10-5 | instanceof | 13m 49s | ✅ | | 
+| Chapter 10-6 | 다형성과 메서드 오버라이딩 | 12m 01s | ✅ | | 
+| Chapter 10-7 | 정리 | 07m 26s | ✅ | | 
+| | | | | |
+| Section 11 | 다형성2 | 9 Lectures / 01h 55m | ✅ | | 
+| Chapter 11-1 | 다형성 활용1 | 08m 44s | ✅ | | 
+| Chapter 11-2 | 다형성 활용2 | 10m 09s | ✅ | | 
+| Chapter 11-3 | 다형성 활용3 | 13m 40s | ✅ | | 
+| Chapter 11-4 | 추상 클래스1 | 17m 45s | ✅ | | 
+| Chapter 11-5 | 추상 클래스2 | 09m 54s | ✅ | | 
+| Chapter 11-6 | 인터페이스 | 24m 21s | ✅ | | 
+| Chapter 11-7 | 인터페이스 - 다중 구현 | 11m 16s | ✅ | | 
+| Chapter 11-8 | 클래스와 인터페이스 활용 | 09m 30s | ✅ | | 
+| Chapter 11-9 | 정리 | 10m 02s | ✅ | | 
+| | | | | |
+| Section 12 | 다형성과 설계 | 7 Lectures / 01h 26m | ✅ | | 
+| Chapter 12-1 | 좋은 객체 지향 프로그래밍이란? | 20m 27s | ✅ | | 
+| Chapter 12-2 | 다형성 - 역할과 구현 예제1 | 05m 12s | ✅ | | 
+| Chapter 12-3 | 다형성 - 역할과 구현 예제2 | 06m 18s | ✅ | | 
+| Chapter 12-4 | 다형성 - 역할과 구현 예제3 | 11m 07s | ✅ | | 
+| Chapter 12-5 | OCP(Open-Closed Principle) 원칙 | 08m 40s | ✅ | | 
+| Chapter 12-6 | 문제와 풀이 | 28m 39s | ✅ | | 
+| Chapter 12-7 | 정리 | 06m 32s | ✅ | | 
+| | | | | |
+| Section 13 | 다음으로 | 1 Lectures / 19m | ✅ | | 
+| Chapter 13-1 | 다음으로 | 19m 02s | ✅ | [✅](https://github.com/rylahs/java-beginner) | 
+| | | | | |
