--- a/Web/workbook/0x02.md
+++ b/Web/workbook/0x02.md
@@ -1,60 +1,147 @@
-# 0x02. 스프링 입문 - 코드로 배우는 스프링 부트, 웹 MVC, DB 접근 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%EC%9E%85%EB%AC%B8-%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8)
+# 0x02. 제대로 파는 자바 (Java) - by 알코 [링크](https://www.inflearn.com/course/%EC%A0%9C%EB%8C%80%EB%A1%9C-%ED%8C%8C%EB%8A%94-%EC%9E%90%EB%B0%94)
 
-## 총 28강 (05 hours 21 minutes)
+## 총 102강 (21 hours 23 minutes)
 
 ## 수강 기간 
-- 학습          : 22.04.08 ~ 22.04.10 / 2023.07.21 ~ 2023.07.26
+- Java 학습          : 2023.07.24 ~ ing
 
 ## Last Update (2023.07.25)    
 
-![100%](https://progress-bar.dev/16/?scale=28&title=progress&width=500&color=babaca&suffix=/98)
+![100%](https://progress-bar.dev/12/?scale=102&title=progress&width=500&color=babaca&suffix=/102)
 
 
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강의 소개 | 2 Lectures / 05m 00s | ✅ |  |
-| Chapter 0-1 | 강의 소개 | 05m 02s | ✅ | |
-| Chapter 0-2 | 강의 자료 | | ✅ | |
+| Section 0 | Intro | 3 Lectures / 12m 00s | ✅ |  |
+| Chapter 0-1 | 🚀 [필독] 강의의 속도를 확인해주세요! | | ✅ | |
+| Chapter 0-2 | 강의 소개 (+ 자바를 배우는 이유) | 03m 49s | ✅ | |
+| Chapter 0-3 | 자바는 어떤 언어인가요? (+ JVM, JRE, JDK) | 08m 55s | ✅ | | 
 | | | | | |
-| Section 1 | 프로젝트 환경 설정 | 4 Lectures / 47m | ✅ | |
-| Chapter 1-1 | 프로젝트 생성 | 16m 29s | ✅ | | 
-| Chapter 1-2 | 라이브러리 살펴 보기 | 12m 52s | ✅ | |
-| Chapter 1-3 | View 환경 설정 | 14m 09s | ✅ | | 
-| Chapter 1-4 | 빌드하고 실행하기 | 03m 37s | ✅ | |
+| Section 1 | 수강을 위한 준비 | 7 Lectures / 43m | ✅ | |
+| Chapter 1-1 | 강의를 수강하는 방법 ( 🛑 필.수.시.청 ) | 08m 26s | ✅ | | 
+| Chapter 1-2 | 질문하는 방법 ( 🛑 필.수.시.청 ) | 05m 17s | ✅ | |
+| Chapter 1-3 | ⭐ 노션에 질문하기가 어려우신 분들의 경우 | | ✅ | |
+| Chapter 1-4 | 개발환경 세팅 - 윈도우 | 11m 44s | ✅ | | 
+| Chapter 1-5 | 개발환경 세팅 - 맥 1 (터미널 실습도 하실 분만) | 04m 39s | ✅ | |
+| Chapter 1-6 | 개발환경 세팅 - 맥 2 (모든 수강자 필수) | 08m 00s | ✅ | |
+| Chapter 1-7 | IDE 설치 및 설정 | 05m 31s | ✅ | | 
 | | | | | |
-| Section 2 | 스프링 웹 개발 기초 | 3 Lectures / 33m | ✅ | |
-| Chapter 2-1 | 정적 컨텐츠 | 06m 32s | ✅ | | 
-| Chapter 2-2 | MVC와 템플릿 엔진 | 10m 33s | ✅ | |
-| Chapter 2-3 | API | 15m 58s | ✅ | | 
+| Section 2 | 자바 시작하기 | 3 Lectures / 52m | ✅ | |
+| Chapter 2-1 | 자바 프로그램 실행하기 | 19m 33s | ✅ | | 
+| Chapter 2-2 | 주석 | 10m 56s | ✅ | |
+| Chapter 2-3 | 자료형과 변수 | 21m 45s | ✅ | ~ 23.07.24 | 
 | | | | | |
-| Section 3 | 회원 관리 예제 - 백엔드 개발 | 5 Lectures / 55m | ✅ | |
-| Chapter 3-1 | 비즈니스 요구사항 정리 | 04m 54s | ✅ | | 
-| Chapter 3-2 | 회원 도메인과 리포지토리 만들기 | 08m 28s | ✅ | |
-| Chapter 3-3 | 회원 리포지토리 테스트 케이스 작성 | 16m 26s | ✅ | | 
-| Chapter 3-4 | 회원 서비스 개발 | 08m 00s | ✅ | | 
-| Chapter 3-5 | 회원 서비스 테스트 | 17m 32s | ✅ | | 
+| Section 3 | 자바의 자료형과 연산자 | 13 Lectures / 3h 00m | :hammer: | |
+| Chapter 3-1 | 정수 자료형들과 관련 연산자 (상) | 15m 27s | :hammer: | | 
+| Chapter 3-2 | 정수 자료형들과 관련 연산자 (하) | 11m 26s | ✅ | |
+| Chapter 3-3 | 실수 자료형들 | 11m 22s | ✅ | | 
+| Chapter 3-4 | 문자 자료형 | 11m 15s | ✅ | | 
+| Chapter 3-5 | 불리언 자료형과 관련 연산자 | 14m 16s | ✅ | | 
+| Chapter 3-6 | 문자열 자료형과 기초 사용법 | 22m 29s | ✅ | | 
+| Chapter 3-7 | 문자열의 메소드들 (상) | 19m 09s | ✅ | |
+| Chapter 3-8 | 문자열의 메소드들 (하) | 16m 13s | ✅ | | 
+| Chapter 3-9 | 문자열의 포매팅과 null | 18m 19s | ✅ | | 
+| Chapter 3-10 | 배열 | 25m 13s | ✅ | | 
+| Chapter 3-11 | 타입 추론 (Java 10+) | 05m 46s | ✅ | | 
+| Chapter 3-12 | + 업데이트 : 비트 연산자 | 09m 48s | ✅ | | 
+| Chapter 3-13 | + 업데이트 : 예제에서 var 사용 관련 | | ✅ | | 
 | | | | | |
-| Section 4 | 스프링 빈과 의존관계 | 2 Lectures / 27m | ✅ | | 
-| Chapter 4-1 | 컴포지트 스캔과 자동 의존관계 설정  | 14m 07s | ✅ | | 
-| Chapter 4-2 | 자바 코드로 직접 스프링 빈 등록하기 | 13m 47s | ✅ | ~ 23.07.23 | 
+| Section 4 | 제어문과 메소드 | 7 Lectures / 2h 04m | ✅ | | 
+| Chapter 4-1 | if / else | 11m 07s | ✅ | | 
+| Chapter 4-2 | switch | 23m 47s | ✅ | | 
+| Chapter 4-3 | for & for-each | 24m 02s | ✅ | | 
+| Chapter 4-4 | while & do while | 08m 38s | ✅ | | 
+| Chapter 4-5 | 메소드 | 23m 04s | ✅ | | 
+| Chapter 4-6 | 메소드 더 알아보기 | 15m 22s | ✅ | | 
+| Chapter 4-7 | 키보드 입력 받기 | 18m 08s | ✅ | | 
 | | | | | |
-| Section 5 | 회원 관리 예제 - 웹 MVC 개발 | 3 Lectures / 17m | :hammer: | | 
-| Chapter 5-1 | 회원 웹 기능 - 홈 화면 추가 | 03m 49s | :hammer: | | 
-| Chapter 5-2 | 회원 웹 기능 - 등록 | 09m 09s | ❌ | | 
-| Chapter 5-3 | 회원 웹 기능 - 조회 | 04m 48s | ❌ | | 
+| Section 5 | 객체지향 프로그래밍 | 10 Lectures / 2h 06m | ❌ | | 
+| Chapter 5-1 | 클래스 기초 | 24m 13s | ✅ | | 
+| Chapter 5-2 | 기초 활용예제들 | 15m 41s | ✅ | | 
+| Chapter 5-3 | 클래스(정적) 필드와 메소드 | 09m 20s | ✅ | | 
+| Chapter 5-4 | 접근 제어자 | 15m 16s | ✅ | | 
+| Chapter 5-5 | 상속 | 15m 13s | ✅ | | 
+| Chapter 5-6 | 다형성 | 10m 46s | ❌ | | 
+| Chapter 5-7 | 클래스의 final | 03m 46s | ❌ | | 
+| Chapter 5-8 | 추상 클래스 | 10m 44s | ❌ | | 
+| Chapter 5-9 | 인터페이스 | 12m 32s | ❌ | | 
+| Chapter 5-10 | 싱글턴 | 08m 50s | ❌ | | 
 | | | | | |
-| Section 6 | 스프링 DB 접근 기술 | 6 Lectures / 1h 33m | ❌ | | 
-| Chapter 6-1 | H2 데이터베이스 설치 | 10m 51s | ❌ | | 
-| Chapter 6-2 | 순수 JDBC | 21m 38s | ❌ | | 
-| Chapter 6-3 | 스프링 통합 테스트 | 12m 50s | ❌ | | 
-| Chapter 6-4 | 스프링 JdbcTemplate | 11m 54s | ❌ | | 
-| Chapter 6-5 | JPA | 20m 50s | ❌ | | 
-| Chapter 6-6 | 스프링 데이터 JPA | 15m 35s | ❌ | | 
+| Section 6 | 클래스 더 알아보기 | 9 Lectures / 1h 36m | ❌ | | 
+| Chapter 6-1 | 블록과 스코프 | 06m 02s | ❌ | | 
+| Chapter 6-2 | 패키지 | 13m 49s | ❌ | | 
+| Chapter 6-3 | 내부 클래스 | 10m 16s | ❌ | | 
+| Chapter 6-4 | 익명 클래스 | 07m 30s | ❌ | | 
+| Chapter 6-5 | 메인 메소드 | 07m 23s | ❌ | | 
+| Chapter 6-6 | 열거형 | 11m 11s | ❌ | | 
+| Chapter 6-7 | 레코드 (Java 16+) | 07m 29s | ❌ | | 
+| Chapter 6-8 | 유용한 라이브러리 클래스들 | 20m 56s | ❌ | | 
+| Chapter 6-9 | 날짜와 시간 관련 클래스들 | 12m 06s | ❌ | | 
 | | | | | |
-| Section 7 | AOP | 2 Lectures / 22m | ❌ | | 
-| Chapter 7-1 | AOP가 필요한 상황  | 08m 18s | ❌ | | 
-| Chapter 7-2 | AOP 적용 | 14m 03s | ❌ | | 
+| Section 7 | 클래스와 자료형 | 5 Lectures / 1h 06m | ❌ | | 
+| Chapter 7-0 | 🎊 유료파트에 오신 것을 환영합니다! | | ❌ | | 
+| Chapter 7-1 | Object | 24m 01s | ❌ | | 
+| Chapter 7-2 | Wrapper 클래스들 | 15m 21s | ❌ | | 
+| Chapter 7-3 | 제네릭 | 20m 16s | ❌ | | 
+| Chapter 7-4 | 다음 섹션을 위한 게임예제 | 07m 12s | ❌ | | 
 | | | | | |
-| Section 8 | 다음으로 | 1 Lecture / 18m | ❌ | | 
-| Chapter 8-1 | 다음으로  | 18m 55s | ❌ | | 
-
+| Section 8 | 컬렉션 프레임워크 | 6 Lectures / 1h 23m | ❌ | | 
+| Chapter 8-1 | 컬렉션 프레임워크 | 05m 48s | ❌ | | 
+| Chapter 8-2 | 리스트 | 23m 16s | ❌ | | 
+| Chapter 8-3 | 셋 | 16m 50s | ❌ | | 
+| Chapter 8-4 | 맵 | 12m 54s | ❌ | | 
+| Chapter 8-5 | Comparable & Comparator | 13m 36s | ❌ | | 
+| Chapter 8-6 | 이터레이터 | 11m 02s | ❌ | | 
+| | | | | |
+| Section 9 | 함수형 프로그래밍 | 6 Lectures / 1h 32m | ❌ | |
+| Chapter 9-1 | 람다식과 함수형 인터페이스 | 14m 25s | ❌ | | 
+| Chapter 9-2 | java.util.function 패키지 | 17m 35s | ❌ | | 
+| Chapter 9-3 | 메소드 참조 | 08m 54s | ❌ | | 
+| Chapter 9-4 | 스트림 | 20m 04s | ❌ | | 
+| Chapter 9-5 | 스트림 연산 (상) | 22m 21s | ❌ | | 
+| Chapter 9-6 | 스트림 연산 (하) | 09m 16s | ❌ | | 
+| | | | | |
+| Section 10 | 오류에 대비하기 | 6 Lectures / 1h 08m | ❌ | |
+| Chapter 10-1 | 예외처리 | 10m 45s | ❌ | | 
+| Chapter 10-2 | try 문 더 알아보기 | 11m 18s | ❌ | | 
+| Chapter 10-3 | 예외 정의하고 발생시키기 | 08m 05s | ❌ | | 
+| Chapter 10-4 | 예외 떠넘기기와 되던지기 | 12m 19s | ❌ | | 
+| Chapter 10-5 | try with resources | 05m 31s | ❌ | | 
+| Chapter 10-6 | NPE와 Optional | 20m 10s | ❌ | | 
+| | | | | |
+| Section 11 | 멀티태스킹 | 9 Lectures / 1h 58m | ❌ | | 
+| Chapter 11-1 | 쓰레드 만들기 | 12m 25s | ❌ | | 
+| Chapter 11-2 | 쓰레드 다루기 | 14m 08s | ❌ | | 
+| Chapter 11-3 | 쓰레드 그룹과 데몬 쓰레드 | 11m 33s | ❌ | | 
+| Chapter 11-4 | 동기화 | 09m 53s | ❌ | | 
+| Chapter 11-5 | wait & notify | 08m 11s | ❌ | | 
+| Chapter 11-6 | 쓰레드 풀과 Future | 19m 23s | ❌ | | 
+| Chapter 11-7 | CompletableFuture | 24m 41s | ❌ | | 
+| Chapter 11-8 | 병렬 스트림 | 07m 30s | ❌ | | 
+| Chapter 11-9 | Thread-safe한 클래스들 | 10m 38s | ❌ | | 
+| | | | | |
+| Section 12 | 데이터 입출력과 네트워킹 / 7 Lectures | 1h 39m | ❌ | | 
+| Chapter 12-1 | 기본적인 파일/폴더 다루기 | 12m 18s | ❌ | | 
+| Chapter 12-2 | NIO2로 파일과 폴더 다루기 | 13m 30s | ❌ | | 
+| Chapter 12-3 | I/O 스트림 | 20m 43s | ❌ | | 
+| Chapter 12-4 | Reader와 Writer | 15m 21s | ❌ | | 
+| Chapter 12-5 | 직렬화 | 09m 49s | ❌ | | 
+| Chapter 12-6 | URL로 접속하기 | 12m 03s | ❌ | | 
+| Chapter 12-7 | 소켓 프로그래밍 | 16m 00s | ❌ | | 
+| | | | | |
+| Section 13 | 리플렉션과 어노테이션 | 5 Lectures / 1h 11m | ❌ | | 
+| Chapter 13-1 | 리플렉션 | 16m 26s | ❌ | | 
+| Chapter 13-2 | 표준 & 메타 어노테이션 | 13m 39s | ❌ | | 
+| Chapter 13-3 | 어노테이션 만들기 | 12m 39s | ❌ | | 
+| Chapter 13-4 | 클래스 로더 (+ 프레임워크 흉내내기) | 15m 36s | ❌ | | 
+| Chapter 13-5 | JavaDoc | 13m 11s | ❌ | | 
+| | | | | |
+| Section 14 | 라이브러리 | 4 Lectures / 55m | ❌ | | 
+| Chapter 14-1 | 소스패스와 클래스패스 | 08m 46s | ❌ | | 
+| Chapter 14-2 | JAR | 11m 11s | ❌ | | 
+| Chapter 14-3 | 빌드 도구 (+ Gradle 사용해보기) | 15m 23s | ❌ | | 
+| Chapter 14-4 | 유용한 외부 라이브러리들 | 20m 00s | ❌ | | 
+| | | | | |
+| Section 15 | 강의를 마무리하며 | 2 Lectures / 0m 47s | ❌ | | 
+| Chapter 15-1 | 감사합니다. | 00m 47s | ❌ | | 
+| Chapter 15-2 | ✉️ 문의 메일 보내기 | 00m 00s | ❌ | | 
