--- a/Web/workbook/0x0B.md
+++ b/Web/workbook/0x0B.md
@@ -1,169 +1,86 @@
-# 0x0B. 스프링 핵심 원리 - 고급편 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EC%9B%90%EB%A6%AC-%EA%B3%A0%EA%B8%89%ED%8E%B8)
+# 0x0B. 스프링 DB 1편 - 데이터 접근 핵심 원리 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-db-1)
 
-## 총 125강 ( 16 hours 44 minutes)
+## 총 57강 ( 10 hours 04 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=125&title=progress&width=500&color=babaca&suffix=/125)
+![100%](https://progress-bar.dev/0/?scale=57&title=progress&width=500&color=babaca&suffix=/57)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 소개 |  Lectures / 3m | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 3m 02s  | ❌ | |
+| Section 0 | 강의 소개 | 3 Lectures / 5m | ❌ |  |
+| Chapter 0-1 | 강의 소개 | 05m 23s | ❌ | |
 | Chapter 0-2 | 수업 자료 |  | ❌ | |
 | Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
 | | | | | |
-| Section 1 | 예제 만들기 | 8 Lectures / 1h 14m | ❌ | |
-| Chapter 1-1 | 프로젝트 생성 | 02m 35s | ❌ | | 
-| Chapter 1-2 | 예제 프로젝트 만들기 - V0 | 07m 35s | ❌ | |
-| Chapter 1-3 | 로그 추적기 - 요구사항 분석 | 06m 04s | ❌ | | 
-| Chapter 1-4 | 로그 추적기 V1 - 프로토타입 개발 | 24m 51s | ❌ | |
-| Chapter 1-5 | 로그 추적기 V1 - 적용 | 15m 37s | ❌ | |
-| Chapter 1-6 | 로그 추적기 V2 - 파라미터로 동기화 개발 | 05m 45s | ❌ | | 
-| Chapter 1-7 | 로그 추적기 V2 - 적용 | 06m 22s | ❌ | |
-| Chapter 1-8 | 정리 | 05m 24s | ❌ | | 
+| Section 1 | JDBC 이해 | 9 Lectures / 1h 34m | ❌ | |
+| Chapter 1-1 | 프로젝트 생성 | 03m 13s | ❌ | | 
+| Chapter 1-2 | H2 데이터베이스 설정 | 05m 02s | ❌ | |
+| Chapter 1-3 | JDBC 이해 | 09m 09s | ❌ | | 
+| Chapter 1-4 | JDBC와 최신 데이터 접근 기술 | 08m 38s | ❌ | |
+| Chapter 1-5 | 데이터베이스 연결 | 16m 04s | ❌ | |
+| Chapter 1-6 | JDBC 개발 - 등록 | 19m 57s | ❌ | | 
+| Chapter 1-7 | JDBC 개발 - 조회 | 14m 42s | ❌ | |
+| Chapter 1-8 | JDBC 개발 - 수정, 삭제 | 12m 45s | ❌ | |
+| Chapter 1-9 | 정리 | 05m 02s | ❌ | | 
 | | | | | |
-| Section 2 | 쓰레드 로컬 - ThreadLocal | 10 Lectures / 1h 08m | ❌ | |
-| Chapter 2-1 | 필드 동기화 - 개발 | 12m 37s | ❌ | | 
-| Chapter 2-2 | 필드 동기화 - 적용 | 05m 01s | ❌ | |
-| Chapter 2-3 | 필드 동기화 - 동시성 문제 | 06m 03s | ❌ | | 
-| Chapter 2-4 | 동시성 문제 - 예제 코드 | 18m 05s | ❌ | | 
-| Chapter 2-5 | ThreadLocal - 소개 | 04m 18s | ❌ | |
-| Chapter 2-6 | ThreadLocal - 예제 코드 | 05m 38s | ❌ | | 
-| Chapter 2-7 | 쓰레드 로컬 동기화 - 개발 | 06m 10s | ❌ | | 
-| Chapter 2-8 | 쓰레드 로컬 동기화 - 적용 | 03m 12s | ❌ | |
-| Chapter 2-9 | 쓰레드 로컬 - 주의사항 | 04m 16s | ❌ | | 
-| Chapter 2-10 | 정리 | 03m 34s | ❌ | | 
+| Section 2 | 커넥션풀과 데이터소스 이해 | 6 Lectures / 51m | ❌ | |
+| Chapter 2-1 | 커넥션 풀 이해 | 08m 41s | ❌ | | 
+| Chapter 2-2 | DataSource 이해 | 06m 10s | ❌ | |
+| Chapter 2-3 | DataSource 예제 1 - DriverManager | 08m 32s | ❌ | | 
+| Chapter 2-4 | DataSource 예제 2 - 커넥션 풀 | 11m 04s | ❌ | | 
+| Chapter 2-5 | DataSource 적용 | 13m 54s | ❌ | |
+| Chapter 2-6 | 정리 | 03m 23s | ❌ | | 
 | | | | | |
-| Section 3 | 템플릿 메서드 패턴과 콜백 패턴 | 15 Lectures / 1h 52m | ❌ | |
-| Chapter 3-1 | 템플릿 메서드 패턴 - 시작 | 07m 23s | ❌ | | 
-| Chapter 3-2 | 템플릿 메서드 패턴 - 예제 1 | 03m 29s | ❌ | |
-| Chapter 3-3 | 템플릿 메서드 패턴 - 예제 2 | 10m 15s | ❌ | | 
-| Chapter 3-4 | 템플릿 메서드 패턴 - 예제 3 | 04m 45s | ❌ | | 
-| Chapter 3-5 | 템플릿 메서드 패턴 - 적용 1 | 12m 39s | ❌ | | 
-| Chapter 3-6 | 템플릿 메서드 패턴 - 적용 2 | 05m 10s | ❌ | | 
-| Chapter 3-7 | 템플릿 메서드 패턴 - 정의 | 06m 47s | ❌ | |
-| Chapter 3-8 | 전략 패턴 - 시작 | 01m 46s | ❌ | | 
-| Chapter 3-9 | 전략 패턴 - 예제 1 | 11m 02s | ❌ | | 
-| Chapter 3-10 | 전략 패턴 - 예제 2 | 09m 47s | ❌ | | 
-| Chapter 3-11 | 전략 패턴 - 예제 3 | 11m 16s | ❌ | | 
-| Chapter 3-12 | 템플릿 콜백 패턴 - 시작 | 04m 46s | ❌ | | 
-| Chapter 3-13 | 템플릿 콜백 패턴 - 예제 | 04m 12s | ❌ | | 
-| Chapter 3-14 | 템플릿 콜백 패턴 - 적용 | 12m 42s | ❌ | | 
-| Chapter 3-15 | 정리 | 06m 30s | ❌ | | 
+| Section 3 | 트랜잭션 이해 | 12 Lectures / 2h 00m | ❌ | |
+| Chapter 3-1 | 트랜잭션 - 개념 이해 | 08m 42s | ❌ | | 
+| Chapter 3-2 | 데이터베이스 연결 구조와 DB 세션 | 02m 40s | ❌ | |
+| Chapter 3-3 | 트랜잭션 - DB 예제 1 - 개념 이해 | 08m 29s | ❌ | | 
+| Chapter 3-4 | 트랜잭션 - DB 예제 2 - 자동 커밋, 수동 커밋 | 06m 14s | ❌ | | 
+| Chapter 3-5 | 트랜잭션 - DB 예제 3 - 트랜잭션 실습 | 06m 24s | ❌ | | 
+| Chapter 3-6 | 트랜잭션 - DB 예제 4 - 계좌이체 | 09m 25s | ❌ | | 
+| Chapter 3-7 | DB 락 - 개념 이해 | 05m 10s | ❌ | |
+| Chapter 3-8 | DB 락 - 변경 | 07m 52s | ❌ | | 
+| Chapter 3-9 | DB 락 - 조회 | 10m 13s | ❌ | | 
+| Chapter 3-10 | 트랜잭션 - 적용 1 | 19m 04s | ❌ | | 
+| Chapter 3-11 | 트랜잭션 - 적용 2 | 29m 04s | ❌ | | 
+| Chapter 3-12 | 정리 | 06m 44s | ❌ | | 
 | | | | | |
-| Section 4 | 프록시 패턴과 데코레이터 패턴 | 18 Lectures / 2h 19m | ❌ | | 
-| Chapter 4-1 | 프로젝트 생성 | 03m 14s | ❌ | | 
-| Chapter 4-2 | 예제 프로젝트 만들기 v1 | 15m 27s | ❌ | | 
-| Chapter 4-3 | 예제 프로젝트 만들기 v2 | 05m 50s | ❌ | | 
-| Chapter 4-4 | 예제 프로젝트 만들기 v3 | 04m 44s | ❌ | | 
-| Chapter 4-5 | 요구사항 추가 | 03m 03s | ❌ | | 
-| Chapter 4-6 | 프록시, 프록시 패턴, 데코레이터 패턴 - 소개 | 12m 59s | ❌ | | 
-| Chapter 4-7 | 프록시 패턴 - 예제 코드 1 | 05m 21s | ❌ | | 
-| Chapter 4-8 | 프록시 패턴 - 예제 코드 2 | 08m 03s | ❌ | | 
-| Chapter 4-9 | 데코레이터 패턴 - 예제 코드1 | 03m 46s | ❌ | | 
-| Chapter 4-10 | 데코레이터 패턴 - 예제 코드 2 | 06m 03s | ❌ | | 
-| Chapter 4-11 | 데코레이터 패턴 - 예제 코드 3 | 05m 31s | ❌ | | 
-| Chapter 4-12 | 프록시 패턴과 데코레이터 패턴 정리 | 04m 37s | ❌ | | 
-| Chapter 4-13 | 인터페이스 기반 프록시 - 적용 | 24m 42s | ❌ | | 
-| Chapter 4-14 | 구체 클래스 기반 프록시 - 예제 1 | 03m 34s | ❌ | | 
-| Chapter 4-15 | 구체 클래스 기반 프록시 - 예제 2 | 08m 42s | ❌ | | 
-| Chapter 4-16 | 구체 클래스 기반 프록시 - 적용 | 13m 14s | ❌ | | 
-| Chapter 4-17 | 인터페이스 기반 프록시와 클래스 기반 프록시 | 05m 10s | ❌ | | 
-| Chapter 4-18 | 정리 | 05m 35s | ❌ | | 
+| Section 4 | 스프링과 문제 해결 - 트랜잭션 | 11 Lectures / 2h 06m | ❌ | | 
+| Chapter 4-1 | 문제점들 | 16m 22s | ❌ | | 
+| Chapter 4-2 | 트랜잭션 추상화 | 08m 44s | ❌ | | 
+| Chapter 4-3 | 트랜잭션 동기화 | 06m 20s | ❌ | | 
+| Chapter 4-4 | 트랜잭션 문제 해결 - 트랜잭션 매니저 1 | 20m 53s | ❌ | | 
+| Chapter 4-5 | 트랜잭션 문제 해결 - 트랜잭션 매니저 2 | 06m 58s | ❌ | | 
+| Chapter 4-6 | 트랜잭션 문제 해결 - 트랜잭션 템플릿 | 16m 01s | ❌ | | 
+| Chapter 4-7 | 트랜잭션 문제 해결 - 트랜잭션 AOP 이해 | 07m 28s | ❌ | | 
+| Chapter 4-8 | 트랜잭션 문제 해결 - 트랜잭션 AOP 적용 | 17m 57s | ❌ | | 
+| Chapter 4-9 | 트랜잭션 문제 해결 - 트랜잭션 AOP 정리 | 08m 30s | ❌ | | 
+| Chapter 4-10 | 스프링 부트의 자동 리소스 등록 | 09m 19s | ❌ | | 
+| Chapter 4-11 | 정리 | 07m 28s | ❌ | | 
 | | | | | |
-| Section 5 | 동적 프록시 기술 | 8 Lectures / 1h 20m | ❌ | | 
-| Chapter 5-1 | 리플렉션 | 18m 45s | ❌ | | 
-| Chapter 5-2 | JDK 동적 프록시 - 소개 | 02m 57s | ❌ | | 
-| Chapter 5-3 | JDK 동적 프록시 - 예제 코드 | 17m 18s | ❌ | | 
-| Chapter 5-4 | JDK 동적 프록시 - 적용1 | 14m 17s | ❌ | | 
-| Chapter 5-5 | JDK 동적 프록시 - 적용2 | 06m 48s | ❌ | | 
-| Chapter 5-6 | CGLIB - 소개 | 02m 50s | ❌ | | 
-| Chapter 5-7 | CGLIB - 예제 코드 | 12m 16s | ❌ | | 
-| Chapter 5-8 | 정리 | 04m 56s | ❌ | | 
+| Section 5 | 자바 예외 이해 | 8 Lectures / 1h 25m | ❌ | | 
+| Chapter 5-1 | 예외 계층 | 05m 58s | ❌ | | 
+| Chapter 5-2 | 예외 기본 규칙 | 03m 49s | ❌ | | 
+| Chapter 5-3 | 체크 예외 기본 이해 | 16m 45s | ❌ | | 
+| Chapter 5-4 | 언체크 예외 기본 이해 | 10m 47s | ❌ | | 
+| Chapter 5-5 | 체크 예외 활용 | 22m 19s | ❌ | | 
+| Chapter 5-6 | 언체크 예외 활용 | 13m 06s | ❌ | | 
+| Chapter 5-7 | 예외 포함과 스택 트레이스 | 07m 57s | ❌ | | 
+| Chapter 5-8 | 정리 | 05m 16s | ❌ | | 
 | | | | | |
-| Section 6 | 스프링이 지원하는 프록시 | 11 Lectures / 1h 19m | ❌ | | 
-| Chapter 6-1 | 프록시 팩토리 - 소개 | 07m 20s | ❌ | | 
-| Chapter 6-2 | 프록시 팩토리 - 예제 코드 1 | 12m 41s | ❌ | | 
-| Chapter 6-3 | 프록시 팩토리 - 예제 코드 2 | 07m 40s | ❌ | | 
-| Chapter 6-4 | 포인트컷, 어드바이스, 어드바이저 - 소개 | 05m 08s | ❌ | | 
-| Chapter 6-5 | 예제 코드 1 - 어드바이저 | 05m 35s | ❌ | | 
-| Chapter 6-6 | 예제 코드 2 - 직접 만든 포인트컷 | 09m 13s | ❌ | | 
-| Chapter 6-7 | 예제 코드 3 - 스프링이 제공하는 포인트컷 | 03m 04s | ❌ | | 
-| Chapter 6-8 | 예제 코드 4 - 여러 어드바이저 함께 적용 | 11m 01s | ❌ | | 
-| Chapter 6-9 | 프록시 팩토리 - 적용 1 | 08m 24s | ❌ | | 
-| Chapter 6-10 | 프록시 팩토리 - 적용 2 | 03m 44s | ❌ | | 
-| Chapter 6-11 | 정리 | 05m 57s | ❌ | | 
+| Section 6 | 스프링과 문제 해결 - 예외 처리, 반복 | 7 Lectures / 1h 26m | ❌ | | 
+| Chapter 6-1 | 체크 예외와 인터페이스 | 09m 51s | ❌ | | 
+| Chapter 6-2 | 런타임 예외 적용 | 11m 04s | ❌ | | 
+| Chapter 6-3 | 데이터 접근 예외 직접 만들기 | 20m 19s | ❌ | | 
+| Chapter 6-4 | 스프링 예외 추상화 이해 | 21m 04s | ❌ | | 
+| Chapter 6-5 | 스프링 예외 추상화 적용 | 08m 54s | ❌ | | 
+| Chapter 6-6 | JDBC 반복 문제 해결 - JdbcTemplate | 09m 28s | ❌ | | 
+| Chapter 6-7 | 정리 | 05m 50s | ❌ | | 
 | | | | | |
-| Section 7 | 빈 후처리기 | 9 Lectures / 1h 13m | ❌ | | 
-| Chapter 7-1 | 빈 후처리기 - 소개 | 03m 53s | ❌ | | 
-| Chapter 7-2 | 빈 후처리기 - 예제 코드 1 | 06m 25s | ❌ | | 
-| Chapter 7-3 | 빈 후처리기 - 예제 코드 2 | 12m 03s | ❌ | | 
-| Chapter 7-4 | 빈 후처리기 - 적용 | 16m 32s | ❌ | | 
-| Chapter 7-5 | 빈 후처리기 - 정리 | 04m 59s | ❌ | | 
-| Chapter 7-6 | 스프링이 제공하는 빈 후처리기1 | 14m 41s | ❌ | | 
-| Chapter 7-7 | 스프링이 제공하는 빈 후처리기2 | 08m 27s | ❌ | | 
-| Chapter 7-8 | 하나의 프록시, 여러 Advisor 적용 | 03m 22s | ❌ | | 
-| Chapter 7-9 | 정리 | 03m 08s | ❌ | | 
-| | | | | |
-| Section 8 | @Aspect AOP |  Lectures / 17m | ❌ | | 
-| Chapter 8-1 | @Aspect 프록시 - 적용 | 09m 10s | ❌ | | 
-| Chapter 8-2 | @Aspect 프록시 - 설명 | 07m 35s | ❌ | | 
-| Chapter 8-3 | 정리 | 01m 09s | ❌ | | 
-| | | | | |
-| Section 9 | 스프링 AOP 개념 | 5 Lectures / 41m | ❌ | | 
-| Chapter 9-1 | AOP 소개 - 핵심 기능과 부가 기능 | 06m 31s | ❌ | | 
-| Chapter 9-2 | AOP 소개 - 애스펙트 | 07m 49s | ❌ | | 
-| Chapter 9-3 | AOP 적용 방식 | 15m 47s | ❌ | | 
-| Chapter 9-4 | AOP 용어 정리 | 05m 21s | ❌ | | 
-| Chapter 9-5 | 정리 | 05m 49s | ❌ | | 
-| | | | | |
-| Section 10 | 스프링 AOP 구현 |  Lectures / 1h 10m | ❌ | | 
-| Chapter 10-1 | 프로젝트 생성 | 04m 42s | ❌ | | 
-| Chapter 10-2 | 예제 프로젝트 만들기 | 04m 55s | ❌ | | 
-| Chapter 10-3 | 스프링 AOP 구현 1 - 시작 | 08m 21s | ❌ | | 
-| Chapter 10-4 | 스프링 AOP 구현 2 - 포인트컷 분리 | 03m 50s | ❌ | | 
-| Chapter 10-5 | 스프링 AOP 구현 3 - 어드바이스 추가 | 10m 00s | ❌ | | 
-| Chapter 10-6 | 스프링 AOP 구현 4 - 포인트컷 참조 | 03m 14s | ❌ | | 
-| Chapter 10-7 | 스프링 AOP 구현 5 - 어드바이스 순서 | 05m 39s | ❌ | | 
-| Chapter 10-8 | 스프링 AOP 구현 6 - 어드바이스 종류 | 28m 06s | ❌ | | 
-| Chapter 10-9 | 정리 | 01m 58s | ❌ | | 
-| | | | | |
-| Section 11 | 스프링 AOP - 포인트컷 | 12 Lectures / 1h 52m | ❌ | | 
-| Chapter 11-1 | 포인트컷 지시자 | 03m 15s | ❌ | | 
-| Chapter 11-2 | 예제 만들기 | 07m 26s | ❌ | | 
-| Chapter 11-3 | execution - 1 | 11m 53s | ❌ | | 
-| Chapter 11-4 | execution - 2 | 13m 01s | ❌ | | 
-| Chapter 11-5 | within | 05m 06s | ❌ | | 
-| Chapter 11-6 | args | 07m 10s | ❌ | | 
-| Chapter 11-7 | @target, @within | 13m 40s | ❌ | | 
-| Chapter 11-8 | @annotation, @args | 04m 22s | ❌ | | 
-| Chapter 11-9 | bean | 03m 34s | ❌ | | 
-| Chapter 11-10 | 매개변수 전달 | 16m 00s | ❌ | | 
-| Chapter 11-11 | this, target | 22m 40s | ❌ | | 
-| Chapter 11-12 | 정리 | 04m 32s | ❌ | | 
-| | | | | |
-| Section 12 | 스프링 AOP - 실전 예제 | 4 Lectures / 24m | ❌ | | 
-| Chapter 12-1 | 예제 만들기 | 04m 35s | ❌ | | 
-| Chapter 12-2 | 로그 출력 AOP | 04m 09s | ❌ | | 
-| Chapter 12-3 | 재시도 AOP | 12m 08s | ❌ | | 
-| Chapter 12-4 | 정리 | 03m 40s | ❌ | | 
-| | | | | |
-| Section 13 | 스프링 AOP - 실무 주의사항 | 9 Lectures / 1h 09m | ❌ | | 
-| Chapter 13-1 | 프록시와 내부 호출 - 문제 | 13m 28s | ❌ | | 
-| Chapter 13-2 | 프록시와 내부 호출 - 대안 1 자기 자신 주입 | 06m 32s | ❌ | | 
-| Chapter 13-3 | 프록시와 내부 호출 - 대안 2 지연 조회 | 04m 45s | ❌ | | 
-| Chapter 13-4 | 프록시와 내부 호출 - 대안 3 구조 변경 | 06m 04s | ❌ | | 
-| Chapter 13-5 | 프록시 기술과 한계 - 타입 캐스팅 | 11m 05s | ❌ | | 
-| Chapter 13-6 | 프록시 기술과 한계 - 의존관계 주입 | 10m 48s | ❌ | | 
-| Chapter 13-7 | 프록시 기술과 한계 - CGLIB | 04m 44s | ❌ | | 
-| Chapter 13-8 | 프록시 기술과 한계 - 스프링의 해결책 | 07m 29s | ❌ | | 
-| Chapter 13-9 | 정리 | 04m 36s | ❌ | | 
-| | | | | |
-| Section 14 | 다음으로 | 1 Lecture / 35m | ❌ | | 
-| Chapter 14-1 | 다음으로 | 35:50  | ❌ | | 
-
+| Section 7 | 다음으로 | 1 Lecture / 34m | ❌ | | 
+| Chapter 7-1 | 다음으로 | 34m 25s | ❌ | | 
