--- a/Web/workbook/0x0C.md
+++ b/Web/workbook/0x0C.md
@@ -1,51 +1,127 @@
-# 0x0C. 실전! 스프링 부트와 JPA 활용2 - API 개발과 성능 최적화 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-JPA-API%EA%B0%9C%EB%B0%9C-%EC%84%B1%EB%8A%A5%EC%B5%9C%EC%A0%81%ED%99%94)
+# 0x0C. 스프링 DB 2편 - 데이터 접근 활용 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-db-2)
 
-## 총 24강 ( 6 hours 35 minutes)
+## 총 88강 ( 13 hours 59 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=24&title=progress&width=500&color=babaca&suffix=/24)
+![100%](https://progress-bar.dev/0/?scale=88&title=progress&width=500&color=babaca&suffix=/88)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강좌 소개 |  Lectures / 2m | ❌ |  |
-| Chapter 0-1 | 미리보기 | 02m 27s | ❌ | |
+| Section 0 | 강의 소개 | 4 Lectures / 2m | ❌ |  |
+| Chapter 0-1 | 강의 소개 | 02m 52s | ❌ | |
 | Chapter 0-2 | 수업 자료 |  | ❌ | |
 | Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
-| Chapter 0-4 | 2편 추가 자료 |  | ❌ | | 
+| Chapter 0-4 | PPT 자료 |  | ❌ | | 
 | | | | | |
-| Section 1 | API 개발 기본 | 3 Lectures / 54m | ❌ | |
-| Chapter 1-1 | 회원 등록 API | 25m 46s | ❌ | | 
-| Chapter 1-2 | 회원 수정 API | 11m 29s | ❌ | |
-| Chapter 1-3 | 회원 조회 API | 16m 52s | ❌ | | 
+| Section 1 | 데이터 접근 기술 - 시작 | 7 Lectures / 59m | ❌ | |
+| Chapter 1-1 | 데이터 접근 기술 진행 방식 소개 | 06m 21s | ❌ | | 
+| Chapter 1-2 | 프로젝트 설정과 메모리 저장소 | 04m 07s | ❌ | |
+| Chapter 1-3 | 프로젝트 구조 설명 1 - 기본 | 18m 17s | ❌ | | 
+| Chapter 1-4 | 프로젝트 구조 설명 2 - 설정 | 13m 24s | ❌ | |
+| Chapter 1-5 | 프로젝트 구조 설명 3 - 테스트 | 07m 47s | ❌ | |
+| Chapter 1-6 | 데이터베이스 테이블 생성 | 07m 36s | ❌ | | 
+| Chapter 1-7 | 정리 | 01m 55s | ❌ | | 
 | | | | | |
-| Section 2 | API 개발 고급 - 준비 | 2 Lectures / 21m | ❌ | |
-| Chapter 2-1 | API 개발 고급 소개 | 05m 11s | ❌ | | 
-| Chapter 2-2 | 조회용 샘플 데이터 입력 | 16m 08s | ❌ | |
+| Section 2 | 데이터 접근 기술 - 스프링 JdbcTemplate | 10 Lectures / 1h 17m | ❌ | |
+| Chapter 2-1 | JdbcTemplate 소개와 설정 | 03m 50s | ❌ | | 
+| Chapter 2-2 | JdbcTemplate 적용 1 - 기본 | 19m 20s | ❌ | |
+| Chapter 2-3 | JdbcTemplate 적용 2 - 동적 쿼리 문제 | 04m 47s | ❌ | | 
+| Chapter 2-4 | JdbcTemplate 적용 3 - 구성과 실행 | 07m 47s | ❌ | | 
+| Chapter 2-5 | JdbcTemplate - 이름 지정 파라미터 1 | 13m 09s | ❌ | |
+| Chapter 2-6 | JdbcTemplate - 이름 지정 파라미터 2 | 11m 02s | ❌ | | 
+| Chapter 2-7 | JdbcTemplate - 이름 지정 파라미터 3 | 02m 44s | ❌ | | 
+| Chapter 2-8 | JdbcTemplate - SimpleJdbcInsert | 06m 56s | ❌ | |
+| Chapter 2-9 | JdbcTemplate 기능 정리 | 03m 43s | ❌ | | 
+| Chapter 2-10 | 정리 | 03m 52s | ❌ | | 
 | | | | | |
-| Section 3 | API 개발 고급 - 지연 로딩과 조회 성능 최적화 | 4 Lectures / 1h 21m | ❌ | |
-| Chapter 3-1 | 간단한 주문 조회 V1: 엔티티를 직접 노출 | 27m 54s | ❌ | | 
-| Chapter 3-2 | 간단한 주문 조회 V2: 엔티티를 DTO로 변환 | 21m 29s | ❌ | |
-| Chapter 3-3 | 간단한 주문 조회 V3: 엔티티를 DTO로 변환 - 페치 조인 최적화 | 09m 13s | ❌ | | 
-| Chapter 3-4 | 간단한 주문 조회 V4: JPA에서 DTO로 바로 조회 | 22m 24s | ❌ | | 
+| Section 3 | 데이터 접근 기술 - 테스트 | 7 Lectures / 59m | ❌ | |
+| Chapter 3-1 | 테스트 - 데이터베이스 연동 | 10m 24s | ❌ | | 
+| Chapter 3-2 | 테스트 - 데이터베이스 분리 | 07m 29s | ❌ | |
+| Chapter 3-3 | 테스트 - 데이터 롤백 | 09m 29s | ❌ | | 
+| Chapter 3-4 | 테스트 - @Transactional | 11m 50s | ❌ | | 
+| Chapter 3-5 | 테스트 - 임베디드 모드 DB | 10m 59s | ❌ | | 
+| Chapter 3-6 | 테스트 - 스프링 부트와 임베디드 모드 | 05m 36s | ❌ | | 
+| Chapter 3-7 | 정리 | 03m 42s | ❌ | |
 | | | | | |
-| Section 4 | API 개발 고급 - 컬렉션 조회 최적화 | 8 Lectures / 2h 44m | ❌ | | 
-| Chapter 4-1 | 주문 조회 V1: 엔티티 직접 노출 | 11m 12s | ❌ | | 
-| Chapter 4-2 | 주문 조회 V2: 엔티티를 DTO로 변환 | 16m 27s | ❌ | | 
-| Chapter 4-3 | 주문 조회 V3: 엔티티를 DTO로 변환 - 페치 조인 최적화 | 25m 20s | ❌ | | 
-| Chapter 4-4 | 주문 조회 V3.1: 엔티티를 DTO로 변환 - 페이징과 한계 돌파 | 42m 41s | ❌ | | 
-| Chapter 4-5 | 주문 조회 V4: JPA에서 DTO 직접 조회 | 20m 30s | ❌ | | 
-| Chapter 4-6 | 주문 조회 V5: JPA에서 DTO 직접 조회 - 컬렉션 조회 최적화 | 11m 09s | ❌ | | 
-| Chapter 4-7 | 주문 조회 V6: JPA에서 DTO로 직접 조회, 플랫 데이터 최적화 | 15m 04s | ❌ | | 
-| Chapter 4-8 | API 개발 고급 정리 | 22m 05s | ❌ | | 
+| Section 4 | 데이터 접근 기술 - MyBatis | 8 Lectures / 1h 04m | ❌ | | 
+| Chapter 4-1 | MyBatis 소개 | 05m 22s | ❌ | | 
+| Chapter 4-2 | MyBatis 설정 | 08m 52s | ❌ | | 
+| Chapter 4-3 | MyBatis 적용1 - 기본 | 20m 37s | ❌ | | 
+| Chapter 4-4 | MyBatis 적용2 - 설정과 실행 | 06m 38s | ❌ | | 
+| Chapter 4-5 | MyBatis 적용3 - 분석 | 07m 19s | ❌ | | 
+| Chapter 4-6 | MyBatis 기능 정리1 - 동적 쿼리 | 04m 08s | ❌ | | 
+| Chapter 4-7 | MyBatis 기능 정리2 - 기타 기능 | 06m 59s | ❌ | | 
+| Chapter 4-8 | 정리 | 04m 12s | ❌ | | 
 | | | | | |
-| Section 5 | API 개발 고급 - 실무 필수 최적화 | 1 Lecture / 31m | ❌ | | 
-| Chapter 5-1 | OSIV와 성능 최적화 | 31m 19s | ❌ | | 
+| Section 5 | 데이터 접근 기술 - JPA | 8 Lectures / 1h 20m | ❌ | | 
+| Chapter 5-1 | JPA 시작 | 04m 36s | ❌ | | 
+| Chapter 5-2 | ORM 개념1 - SQL 중심적인 개발의 문제점 | 14m 58s | ❌ | | 
+| Chapter 5-3 | ORM 개념2 - JPA 소개 | 16m 08s | ❌ | | 
+| Chapter 5-4 | JPA 설정 | 03m 34s | ❌ | | 
+| Chapter 5-5 | JPA 적용1 - 개발 | 20m 08s | ❌ | | 
+| Chapter 5-6 | JPA 적용2 - 리포지토리 분석 | 06m 02s | ❌ | | 
+| Chapter 5-7 | JPA 적용3 - 예외 변환 | 10m 07s | ❌ | | 
+| Chapter 5-8 | 정리 | 04m 58s | ❌ | | 
 | | | | | |
-| Section 6 | 다음으로 | 2 Lectures / 40m | ❌ | | 
-| Chapter 6-1 | 스프링 데이터 JPA 소개 | 18m 03s | ❌ | | 
-| Chapter 6-2 | QueryDSL 소개 | 22m 37s | ❌ | | 
+| Section 6 | 데이터 접근 기술 - 스프링 데이터 JPA | 6 Lectures / 1h 10m | ❌ | | 
+| Chapter 6-1 | 스프링 데이터 JPA 소개 1 - 등장 이유 | 12m 47s | ❌ | | 
+| Chapter 6-2 | 스프링 데이터 JPA 소개 2 - 기능 | 10m 47s | ❌ | | 
+| Chapter 6-3 | 스프링 데이터 JPA 주요 기능 | 09m 26s | ❌ | | 
+| Chapter 6-4 | 스프링 데이터 JPA 적용 1 | 09m 23s | ❌ | | 
+| Chapter 6-5 | 스프링 데이터 JPA 적용 2 | 25m 00s | ❌ | | 
+| Chapter 6-6 | 정리 | 03m 23s | ❌ | | 
+| | | | | |
+| Section 7 | 데이터 접근 기술 - Querydsl | 5 Lectures / 46m | ❌ | | 
+| Chapter 7-1 | Querydsl 소개 1 - 기존 방식의 문제점 | 09m 27s | ❌ | | 
+| Chapter 7-2 | Querydsl 소개 2 - 해결 | 07m 58s | ❌ | | 
+| Chapter 7-3 | Querydsl 설정 | 10m 14s | ❌ | | 
+| Chapter 7-4 | Querydsl 적용 | 15m 55s | ❌ | | 
+| Chapter 7-5 | 정리 | 02m 49s | ❌ | | 
+| | | | | |
+| Section 8 | 데이터 접근 기술 - 활용 방안 | 4 Lectures / 44m | ❌ | | 
+| Chapter 8-1 | 스프링 데이터 JPA 예제와 트레이드 오프 | 16m 47s | ❌ | | 
+| Chapter 8-2 | 실용적인 구조 | 18m 27s | ❌ | | 
+| Chapter 8-3 | 다양한 데이터 접근 기술 조합 | 07m 06s | ❌ | | 
+| Chapter 8-4 | 정리 | 02m 26s | ❌ | | 
+| | | | | |
+| Section 9 | 스프링 트랜잭션 이해 | 11 Lectures / 2h 13m | ❌ | | 
+| Chapter 9-1 | 스프링 트랜잭션 소개 | 09m 45s | ❌ | | 
+| Chapter 9-2 | 프로젝트 생성 | 02m 33s | ❌ | | 
+| Chapter 9-3 | 트랜잭션 적용 확인 | 13m 54s | ❌ | | 
+| Chapter 9-4 | 트랜잭션 적용 위치 | 13m 46s | ❌ | | 
+| Chapter 9-5 | 트랜잭션 AOP 주의 사항 - 프록시 내부 호출1 | 18m 24s | ❌ | | 
+| Chapter 9-6 | 트랜잭션 AOP 주의 사항 - 프록시 내부 호출2 | 08m 57s | ❌ | | 
+| Chapter 9-7 | 트랜잭션 AOP 주의 사항 - 초기화 시점 | 06m 51s | ❌ | | 
+| Chapter 9-8 | 트랜잭션 옵션 소개 | 12m 18s | ❌ | | 
+| Chapter 9-9 | 예외와 트랜잭션 커밋, 롤백 - 기본 | 11m 54s | ❌ | | 
+| Chapter 9-10 | 예외와 트랜잭션 커밋, 롤백 - 활용 | 30m 19s | ❌ | | 
+| Chapter 9-11 | 정리 | 04m 50s | ❌ | | 
+| | | | | |
+| Section 10 | 스프링 트랜잭션 전파 1 - 기본 | 9 Lectures / 1h 39m | ❌ | | 
+| Chapter 10-1 | 스프링 트랜잭션 전파 1 - 커밋, 롤백 | 06m 44s | ❌ | | 
+| Chapter 10-2 | 스프링 트랜잭션 전파 2 - 트랜잭션 두 번 사용 | 10m 45s | ❌ | | 
+| Chapter 10-3 | 스프링 트랜잭션 전파 3 - 전파 기본 | 09m 06s | ❌ | | 
+| Chapter 10-4 | 스프링 트랜잭션 전파 4 - 전파 예제 | 21m 34s | ❌ | | 
+| Chapter 10-5 | 스프링 트랜잭션 전파 5 - 외부 롤백 | 07m 06s | ❌ | | 
+| Chapter 10-6 | 스프링 트랜잭션 전파 6 - 내부 롤백 | 15m 02s | ❌ | | 
+| Chapter 10-7 | 스프링 트랜잭션 전파 7 - REQUIRES_NEW | 17m 47s | ❌ | | 
+| Chapter 10-8 | 스프링 트랜잭션 전파 8 - 다양한 전파 옵션 | 05m 27s | ❌ | | 
+| Chapter 10-9 | 정리 | 05m 55s | ❌ | | 
+| | | | | |
+| Section 11 | 스프링 트랜잭션 전파 2 - 활용 | 8 Lectures / 1h 16m | ❌ | | 
+| Chapter 11-1 | 트랜잭션 전파 활용 1 - 예제 프로젝트 시작 | 17m 57s | ❌ | | 
+| Chapter 11-2 | 트랜잭션 전파 활용 2 - 커밋, 롤백 | 09m 16s | ❌ | | 
+| Chapter 11-3 | 트랜잭션 전파 활용 3 - 단일 트랜잭션 | 09m 42s | ❌ | | 
+| Chapter 11-4 | 트랜잭션 전파 활용 4 - 전파 커밋 | 04m 50s | ❌ | | 
+| Chapter 11-5 | 트랜잭션 전파 활용 5 - 전파 롤백 | 07m 19s | ❌ | | 
+| Chapter 11-6 | 트랜잭션 전파 활용 6 - 복구 REQUIRED | 10m 06s | ❌ | | 
+| Chapter 11-7 | 트랜잭션 전파 활용 7 - 복구 REQUIRES_NEW | 10m 08s | ❌ | | 
+| Chapter 11-8 | 정리 | 07m 01s | ❌ | | 
+| | | | | |
+| Section 12 | 다음으로 | 1 Lecture / 24m | ❌ | | 
+| Chapter 12-1 | 다음으로 | 24m 47s | ❌ | | 
