--- a/Web/workbook/0x03.md
+++ b/Web/workbook/0x03.md
@@ -1,97 +1,37 @@
-# 0x03. 스프링 핵심 원리 - 기본편 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EC%9B%90%EB%A6%AC-%EA%B8%B0%EB%B3%B8%ED%8E%B8)
+# 0x03. 누구나 따라하면서 배우는 JSP 커뮤니티 게시판 만들기 [링크](https://www.inflearn.com/course/jsp-%EA%B2%8C%EC%8B%9C%ED%8C%90)
 
-## 총 65강 ( 12 hours 05 minutes)
-    
-## Last Update (2023.07.26)    
+## 총 15강 (02 hours 17 minutes)
 
-![100%](https://progress-bar.dev/0/?scale=65&title=progress&width=500&color=babaca&suffix=/65)
+## 수강 기간 
+- JSP 학습          : 2022.03.18 ~ 2022.03.23
+- 기능 구현 및 테스트 : 2022.03.23 ~ 2022.03.27
+- 디버깅            : 2022.03.29 ~ 2022.03.29
 
-✅❌:hammer:
+## Last Update (2023.07.25)    
+
+![100%](https://progress-bar.dev/15/?scale=15&title=progress&width=500&color=babaca&suffix=/15)
+
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강의 소개 | 2 Lectures / 04m 34s | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 04m 34s | ❌ | |
-| Chapter 0-2 | 강의 자료 | | ❌ | |
+| Section 0 | Hello World & Login | 4 Lectures / 46m 00s | ✅ |  |
+| Chapter 0-1 | Hello World! | 12m 23s | ✅ | |
+| Chapter 0-2 | 로그인 페이지 디자인 | 13m 23s | ✅ | |
+| Chapter 0-3 | 회원 데이터베이스 구축하기 | 07m 25s | ✅ | | 
+| Chapter 0-4 | 로그인 기능 구현하기 | 12m 49s | ✅ | | 
 | | | | | |
-| Section 1 | 객체 지향 설계와 스프링 | 6 Lectures / 1h 16m | ❌ | |
-| Chapter 1-1 | 객체 지향 설계와 스프링 - PPT 자료 다운로드 |  | ❌ | | 
-| Chapter 1-2 | 이야기 - 자바 진영의 추운 겨울과 스프링의 탄생 | 15m 23s | ❌ | |
-| Chapter 1-3 | 스프링이란? | 14m 31s | ❌ | | 
-| Chapter 1-4 | 좋은 객체 지향 프로그래밍이란? | 21m 22s | ❌ | |
-| Chapter 1-5 | 좋은 객체 지향 설계의 5가지 원칙(SOLID) | 18m 15s | ❌ | |
-| Chapter 1-6 | 객체 지향 설계와 스프링 | 06m 31s | ❌ | | 
+| Section 1 | 회원가입 구현, 접속 세션관리 | 3 Lectures / 18m | ✅ | |
+| Chapter 1-1 | 회원가입 페이지 디자인 | 03m 30s | ✅ | | 
+| Chapter 1-2 | 회원가입 기능 구현하기 | 07m 03s | ✅ | |
+| Chapter 1-3 | 접속한 회원 세션 관리하기 | 07m 27s | ✅ | | 
 | | | | | |
-| Section 2 | 스프링 핵심 원리 이해 1 - 예제 만들기 | 8 Lectures / 1h 01m | ❌ | |
-| Chapter 2-1 | 프로젝트 생성 | 08m 13s | ❌ | | 
-| Chapter 2-2 | 비즈니스 요구사항과 설계 | 03m 38s | ❌ | |
-| Chapter 2-3 | 회원 도메인 설계 | 05m 41s | ❌ | | 
-| Chapter 2-4 | 회원 도메인 개발 | 10m 13s | ❌ | | 
-| Chapter 2-5 | 회원 도메인 실행과 테스트 | 09m 11s | ❌ | | 
-| Chapter 2-6 | 주문과 할인 도메인 설계 | 08m 29s | ❌ | | 
-| Chapter 2-7 | 주문과 할인 도메인 개발 | 08m 52s | ❌ | |
-| Chapter 2-8 | 주문과 할인 도메인 실행과 테스트 | 06m 53s | ❌ | | 
+| Section 2 | 게시판 만들기 | 6 Lectures / 55m | ✅ | |
+| Chapter 2-1 | 게시판 메인 페이지 디자인 | 04m 22s | ✅ | | 
+| Chapter 2-2 | 게시판 데이터베이스 구축하기 | 03m 40s | ✅ | |
+| Chapter 2-3 | 글쓰기 기능 구현하기 | 12m 20s | ✅ | | 
+| Chapter 2-4 | 게시판 글 목록 기능 구현 | 12m 13s | ✅ | | 
+| Chapter 2-5 | 게시글 보기 기능 구현하기 | 12m 25s | ✅ | | 
+| Chapter 2-6 | 게시글 수정 및 삭제 기능 | 10m 56s | ✅ | | 
 | | | | | |
-| Section 3 | 스프링 핵심 원리 이해 2 - 객체 지향 원리 적용 | 9 Lectures / 1h 38m | ❌ | |
-| Chapter 3-1 | 새로운 할인 정책 개발 | 10m 43s | ❌ | | 
-| Chapter 3-2 | 새로운 할인 정책 적용과 문제점 | 09m 30s | ❌ | |
-| Chapter 3-3 | 관심사의 분리 | 28m 09s | ❌ | | 
-| Chapter 3-4 | AppConfig 리팩터링 | 04m 59s | ❌ | | 
-| Chapter 3-5 | 새로운 구조와 할인 정책 적용 | 06m 08s | ❌ | | 
-| Chapter 3-6 | 전체 흐름 정리 | 04m 43s | ❌ | | 
-| Chapter 3-7 | 좋은 객체 지향 설계의 5가지 원칙의 적용 | 04m 44s | ❌ | |
-| Chapter 3-8 | IoC, DI, 그리고 컨테이너 | 16m 39s | ❌ | | 
-| Chapter 3-9 | 스프링으로 전환하기 | 12m 49s | ❌ | | 
-| | | | | |
-| Section 4 | 스프링 컨테이너와 스프링 빈 | 8 Lectures / 1h 19m | ❌ | | 
-| Chapter 4-1 | 스프링 컨테이너 생성 | 11m 23s | ❌ | | 
-| Chapter 4-2 | 컨테이너에 등록된 모든 빈 조회 | 06m 49s | ❌ | | 
-| Chapter 4-3 | 스프링 빈 조회 - 기본 | 08m 45s | ❌ | | 
-| Chapter 4-4 | 스프링 빈 조회 - 동일한 타입이 둘 이상 | 09m 16s | ❌ | | 
-| Chapter 4-5 | 스프링 빈 조회 - 상속 관계 | 12m 01s | ❌ | | 
-| Chapter 4-6 | BeanFactory와 ApplicationContext | 06m 30s | ❌ | | 
-| Chapter 4-7 | 다양한 설정 형식 지원 - 자바 코드, XML | 09m 21s | ❌ | | 
-| Chapter 4-8 | 스프링 빈 설정 메타 정보 - BeanDefinition | 15m 35s | ❌ | | 
-| | | | | |
-| Section 5 | 싱글톤 컨테이너 | 6 Lectures / 1h 15m | ❌ | | 
-| Chapter 5-1 | 웹 애플리케이션과 싱글톤 | 08m 34s | ❌ | | 
-| Chapter 5-2 | 싱글톤 패턴 | 15m 02s | ❌ | | 
-| Chapter 5-3 | 싱글톤 컨테이너 | 07m 30s | ❌ | | 
-| Chapter 5-4 | 싱글톤 방식의 주의점 | 14m 57s | ❌ | | 
-| Chapter 5-5 | @Configuration과 싱글톤 | 13m 46s | ❌ | | 
-| Chapter 5-6 | @Configuration과 바이트코드 조작의 마법 | 15m 59s | ❌ | | 
-| | | | | |
-| Section 6 | 컴포넌트 스캔 | 4 Lectures / 51m | ❌ | | 
-| Chapter 6-1 | 컴포넌트 스캔과 의존관계 자동 주입 시작하기 | 19m 57s | ❌ | | 
-| Chapter 6-2 | 탐색 위치와 기본 스캔 대상 | 12m 45s | ❌ | | 
-| Chapter 6-3 | 필터 | 09m 08s | ❌ | | 
-| Chapter 6-4 | 중복 등록과 충돌 | 09m 12s | ❌ | | 
-| | | | | |
-| Section 7 | 의존관계 자동 주입 | 9 Lectures / 1h 53m | ❌ | | 
-| Chapter 7-1 | 다양한 의존관계 주입 방법 | 29m 33s | ❌ | | 
-| Chapter 7-2 | 옵션 처리 | 12m 14s | ❌ | | 
-| Chapter 7-3 | 생성자 주입을 선택해라! | 12m 21s | ❌ | | 
-| Chapter 7-4 | 롬복과 최신 트랜드 | 11m 30s | ❌ | | 
-| Chapter 7-5 | 조회 빈이 2개 이상 - 문제 | 04m 48s | ❌ | | 
-| Chapter 7-6 | @Autowired 필드 명, @Qualifier, @Primary | 13m 01s | ❌ | | 
-| Chapter 7-7 | 애노테이션 직접 만들기 | 05m 30s | ❌ | | 
-| Chapter 7-8 | 조회한 빈이 모두 필요할 때, List, Map | 11m 36s | ❌ | | 
-| Chapter 7-9 | 자동, 수동의 올바른 실무 운영 기준 | 13m 01s | ❌ | | 
-| | | | | |
-| Section 8 | 빈 생명주기 콜백 | 4 Lectures / 35m | ❌ | | 
-| Chapter 8-1 | 빈 생명주기 콜백 시작 | 20m 28s | ❌ | | 
-| Chapter 8-2 | 인터페이스 InitializingBean, DisposableBean | 05m 19s | ❌ | | 
-| Chapter 8-3 | 빈 등록 초기화, 소멸 메서드 | 05m 46s | ❌ | | 
-| Chapter 8-4 | 애노테이션 @PostConstruct, @PreDestroy | 03m 41s | ❌ | | 
-| | | | | |
-| Section 9 | 빈 스코프 | 8 Lectures / 1h 44m | ❌ | | 
-| Chapter 9-1 | 빈 스코프란? | 03m 58s | ❌ | | 
-| Chapter 9-2 | 프로토타입 스코프 | 12m 47s | ❌ | | 
-| Chapter 9-3 | 프로토타입 스코프 - 싱글톤 빈과 함께 사용시 문제점 | 19m 54s | ❌ | | 
-| Chapter 9-4 | 프로토타입 스코프 - 싱글톤 빈과 함께 사용시 Provider로 문제 해결 | 20m 42s | ❌ | | 
-| Chapter 9-5 | 웹 스코프 | 04m 34s | ❌ | | 
-| Chapter 9-6 | request 스코프 예제 만들기 | 21m 24s | ❌ | | 
-| Chapter 9-7 | 스코프와 Provider | 09m 30s | ❌ | | 
-| Chapter 9-8 | 스코프와 프록시 | 11m 40s | ❌ | | 
-| | | | | |
-| Section 10 | 다음으로 | 1 Lecture / 25m | ❌ | | 
-| Chapter 10-1 | 다음으로 | 25m 18s | ❌ | | 
+| Section 3 | 웹 사이트 메인페이지 및 마무리 | 2 Lectures / 17m | ✅ | |
+| Chapter 3-1 | 웹 사이트 메인 페이지 디자인 | 08m 40s | ✅ | | 
+| Chapter 3-2 | 프로젝트 완성 및 배포 | 08m 53s | ✅ | [✅](https://github.com/rylahs/JSP-Board) |
