--- a/Web/workbook/0x04.md
+++ b/Web/workbook/0x04.md
@@ -1,65 +1,60 @@
-# 0x04. 실전! 스프링 부트와 JPA 활용1 - 웹 애플리케이션 개발 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-JPA-%ED%99%9C%EC%9A%A9-1)
+# 0x04. 스프링 입문 - 코드로 배우는 스프링 부트, 웹 MVC, DB 접근 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%EC%9E%85%EB%AC%B8-%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8)
 
-## 총 36강 ( 7 hours 44 minutes)
+## 총 28강 (05 hours 21 minutes)
 
 ## 수강 기간 
-- 학습          : 2023.. ~ ing
+- 학습          : 22.04.08 ~ 22.04.10 / 2023.07.21 ~ 2023.07.26
 
-## Last Update (2023.07.26)    
+## Last Update (2023.07.25)    
 
-![100%](https://progress-bar.dev/0/?scale=36&title=progress&width=500&color=babaca&suffix=/36)
+![100%](https://progress-bar.dev/16/?scale=28&title=progress&width=500&color=babaca&suffix=/98)
 
-✅❌:hammer:
+
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강좌 소개 | 3 Lectures / 5m | ❌ |  |
-| Chapter 0-1 | 강좌 소개 | 05m 59s | ❌ | |
-| Chapter 0-2 | 수업 자료 |  | ❌ | |
-| Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
+| Section 0 | 강의 소개 | 2 Lectures / 05m 00s | ✅ |  |
+| Chapter 0-1 | 강의 소개 | 05m 02s | ✅ | |
+| Chapter 0-2 | 강의 자료 | | ✅ | |
 | | | | | |
-| Section 1 | 프로젝트 환경설정 | 5 Lectures / 1h 13m | ❌ | |
-| Chapter 1-1 | 프로젝트 생성 | 15m 58s | ❌ | | 
-| Chapter 1-2 | 라이브러리 살펴보기 | 09m 17s | ❌ | |
-| Chapter 1-3 | View 환경 설정 | 15m 33s | ❌ | | 
-| Chapter 1-4 | H2 데이터베이스 설치 | 04m 06s | ❌ | |
-| Chapter 1-5 | JPA와 DB 설정, 동작확인 | 28m 55s | ❌ | |
+| Section 1 | 프로젝트 환경 설정 | 4 Lectures / 47m | ✅ | |
+| Chapter 1-1 | 프로젝트 생성 | 16m 29s | ✅ | | 
+| Chapter 1-2 | 라이브러리 살펴 보기 | 12m 52s | ✅ | |
+| Chapter 1-3 | View 환경 설정 | 14m 09s | ✅ | | 
+| Chapter 1-4 | 빌드하고 실행하기 | 03m 37s | ✅ | |
 | | | | | |
-| Section 2 | 도메인 분석 설계 | 5 Lectures / 1h 42m | ❌ | |
-| Chapter 2-1 | 요구사항 분석 | 04m 08s | ❌ | | 
-| Chapter 2-2 | 도메인 모델과 테이블 설계 | 21m 10s | ❌ | |
-| Chapter 2-3 | 엔티티 클래스 개발1 | 30m 03s | ❌ | | 
-| Chapter 2-4 | 엔티티 클래스 개발2 | 19m 29s | ❌ | | 
-| Chapter 2-5 | 엔티티 설계시 주의점 | 27m 33s | ❌ | | 
+| Section 2 | 스프링 웹 개발 기초 | 3 Lectures / 33m | ✅ | |
+| Chapter 2-1 | 정적 컨텐츠 | 06m 32s | ✅ | | 
+| Chapter 2-2 | MVC와 템플릿 엔진 | 10m 33s | ✅ | |
+| Chapter 2-3 | API | 15m 58s | ✅ | | 
 | | | | | |
-| Section 3 | 애플리케이션 구현 준비 | 2 Lectures / 8m | ❌ | |
-| Chapter 3-1 | 구현 요구사항 | 04m 02s | ❌ | | 
-| Chapter 3-2 | 애플리케이션 아키텍처 | 03m 59s | ❌ | |
+| Section 3 | 회원 관리 예제 - 백엔드 개발 | 5 Lectures / 55m | ✅ | |
+| Chapter 3-1 | 비즈니스 요구사항 정리 | 04m 54s | ✅ | | 
+| Chapter 3-2 | 회원 도메인과 리포지토리 만들기 | 08m 28s | ✅ | |
+| Chapter 3-3 | 회원 리포지토리 테스트 케이스 작성 | 16m 26s | ✅ | | 
+| Chapter 3-4 | 회원 서비스 개발 | 08m 00s | ✅ | | 
+| Chapter 3-5 | 회원 서비스 테스트 | 17m 32s | ✅ | | 
 | | | | | |
-| Section 4 | 회원 도메인 개발 | 3 Lectures / 52m | ❌ | | 
-| Chapter 4-1 | 회원 리포지토리 개발 | 08m 39s | ❌ | | 
-| Chapter 4-2 | 회원 서비스 개발 | 18m 27s | ❌ | | 
-| Chapter 4-3 | 회원 기능 테스트 | 25m 21s | ❌ | | 
+| Section 4 | 스프링 빈과 의존관계 | 2 Lectures / 27m | ✅ | | 
+| Chapter 4-1 | 컴포지트 스캔과 자동 의존관계 설정  | 14m 07s | ✅ | | 
+| Chapter 4-2 | 자바 코드로 직접 스프링 빈 등록하기 | 13m 47s | ✅ | ~ 23.07.23 | 
 | | | | | |
-| Section 5 | 상품 도메인 개발 | 3 Lectures / 12m | ❌ | | 
-| Chapter 5-1 | 상품 엔티티 개발(비즈니스 로직 추가) | 06m 23s | ❌ | | 
-| Chapter 5-2 | 상품 리포지토리 개발 | 03m 59s | ❌ | | 
-| Chapter 5-3 | 상품 서비스 개발 | 02m 25s | ❌ | | 
+| Section 5 | 회원 관리 예제 - 웹 MVC 개발 | 3 Lectures / 17m | :hammer: | | 
+| Chapter 5-1 | 회원 웹 기능 - 홈 화면 추가 | 03m 49s | :hammer: | | 
+| Chapter 5-2 | 회원 웹 기능 - 등록 | 09m 09s | ❌ | | 
+| Chapter 5-3 | 회원 웹 기능 - 조회 | 04m 48s | ❌ | | 
 | | | | | |
-| Section 6 | 주문 도메인 개발 | 5 Lectures / 1h 19m | ❌ | | 
-| Chapter 6-1 | 주문, 주문상품 엔티티 개발 | 16m 24s | ❌ | | 
-| Chapter 6-2 | 주문 리포지토리 개발 | 02m 06s | ❌ | | 
-| Chapter 6-3 | 주문 서비스 개발 | 19m 48s | ❌ | | 
-| Chapter 6-4 | 주문 기능 테스트 | 19m 59s | ❌ | | 
-| Chapter 6-5 | 주문 검색 기능 개발 | 21m 16s | ❌ | | 
+| Section 6 | 스프링 DB 접근 기술 | 6 Lectures / 1h 33m | ❌ | | 
+| Chapter 6-1 | H2 데이터베이스 설치 | 10m 51s | ❌ | | 
+| Chapter 6-2 | 순수 JDBC | 21m 38s | ❌ | | 
+| Chapter 6-3 | 스프링 통합 테스트 | 12m 50s | ❌ | | 
+| Chapter 6-4 | 스프링 JdbcTemplate | 11m 54s | ❌ | | 
+| Chapter 6-5 | JPA | 20m 50s | ❌ | | 
+| Chapter 6-6 | 스프링 데이터 JPA | 15m 35s | ❌ | | 
 | | | | | |
-| Section 7 | 웹 계층 개발 | 10 Lectures / 2h 09m | ❌ | | 
-| Chapter 7-1 | 홈 화면과 레이아웃 | 18m 11s | ❌ | | 
-| Chapter 7-2 | 회원 등록 | 23m 07s | ❌ | | 
-| Chapter 7-3 | 회원 목록 조회 | 09m 52s | ❌ | | 
-| Chapter 7-4 | 상품 등록 | 07m 48s | ❌ | | 
-| Chapter 7-5 | 상품 목록 | 02m 47s | ❌ | | 
-| Chapter 7-6 | 상품 수정 | 13m 44s | ❌ | | 
-| Chapter 7-7 | 변경 감지와 병합(merge) | 26m 36s | ❌ | | 
-| Chapter 7-8 | 상품 주문 | 12m 33s | ❌ | | 
-| Chapter 7-9 | 주문 목록 검색, 취소 | 13m 31s | ❌ | | 
-| Chapter 7-10 | 다음으로 | 00m 55s | ❌ | | 
+| Section 7 | AOP | 2 Lectures / 22m | ❌ | | 
+| Chapter 7-1 | AOP가 필요한 상황  | 08m 18s | ❌ | | 
+| Chapter 7-2 | AOP 적용 | 14m 03s | ❌ | | 
+| | | | | |
+| Section 8 | 다음으로 | 1 Lecture / 18m | ❌ | | 
+| Chapter 8-1 | 다음으로  | 18m 55s | ❌ | | 
+
