--- a/Web/workbook/0x06.md
+++ b/Web/workbook/0x06.md
@@ -1,74 +1,65 @@
-# 0x06. 모든 개발자를 위한 HTTP 웹 기본 지식 [링크](https://www.inflearn.com/course/http-%EC%9B%B9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC)
+# 0x06. 실전! 스프링 부트와 JPA 활용1 - 웹 애플리케이션 개발 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-JPA-%ED%99%9C%EC%9A%A9-1)
 
-## 총 41강 ( 5 hours 40 minutes)
+## 총 36강 ( 7 hours 44 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
-## Last Update (d)    
+## Last Update (2023.07.26)    
 
-![100%](https://progress-bar.dev/0/?scale=41&title=progress&width=500&color=babaca&suffix=/41)
+![100%](https://progress-bar.dev/0/?scale=36&title=progress&width=500&color=babaca&suffix=/36)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 소개 | 3 Lectures / 07m | ❌ |  |
-| Chapter 0-1 | 소개영상 | 07m 44s | ❌ | |
-| Chapter 0-2 | 수업자료 |  | ❌ | |
-| Chapter 0-3 | 수업자료 - 섹션별로 나누어둔 버전 |  | ❌ | | 
+| Section 0 | 강좌 소개 | 3 Lectures / 5m | ❌ |  |
+| Chapter 0-1 | 강좌 소개 | 05m 59s | ❌ | |
+| Chapter 0-2 | 수업 자료 |  | ❌ | |
+| Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
 | | | | | |
-| Section 1 | 인터넷 네트워크 | 5 Lectures / 30m | ❌ | |
-| Chapter 1-1 | 인터넷 통신 | 01m 51s | ❌ | | 
-| Chapter 1-2 | IP(인터넷 프로토콜) | 07m 11s | ❌ | |
-| Chapter 1-3 | TCP, UDP | 14m 08s | ❌ | | 
-| Chapter 1-4 | PORT | 04m 03s | ❌ | |
-| Chapter 1-5 | DNS | 03m 26s | ❌ | |
+| Section 1 | 프로젝트 환경설정 | 5 Lectures / 1h 13m | ❌ | |
+| Chapter 1-1 | 프로젝트 생성 | 15m 58s | ❌ | | 
+| Chapter 1-2 | 라이브러리 살펴보기 | 09m 17s | ❌ | |
+| Chapter 1-3 | View 환경 설정 | 15m 33s | ❌ | | 
+| Chapter 1-4 | H2 데이터베이스 설치 | 04m 06s | ❌ | |
+| Chapter 1-5 | JPA와 DB 설정, 동작확인 | 28m 55s | ❌ | |
 | | | | | |
-| Section 2 | URI와 웹 브라우저 요청 흐름 | 2 Lectures / 16m | ❌ | |
-| Chapter 2-1 | URI | 11m 24s | ❌ | | 
-| Chapter 2-2 | 웹 브라우저 요청 흐름 | 04m 57s | ❌ | |
+| Section 2 | 도메인 분석 설계 | 5 Lectures / 1h 42m | ❌ | |
+| Chapter 2-1 | 요구사항 분석 | 04m 08s | ❌ | | 
+| Chapter 2-2 | 도메인 모델과 테이블 설계 | 21m 10s | ❌ | |
+| Chapter 2-3 | 엔티티 클래스 개발1 | 30m 03s | ❌ | | 
+| Chapter 2-4 | 엔티티 클래스 개발2 | 19m 29s | ❌ | | 
+| Chapter 2-5 | 엔티티 설계시 주의점 | 27m 33s | ❌ | | 
 | | | | | |
-| Section 3 | HTTP 기본 | 5 Lectures / 39m | ❌ | |
-| Chapter 3-1 | 모든 것이 HTTP | 06m 38s | ❌ | | 
-| Chapter 3-2 | 클라이언트 서버 구조 | 02m 50s | ❌ | |
-| Chapter 3-3 | Stateful, Stateless | 11m 32s | ❌ | | 
-| Chapter 3-4 | 비 연결성(connectionless) | 08m 43s | ❌ | | 
-| Chapter 3-5 | HTTP 메시지 | 09m 41s | ❌ | | 
+| Section 3 | 애플리케이션 구현 준비 | 2 Lectures / 8m | ❌ | |
+| Chapter 3-1 | 구현 요구사항 | 04m 02s | ❌ | | 
+| Chapter 3-2 | 애플리케이션 아키텍처 | 03m 59s | ❌ | |
 | | | | | |
-| Section 4 | HTTP 메서드 | 4 Lectures / 35m | ❌ | | 
-| Chapter 4-1 | HTTP API를 만들어보자 | 07m 02s | ❌ | | 
-| Chapter 4-2 | HTTP 메서드 - GET, POST | 13m 05s | ❌ | | 
-| Chapter 4-3 | HTTP 메서드 - PUT, PATCH, DELETE | 06m 11s | ❌ | | 
-| Chapter 4-4 | HTTP 메서드의 속성 | 08m 55s | ❌ | | 
+| Section 4 | 회원 도메인 개발 | 3 Lectures / 52m | ❌ | | 
+| Chapter 4-1 | 회원 리포지토리 개발 | 08m 39s | ❌ | | 
+| Chapter 4-2 | 회원 서비스 개발 | 18m 27s | ❌ | | 
+| Chapter 4-3 | 회원 기능 테스트 | 25m 21s | ❌ | | 
 | | | | | |
-| Section 5 | HTTP 메서드 활용 | 2 Lectures / 47m | ❌ | | 
-| Chapter 5-1 | 클라이언트에서 서버로 데이터 전송 | 18m 56s | ❌ | | 
-| Chapter 5-2 | HTTP API 설계 예시 | 28m 19s | ❌ | | 
+| Section 5 | 상품 도메인 개발 | 3 Lectures / 12m | ❌ | | 
+| Chapter 5-1 | 상품 엔티티 개발(비즈니스 로직 추가) | 06m 23s | ❌ | | 
+| Chapter 5-2 | 상품 리포지토리 개발 | 03m 59s | ❌ | | 
+| Chapter 5-3 | 상품 서비스 개발 | 02m 25s | ❌ | | 
 | | | | | |
-| Section 6 | HTTP 상태코드 | 5 Lectures / 43m | ❌ | | 
-| Chapter 6-1 | HTTP 상태코드 소개 | 04m 19s | ❌ | | 
-| Chapter 6-2 | 2xx - 성공 | 05m 53s | ❌ | | 
-| Chapter 6-3 | 3xx - 리다이렉션1 | 09m 58s | ❌ | | 
-| Chapter 6-4 | 3xx - 리다이렉션2 | 13m 52s | ❌ | | 
-| Chapter 6-5 | 4xx - 클라이언트 오류, 5xx - 서버 오류 | 09m 50s | ❌ | | 
+| Section 6 | 주문 도메인 개발 | 5 Lectures / 1h 19m | ❌ | | 
+| Chapter 6-1 | 주문, 주문상품 엔티티 개발 | 16m 24s | ❌ | | 
+| Chapter 6-2 | 주문 리포지토리 개발 | 02m 06s | ❌ | | 
+| Chapter 6-3 | 주문 서비스 개발 | 19m 48s | ❌ | | 
+| Chapter 6-4 | 주문 기능 테스트 | 19m 59s | ❌ | | 
+| Chapter 6-5 | 주문 검색 기능 개발 | 21m 16s | ❌ | | 
 | | | | | |
-| Section 7 | HTTP 헤더 1 - 일반 헤더 | 8 Lectures / 52m | ❌ | | 
-| Chapter 7-1 | HTTP 헤더 개요 | 06m 43s | ❌ | | 
-| Chapter 7-2 | 표현 | 05m 39s | ❌ | | 
-| Chapter 7-3 | 콘텐츠 협상 | 10m 04s | ❌ | | 
-| Chapter 7-4 | 전송 방식 | 03m 47s | ❌ | | 
-| Chapter 7-5 | 일반 정보 | 05m 20s | ❌ | | 
-| Chapter 7-6 | 특별한 정보 | 04m 35s | ❌ | | 
-| Chapter 7-7 | 인증 | 01m 38s | ❌ | | 
-| Chapter 7-8 | 쿠키 | 14m 31s | ❌ | | 
-| | | | | |
-| Section 8 | HTTP 헤더 2 - 캐시와 조건부 요청 | 6 Lectures / 42m | ❌ | | 
-| Chapter 8-1 | 캐시 기본 동작 | 05m 49s | ❌ | | 
-| Chapter 8-2 | 검증 헤더와 조건부 요청 1 | 10m 13s | ❌ | | 
-| Chapter 8-3 | 검증 헤더와 조건부 요청 2 | 08m 46s | ❌ | | 
-| Chapter 8-4 | 캐시와 조건부 요청 헤더 | 04m 43s | ❌ | | 
-| Chapter 8-5 | 프록시 캐시 | 05m 06s | ❌ | | 
-| Chapter 8-6 | 캐시 무효화 | 07m 39s | ❌ | | 
-| | | | | |  
-| Section 9 | 다음으로 | 1 Lecture / 25m | ❌ | | 
-| Chapter 9-1 | 다음으로 | 25m 56s | ❌ | | 
+| Section 7 | 웹 계층 개발 | 10 Lectures / 2h 09m | ❌ | | 
+| Chapter 7-1 | 홈 화면과 레이아웃 | 18m 11s | ❌ | | 
+| Chapter 7-2 | 회원 등록 | 23m 07s | ❌ | | 
+| Chapter 7-3 | 회원 목록 조회 | 09m 52s | ❌ | | 
+| Chapter 7-4 | 상품 등록 | 07m 48s | ❌ | | 
+| Chapter 7-5 | 상품 목록 | 02m 47s | ❌ | | 
+| Chapter 7-6 | 상품 수정 | 13m 44s | ❌ | | 
+| Chapter 7-7 | 변경 감지와 병합(merge) | 26m 36s | ❌ | | 
+| Chapter 7-8 | 상품 주문 | 12m 33s | ❌ | | 
+| Chapter 7-9 | 주문 목록 검색, 취소 | 13m 31s | ❌ | | 
+| Chapter 7-10 | 다음으로 | 00m 55s | ❌ | | 
