--- a/Web/workbook/0x07.md
+++ b/Web/workbook/0x07.md
@@ -1,103 +1,91 @@
-# 0x07. 스프링 MVC 1편 - 백엔드 웹 개발 핵심 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-mvc-1)
+# 0x07. 자바 ORM 표준 JPA 프로그래밍 - 기본편 [링크](https://www.inflearn.com/course/ORM-JPA-Basic)
 
-## 총 72강 ( 15 hours 22 minutes)
+## 총 54강 ( 16 hours 03 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=72&title=progress&width=500&color=babaca&suffix=/72)
+![100%](https://progress-bar.dev/0/?scale=54&title=progress&width=500&color=babaca&suffix=/54)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 소개 | 4 Lectures / 5m | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 05:15 | ❌ | |
+| Section 0 | 강좌 소개 | 2 Lectures / 12m | ❌ |  |
+| Chapter 0-1 | 강좌 소개 | 12m 25s | ❌ | |
 | Chapter 0-2 | 수업 자료 |  | ❌ | |
-| Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
-| Chapter 0-4 | 웹 애플리케이션 이해 PPT |  | ❌ | | 
 | | | | | |
-| Section 1 | 웹 애플리케이션 이해 | 5 Lectures / 1h 15m | ❌ | |
-| Chapter 1-1 | 웹 서버, 웹 애플리케이션 서버 | 11m 27s | ❌ | | 
-| Chapter 1-2 | 서블릿 | 12m 23s | ❌ | |
-| Chapter 1-3 | 동시 요청 - 멀티 쓰레드 | 18m 43s | ❌ | | 
-| Chapter 1-4 | HTML, HTTP API, CSR, SSR | 17m 26s | ❌ | |
-| Chapter 1-5 | 자바 백엔드 웹 기술 역사 | 15m 46s | ❌ | |
+| Section 1 | JPA 소개 | 2 Lectures / 48m | ❌ | |
+| Chapter 1-1 | SQL 중심적인 개발의 문제점 | 26m 11s | ❌ | | 
+| Chapter 1-2 | JPA 소개 | 22m 13s | ❌ | |
 | | | | | |
-| Section 2 | 서블릿 | 13 Lectures / 1h 59m | ❌ | |
-| Chapter 2-1 | 프로젝트 생성 | 09m 57s | ❌ | | 
-| Chapter 2-2 | Hello 서블릿 | 18m 20s | ❌ | |
-| Chapter 2-3 | HttpServletRequest - 개요 | 04m 58s | ❌ | | 
-| Chapter 2-4 | HttpServletRequest - 기본 사용법 | 14m 41s | ❌ | | 
-| Chapter 2-5 | HTTP 요청 데이터 - 개요 | 04m 39s | ❌ | |
-| Chapter 2-6 | HTTP 요청 데이터 - GET 쿼리 파라미터 | 10m 28s | ❌ | | 
-| Chapter 2-7 | HTTP 요청 데이터 - POST HTML Form | 09m 05s | ❌ | | 
-| Chapter 2-8 | HTTP 요청 데이터 - API 메시지 바디 - 단순 텍스트 | 05m 32s | ❌ | |
-| Chapter 2-9 | HTTP 요청 데이터 - API 메시지 바디 - JSON | 10m 28s | ❌ | | 
-| Chapter 2-10 | HttpServletResponse - 기본 사용법 | 15m 47s | ❌ | | 
-| Chapter 2-11 | HTTP 응답 데이터 - 단순 텍스트, HTML | 04m 40s | ❌ | |
-| Chapter 2-12 | HTTP 응답 데이터 - API JSON | 05m 06s | ❌ | | 
-| Chapter 2-13 | 정리 | 05m 54s | ❌ | | 
+| Section 2 | JPA 시작하기 | 2 Lectures / 52m | ❌ | |
+| Chapter 2-1 | Hello JPA - 프로젝트 생성 | 20m 12s | ❌ | | 
+| Chapter 2-2 | Hello JPA - 애플리케이션 개발 | 31m 52s | ❌ | |
 | | | | | |
-| Section 3 | 서블릿, JSP, MVC 패턴 |  Lectures / 1h 37m | ❌ | |
-| Chapter 3-1 | 회원 관리 웹 애플리케이션 요구사항 | 12m 27s | ❌ | | 
-| Chapter 3-2 | 서블릿으로 회원 관리 웹 애플리케이션 만들기 | 23m 12s | ❌ | |
-| Chapter 3-3 | JSP로 회원 관리 웹 애플리케이션 만들기 | 18m 21s | ❌ | | 
-| Chapter 3-4 | MVC 패턴 - 개요 | 08m 07s | ❌ | | 
-| Chapter 3-5 | MVC 패턴 - 적용 | 27m 10s | ❌ | | 
-| Chapter 3-6 | MVC 패턴 - 한계 | 05m 08s | ❌ | | 
-| Chapter 3-7 | 정리 | 03m 00s | ❌ | |
+| Section 3 | 영속성 관리 - 내부 동작 방식 | 5 Lectures / 55m | ❌ | |
+| Chapter 3-1 | 영속성 컨텍스트 1 | 10m 20s | ❌ | | 
+| Chapter 3-2 | 영속성 컨텍스트 2 | 25m 41s | ❌ | |
+| Chapter 3-3 | 플러시 | 08m 31s | ❌ | | 
+| Chapter 3-4 | 준영속 상태 | 06m 21s | ❌ | | 
+| Chapter 3-5 | 정리 | 04m 58s | ❌ | | 
 | | | | | |
-| Section 4 | MVC 프레임워크 만들기 | 8 Lectures / 2h 33m | ❌ | | 
-| Chapter 4-1 | 프론트 컨트롤러 패턴 소개 | 06m 41s | ❌ | | 
-| Chapter 4-2 | 프론트 컨트롤러 도입 - v1 | 24m 24s | ❌ | | 
-| Chapter 4-3 | View 분리 - v2 | 16m 41s | ❌ | | 
-| Chapter 4-4 | Model 추가 - v3 | 28m 51s | ❌ | | 
-| Chapter 4-5 | 단순하고 실용적인 컨트롤러 - v4 | 16m 04s | ❌ | | 
-| Chapter 4-6 | 유연한 컨트롤러 1 - v5 | 34m 06s | ❌ | | 
-| Chapter 4-7 | 유연한 컨트롤러 2 - v5 | 15m 41s | ❌ | | 
-| Chapter 4-8 | 정리 | 10m 35s | ❌ | | 
+| Section 4 | 엔티티 매핑 | 5 Lectures / 1h 49m | ❌ | | 
+| Chapter 4-1 | 객체와 테이블 매핑 | 06m 38s | ❌ | | 
+| Chapter 4-2 | 데이터베이스 스키마 자동 생성 | 17m 17s | ❌ | | 
+| Chapter 4-3 | 필드와 컬럼 매핑 | 19m 15s | ❌ | | 
+| Chapter 4-4 | 기본 키 매핑 | 37m 44s | ❌ | | 
+| Chapter 4-5 | 실전 예제 1 - 요구사항 분석과 기본 매핑 | 28m 20s | ❌ | | 
 | | | | | |
-| Section 5 | 스프링 MVC - 구조 이해 | 7 Lectures / 1h 22m | ❌ | | 
-| Chapter 5-1 | 스프링 MVC 전체 구조 | 16m 14s | ❌ | | 
-| Chapter 5-2 | 핸들러 매핑과 핸들러 어댑터 | 14m 32s | ❌ | | 
-| Chapter 5-3 | 뷰 리졸버 | 09m 36s | ❌ | | 
-| Chapter 5-4 | 스프링 MVC - 시작하기 | 16m 54s | ❌ | | 
-| Chapter 5-5 | 스프링 MVC - 컨트롤러 통합 | 06m 48s | ❌ | | 
-| Chapter 5-6 | 스프링 MVC - 실용적인 방식 | 12m 38s | ❌ | | 
-| Chapter 5-7 | 정리 | 05m 45s | ❌ | | 
+| Section 5 | 연관관계 매핑 기초 | 4 Lectures / 1h 38m | ❌ | | 
+| Chapter 5-1 | 단방향 연관관계 | 24m 31s | ❌ | | 
+| Chapter 5-2 | 양방향 연관관계와 연관관계의 주인 1- 기본 | 23m 40s | ❌ | | 
+| Chapter 5-3 | 양방향 연관관계와 연관관계의 주인 2 - 주의점, 정리 | 29m 40s | ❌ | | 
+| Chapter 5-4 | 실전 예제 2 - 연관관계 매핑 시작 | 20m 12s | ❌ | | 
 | | | | | |
-| Section 6 | 스프링 MVC - 기본 기능 | 15 Lectures / 3h 36m | ❌ | | 
-| Chapter 6-1 | 프로젝트 생성 | 07m 43s | ❌ | | 
-| Chapter 6-2 | 로깅 간단히 알아보기 | 23m 17s | ❌ | | 
-| Chapter 6-3 | 요청 매핑 | 21m 13s | ❌ | | 
-| Chapter 6-4 | 요청 매핑 - API 예시 | 09m 04s | ❌ | | 
-| Chapter 6-5 | HTTP 요청 - 기본, 헤더 조회 | 12m 41s | ❌ | | 
-| Chapter 6-6 | HTTP 요청 파라미터 - 쿼리 파라미터, HTML Form | 07m 22s | ❌ | | 
-| Chapter 6-7 | HTTP 요청 파라미터 - @RequestParam | 17m 09s | ❌ | | 
-| Chapter 6-8 | HTTP 요청 파라미터 - @ModelAttribute | 10m 10s | ❌ | | 
-| Chapter 6-9 | HTTP 요청 메시지 - 단순 텍스트 | 15m 04s | ❌ | | 
-| Chapter 6-10 | HTTP 요청 메시지 - JSON | 14m 36s | ❌ | | 
-| Chapter 6-11 | 응답 - 정적 리소스, 뷰 템플릿 | 14m 46s | ❌ | | 
-| Chapter 6-12 | HTTP 응답 - HTTP API, 메시지 바디에 직접 입력 | 10m 10s | ❌ | | 
-| Chapter 6-13 | HTTP 메시지 컨버터 | 17m 17s | ❌ | | 
-| Chapter 6-14 | 요청 매핑 헨들러 어뎁터 구조 | 22m 27s | ❌ | | 
-| Chapter 6-15 | 정리 | 13m 28s | ❌ | | 
+| Section 6 | 다양한 연관관계 매핑 | 5 Lectures / 1h 18m | ❌ | | 
+| Chapter 6-1 | 다대일 [N:1] | 11m 10s | ❌ | | 
+| Chapter 6-2 | 일대다 [1:N] | 19m 06s | ❌ | | 
+| Chapter 6-3 | 일대일 [1:1] | 19m 59s | ❌ | | 
+| Chapter 6-4 | 다대다 [N:M] | 16m 08s | ❌ | | 
+| Chapter 6-5 | 실전 예제 3 - 다양한 연관관계 매핑 | 12m 33s | ❌ | | 
 | | | | | |
-| Section 7 | 스프링 MVC - 웹 페이지 만들기 | 12 Lectures / 2h 11m | ❌ | | 
-| Chapter 7-1 | 프로젝트 생성 | 03m 45s | ❌ | | 
-| Chapter 7-2 | 요구사항 분석 | 07m 37s | ❌ | | 
-| Chapter 7-3 | 상품 도메인 개발 | 16m 17s | ❌ | | 
-| Chapter 7-4 | 상품 서비스 HTML | 08m 43s | ❌ | | 
-| Chapter 7-5 | 상품 목록 - 타임리프 | 31m 00s | ❌ | | 
-| Chapter 7-6 | 상품 상세 | 07m 50s | ❌ | | 
-| Chapter 7-7 | 상품 등록 폼 | 07m 04s | ❌ | | 
-| Chapter 7-8 | 상품 등록 처리 - @ModelAttribute | 12m 52s | ❌ | | 
-| Chapter 7-9 | 상품 수정 | 11m 48s | ❌ | | 
-| Chapter 7-10 | PRG Post/Redirect/Get | 10m 13s | ❌ | | 
-| Chapter 7-11 | RedirectAttributes | 07m 20s | ❌ | | 
-| Chapter 7-12 | 정리 | 07m 19s | ❌ | | 
+| Section 7 | 고급 매핑 | 3 Lectures / 1h 02m | ❌ | | 
+| Chapter 7-1 | 상속관계 매핑 | 39m 52s | ❌ | | 
+| Chapter 7-2 | Mapped Superclass - 매핑 정보 상속 | 10m 24s | ❌ | | 
+| Chapter 7-3 | 실전 예제 4 - 상속관계 매핑 | 11m 46s | ❌ | | 
 | | | | | |
-| Section 8 | 다음으로 | 1 Lecture / 40m | ❌ | | 
-| Chapter 8-1 | 다음으로 | 40m 59s | ❌ | | 
+| Section 8 | 프록시와 연관관계 관리 | 4 Lectures / 1h 37m | ❌ | | 
+| Chapter 8-1 | 프록시 | 44m 57s | ❌ | | 
+| Chapter 8-2 | 즉시 로딩과 지연 로딩 | 24m 34s | ❌ | | 
+| Chapter 8-3 | 영속성 전이(CASCADE)와 고아 객체 | 22m 54s | ❌ | | 
+| Chapter 8-4 | 실전 예제 5 - 연관관계 관리 | 05m 05s | ❌ | | 
+| | | | | |
+| Section 9 | 값 타입 | 6 Lectures / 1h 44m | ❌ | | 
+| Chapter 9-1 | 기본값 타입 | 10m 02s | ❌ | | 
+| Chapter 9-2 | 임베디드 타입 | 20m 02s | ❌ | | 
+| Chapter 9-3 | 값 타입과 불변 객체 | 16m 44s | ❌ | | 
+| Chapter 9-4 | 값 타입의 비교 | 07m 13s | ❌ | | 
+| Chapter 9-5 | 값 타입 컬렉션 | 43m 11s | ❌ | | 
+| Chapter 9-6 | 실전 예제 6 - 값 타입 매핑 | 07m 25s | ❌ | | 
+| | | | | |
+| Section 10 | 객체지향 쿼리 언어1 - 기본 문법 | 9 Lectures / 2h 15m | ❌ | | 
+| Chapter 10-1 | 소개 | 32m 14s | ❌ | | 
+| Chapter 10-2 | 기본 문법과 쿼리 API | 24m 14s | ❌ | | 
+| Chapter 10-3 | 프로젝션(SELECT) | 15m 32s | ❌ | | 
+| Chapter 10-4 | 페이징 | 09m 10s | ❌ | | 
+| Chapter 10-5 | 조인 | 14m 28s | ❌ | | 
+| Chapter 10-6 | 서브 쿼리 | 11m 04s | ❌ | | 
+| Chapter 10-7 | JPQL 타입 표현과 기타식 | 09m 10s | ❌ | | 
+| Chapter 10-8 | 조건식(CASE 등등) | 07m 20s | ❌ | | 
+| Chapter 10-9 | JPQL 함수 | 12m 01s | ❌ | | 
+| | | | | |
+| Section 11 | 객체지향 쿼리 언어2 - 중급 문법 | 7 Lectures / 1h 48m | ❌ | | 
+| Chapter 11-1 | 경로 표현식 | 21m 18s | ❌ | | 
+| Chapter 11-2 | 페치 조인 1 - 기본 | 29m 17s | ❌ | | 
+| Chapter 11-3 | 페치 조인 2 - 한계 | 24m 52s | ❌ | | 
+| Chapter 11-4 | 다형성 쿼리 | 02m 32s | ❌ | | 
+| Chapter 11-5 | 엔티티 직접 사용 | 07m 57s | ❌ | | 
+| Chapter 11-6 | Named 쿼리 | 08m 23s | ❌ | | 
+| Chapter 11-7 | 벌크 연산 | 14m 24s | ❌ | |
