--- a/Web/workbook/0x09.md
+++ b/Web/workbook/0x09.md
@@ -1,86 +1,103 @@
-# 0x09. 스프링 DB 1편 - 데이터 접근 핵심 원리 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-db-1)
+# 0x09. 스프링 MVC 1편 - 백엔드 웹 개발 핵심 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-mvc-1)
 
-## 총 57강 ( 10 hours 04 minutes)
+## 총 72강 ( 15 hours 22 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=57&title=progress&width=500&color=babaca&suffix=/57)
+![100%](https://progress-bar.dev/0/?scale=72&title=progress&width=500&color=babaca&suffix=/72)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강의 소개 | 3 Lectures / 5m | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 05m 23s | ❌ | |
+| Section 0 | 소개 | 4 Lectures / 5m | ❌ |  |
+| Chapter 0-1 | 강의 소개 | 05:15 | ❌ | |
 | Chapter 0-2 | 수업 자료 |  | ❌ | |
 | Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
+| Chapter 0-4 | 웹 애플리케이션 이해 PPT |  | ❌ | | 
 | | | | | |
-| Section 1 | JDBC 이해 | 9 Lectures / 1h 34m | ❌ | |
-| Chapter 1-1 | 프로젝트 생성 | 03m 13s | ❌ | | 
-| Chapter 1-2 | H2 데이터베이스 설정 | 05m 02s | ❌ | |
-| Chapter 1-3 | JDBC 이해 | 09m 09s | ❌ | | 
-| Chapter 1-4 | JDBC와 최신 데이터 접근 기술 | 08m 38s | ❌ | |
-| Chapter 1-5 | 데이터베이스 연결 | 16m 04s | ❌ | |
-| Chapter 1-6 | JDBC 개발 - 등록 | 19m 57s | ❌ | | 
-| Chapter 1-7 | JDBC 개발 - 조회 | 14m 42s | ❌ | |
-| Chapter 1-8 | JDBC 개발 - 수정, 삭제 | 12m 45s | ❌ | |
-| Chapter 1-9 | 정리 | 05m 02s | ❌ | | 
+| Section 1 | 웹 애플리케이션 이해 | 5 Lectures / 1h 15m | ❌ | |
+| Chapter 1-1 | 웹 서버, 웹 애플리케이션 서버 | 11m 27s | ❌ | | 
+| Chapter 1-2 | 서블릿 | 12m 23s | ❌ | |
+| Chapter 1-3 | 동시 요청 - 멀티 쓰레드 | 18m 43s | ❌ | | 
+| Chapter 1-4 | HTML, HTTP API, CSR, SSR | 17m 26s | ❌ | |
+| Chapter 1-5 | 자바 백엔드 웹 기술 역사 | 15m 46s | ❌ | |
 | | | | | |
-| Section 2 | 커넥션풀과 데이터소스 이해 | 6 Lectures / 51m | ❌ | |
-| Chapter 2-1 | 커넥션 풀 이해 | 08m 41s | ❌ | | 
-| Chapter 2-2 | DataSource 이해 | 06m 10s | ❌ | |
-| Chapter 2-3 | DataSource 예제 1 - DriverManager | 08m 32s | ❌ | | 
-| Chapter 2-4 | DataSource 예제 2 - 커넥션 풀 | 11m 04s | ❌ | | 
-| Chapter 2-5 | DataSource 적용 | 13m 54s | ❌ | |
-| Chapter 2-6 | 정리 | 03m 23s | ❌ | | 
+| Section 2 | 서블릿 | 13 Lectures / 1h 59m | ❌ | |
+| Chapter 2-1 | 프로젝트 생성 | 09m 57s | ❌ | | 
+| Chapter 2-2 | Hello 서블릿 | 18m 20s | ❌ | |
+| Chapter 2-3 | HttpServletRequest - 개요 | 04m 58s | ❌ | | 
+| Chapter 2-4 | HttpServletRequest - 기본 사용법 | 14m 41s | ❌ | | 
+| Chapter 2-5 | HTTP 요청 데이터 - 개요 | 04m 39s | ❌ | |
+| Chapter 2-6 | HTTP 요청 데이터 - GET 쿼리 파라미터 | 10m 28s | ❌ | | 
+| Chapter 2-7 | HTTP 요청 데이터 - POST HTML Form | 09m 05s | ❌ | | 
+| Chapter 2-8 | HTTP 요청 데이터 - API 메시지 바디 - 단순 텍스트 | 05m 32s | ❌ | |
+| Chapter 2-9 | HTTP 요청 데이터 - API 메시지 바디 - JSON | 10m 28s | ❌ | | 
+| Chapter 2-10 | HttpServletResponse - 기본 사용법 | 15m 47s | ❌ | | 
+| Chapter 2-11 | HTTP 응답 데이터 - 단순 텍스트, HTML | 04m 40s | ❌ | |
+| Chapter 2-12 | HTTP 응답 데이터 - API JSON | 05m 06s | ❌ | | 
+| Chapter 2-13 | 정리 | 05m 54s | ❌ | | 
 | | | | | |
-| Section 3 | 트랜잭션 이해 | 12 Lectures / 2h 00m | ❌ | |
-| Chapter 3-1 | 트랜잭션 - 개념 이해 | 08m 42s | ❌ | | 
-| Chapter 3-2 | 데이터베이스 연결 구조와 DB 세션 | 02m 40s | ❌ | |
-| Chapter 3-3 | 트랜잭션 - DB 예제 1 - 개념 이해 | 08m 29s | ❌ | | 
-| Chapter 3-4 | 트랜잭션 - DB 예제 2 - 자동 커밋, 수동 커밋 | 06m 14s | ❌ | | 
-| Chapter 3-5 | 트랜잭션 - DB 예제 3 - 트랜잭션 실습 | 06m 24s | ❌ | | 
-| Chapter 3-6 | 트랜잭션 - DB 예제 4 - 계좌이체 | 09m 25s | ❌ | | 
-| Chapter 3-7 | DB 락 - 개념 이해 | 05m 10s | ❌ | |
-| Chapter 3-8 | DB 락 - 변경 | 07m 52s | ❌ | | 
-| Chapter 3-9 | DB 락 - 조회 | 10m 13s | ❌ | | 
-| Chapter 3-10 | 트랜잭션 - 적용 1 | 19m 04s | ❌ | | 
-| Chapter 3-11 | 트랜잭션 - 적용 2 | 29m 04s | ❌ | | 
-| Chapter 3-12 | 정리 | 06m 44s | ❌ | | 
+| Section 3 | 서블릿, JSP, MVC 패턴 |  Lectures / 1h 37m | ❌ | |
+| Chapter 3-1 | 회원 관리 웹 애플리케이션 요구사항 | 12m 27s | ❌ | | 
+| Chapter 3-2 | 서블릿으로 회원 관리 웹 애플리케이션 만들기 | 23m 12s | ❌ | |
+| Chapter 3-3 | JSP로 회원 관리 웹 애플리케이션 만들기 | 18m 21s | ❌ | | 
+| Chapter 3-4 | MVC 패턴 - 개요 | 08m 07s | ❌ | | 
+| Chapter 3-5 | MVC 패턴 - 적용 | 27m 10s | ❌ | | 
+| Chapter 3-6 | MVC 패턴 - 한계 | 05m 08s | ❌ | | 
+| Chapter 3-7 | 정리 | 03m 00s | ❌ | |
 | | | | | |
-| Section 4 | 스프링과 문제 해결 - 트랜잭션 | 11 Lectures / 2h 06m | ❌ | | 
-| Chapter 4-1 | 문제점들 | 16m 22s | ❌ | | 
-| Chapter 4-2 | 트랜잭션 추상화 | 08m 44s | ❌ | | 
-| Chapter 4-3 | 트랜잭션 동기화 | 06m 20s | ❌ | | 
-| Chapter 4-4 | 트랜잭션 문제 해결 - 트랜잭션 매니저 1 | 20m 53s | ❌ | | 
-| Chapter 4-5 | 트랜잭션 문제 해결 - 트랜잭션 매니저 2 | 06m 58s | ❌ | | 
-| Chapter 4-6 | 트랜잭션 문제 해결 - 트랜잭션 템플릿 | 16m 01s | ❌ | | 
-| Chapter 4-7 | 트랜잭션 문제 해결 - 트랜잭션 AOP 이해 | 07m 28s | ❌ | | 
-| Chapter 4-8 | 트랜잭션 문제 해결 - 트랜잭션 AOP 적용 | 17m 57s | ❌ | | 
-| Chapter 4-9 | 트랜잭션 문제 해결 - 트랜잭션 AOP 정리 | 08m 30s | ❌ | | 
-| Chapter 4-10 | 스프링 부트의 자동 리소스 등록 | 09m 19s | ❌ | | 
-| Chapter 4-11 | 정리 | 07m 28s | ❌ | | 
+| Section 4 | MVC 프레임워크 만들기 | 8 Lectures / 2h 33m | ❌ | | 
+| Chapter 4-1 | 프론트 컨트롤러 패턴 소개 | 06m 41s | ❌ | | 
+| Chapter 4-2 | 프론트 컨트롤러 도입 - v1 | 24m 24s | ❌ | | 
+| Chapter 4-3 | View 분리 - v2 | 16m 41s | ❌ | | 
+| Chapter 4-4 | Model 추가 - v3 | 28m 51s | ❌ | | 
+| Chapter 4-5 | 단순하고 실용적인 컨트롤러 - v4 | 16m 04s | ❌ | | 
+| Chapter 4-6 | 유연한 컨트롤러 1 - v5 | 34m 06s | ❌ | | 
+| Chapter 4-7 | 유연한 컨트롤러 2 - v5 | 15m 41s | ❌ | | 
+| Chapter 4-8 | 정리 | 10m 35s | ❌ | | 
 | | | | | |
-| Section 5 | 자바 예외 이해 | 8 Lectures / 1h 25m | ❌ | | 
-| Chapter 5-1 | 예외 계층 | 05m 58s | ❌ | | 
-| Chapter 5-2 | 예외 기본 규칙 | 03m 49s | ❌ | | 
-| Chapter 5-3 | 체크 예외 기본 이해 | 16m 45s | ❌ | | 
-| Chapter 5-4 | 언체크 예외 기본 이해 | 10m 47s | ❌ | | 
-| Chapter 5-5 | 체크 예외 활용 | 22m 19s | ❌ | | 
-| Chapter 5-6 | 언체크 예외 활용 | 13m 06s | ❌ | | 
-| Chapter 5-7 | 예외 포함과 스택 트레이스 | 07m 57s | ❌ | | 
-| Chapter 5-8 | 정리 | 05m 16s | ❌ | | 
+| Section 5 | 스프링 MVC - 구조 이해 | 7 Lectures / 1h 22m | ❌ | | 
+| Chapter 5-1 | 스프링 MVC 전체 구조 | 16m 14s | ❌ | | 
+| Chapter 5-2 | 핸들러 매핑과 핸들러 어댑터 | 14m 32s | ❌ | | 
+| Chapter 5-3 | 뷰 리졸버 | 09m 36s | ❌ | | 
+| Chapter 5-4 | 스프링 MVC - 시작하기 | 16m 54s | ❌ | | 
+| Chapter 5-5 | 스프링 MVC - 컨트롤러 통합 | 06m 48s | ❌ | | 
+| Chapter 5-6 | 스프링 MVC - 실용적인 방식 | 12m 38s | ❌ | | 
+| Chapter 5-7 | 정리 | 05m 45s | ❌ | | 
 | | | | | |
-| Section 6 | 스프링과 문제 해결 - 예외 처리, 반복 | 7 Lectures / 1h 26m | ❌ | | 
-| Chapter 6-1 | 체크 예외와 인터페이스 | 09m 51s | ❌ | | 
-| Chapter 6-2 | 런타임 예외 적용 | 11m 04s | ❌ | | 
-| Chapter 6-3 | 데이터 접근 예외 직접 만들기 | 20m 19s | ❌ | | 
-| Chapter 6-4 | 스프링 예외 추상화 이해 | 21m 04s | ❌ | | 
-| Chapter 6-5 | 스프링 예외 추상화 적용 | 08m 54s | ❌ | | 
-| Chapter 6-6 | JDBC 반복 문제 해결 - JdbcTemplate | 09m 28s | ❌ | | 
-| Chapter 6-7 | 정리 | 05m 50s | ❌ | | 
+| Section 6 | 스프링 MVC - 기본 기능 | 15 Lectures / 3h 36m | ❌ | | 
+| Chapter 6-1 | 프로젝트 생성 | 07m 43s | ❌ | | 
+| Chapter 6-2 | 로깅 간단히 알아보기 | 23m 17s | ❌ | | 
+| Chapter 6-3 | 요청 매핑 | 21m 13s | ❌ | | 
+| Chapter 6-4 | 요청 매핑 - API 예시 | 09m 04s | ❌ | | 
+| Chapter 6-5 | HTTP 요청 - 기본, 헤더 조회 | 12m 41s | ❌ | | 
+| Chapter 6-6 | HTTP 요청 파라미터 - 쿼리 파라미터, HTML Form | 07m 22s | ❌ | | 
+| Chapter 6-7 | HTTP 요청 파라미터 - @RequestParam | 17m 09s | ❌ | | 
+| Chapter 6-8 | HTTP 요청 파라미터 - @ModelAttribute | 10m 10s | ❌ | | 
+| Chapter 6-9 | HTTP 요청 메시지 - 단순 텍스트 | 15m 04s | ❌ | | 
+| Chapter 6-10 | HTTP 요청 메시지 - JSON | 14m 36s | ❌ | | 
+| Chapter 6-11 | 응답 - 정적 리소스, 뷰 템플릿 | 14m 46s | ❌ | | 
+| Chapter 6-12 | HTTP 응답 - HTTP API, 메시지 바디에 직접 입력 | 10m 10s | ❌ | | 
+| Chapter 6-13 | HTTP 메시지 컨버터 | 17m 17s | ❌ | | 
+| Chapter 6-14 | 요청 매핑 헨들러 어뎁터 구조 | 22m 27s | ❌ | | 
+| Chapter 6-15 | 정리 | 13m 28s | ❌ | | 
 | | | | | |
-| Section 7 | 다음으로 | 1 Lecture / 34m | ❌ | | 
-| Chapter 7-1 | 다음으로 | 34m 25s | ❌ | | 
+| Section 7 | 스프링 MVC - 웹 페이지 만들기 | 12 Lectures / 2h 11m | ❌ | | 
+| Chapter 7-1 | 프로젝트 생성 | 03m 45s | ❌ | | 
+| Chapter 7-2 | 요구사항 분석 | 07m 37s | ❌ | | 
+| Chapter 7-3 | 상품 도메인 개발 | 16m 17s | ❌ | | 
+| Chapter 7-4 | 상품 서비스 HTML | 08m 43s | ❌ | | 
+| Chapter 7-5 | 상품 목록 - 타임리프 | 31m 00s | ❌ | | 
+| Chapter 7-6 | 상품 상세 | 07m 50s | ❌ | | 
+| Chapter 7-7 | 상품 등록 폼 | 07m 04s | ❌ | | 
+| Chapter 7-8 | 상품 등록 처리 - @ModelAttribute | 12m 52s | ❌ | | 
+| Chapter 7-9 | 상품 수정 | 11m 48s | ❌ | | 
+| Chapter 7-10 | PRG Post/Redirect/Get | 10m 13s | ❌ | | 
+| Chapter 7-11 | RedirectAttributes | 07m 20s | ❌ | | 
+| Chapter 7-12 | 정리 | 07m 19s | ❌ | | 
+| | | | | |
+| Section 8 | 다음으로 | 1 Lecture / 40m | ❌ | | 
+| Chapter 8-1 | 다음으로 | 40m 59s | ❌ | | 
