--- a/Web/workbook/0x0A.md
+++ b/Web/workbook/0x0A.md
@@ -1,127 +1,168 @@
-# 0x0A. 스프링 DB 2편 - 데이터 접근 활용 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-db-2)
+# 0x0A. 스프링 MVC 2편 - 백엔드 웹 개발 활용 기술 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-mvc-2)
 
-## 총 88강 ( 13 hours 59 minutes)
+## 총 129강 ( 21 hours 05 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=88&title=progress&width=500&color=babaca&suffix=/88)
+![100%](https://progress-bar.dev/0/?scale=129&title=progress&width=500&color=babaca&suffix=/129)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 강의 소개 | 4 Lectures / 2m | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 02m 52s | ❌ | |
+| Section 0 | 소개 | 3 Lectures / 2m | ❌ |  |
+| Chapter 0-1 | 강의 소개 | 02m 00s | ❌ | |
 | Chapter 0-2 | 수업 자료 |  | ❌ | |
 | Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
-| Chapter 0-4 | PPT 자료 |  | ❌ | | 
 | | | | | |
-| Section 1 | 데이터 접근 기술 - 시작 | 7 Lectures / 59m | ❌ | |
-| Chapter 1-1 | 데이터 접근 기술 진행 방식 소개 | 06m 21s | ❌ | | 
-| Chapter 1-2 | 프로젝트 설정과 메모리 저장소 | 04m 07s | ❌ | |
-| Chapter 1-3 | 프로젝트 구조 설명 1 - 기본 | 18m 17s | ❌ | | 
-| Chapter 1-4 | 프로젝트 구조 설명 2 - 설정 | 13m 24s | ❌ | |
-| Chapter 1-5 | 프로젝트 구조 설명 3 - 테스트 | 07m 47s | ❌ | |
-| Chapter 1-6 | 데이터베이스 테이블 생성 | 07m 36s | ❌ | | 
-| Chapter 1-7 | 정리 | 01m 55s | ❌ | | 
+| Section 1 | 타임리프 - 기본 기능 | 19 Lectures / 2h 34m | ❌ | |
+| Chapter 1-1 | 프로젝트 생성 | 06m 33s | ❌ | | 
+| Chapter 1-2 | 타임리프 소개 | 06m 51s | ❌ | |
+| Chapter 1-3 | 텍스트 - text, utext | 13m 32s | ❌ | | 
+| Chapter 1-4 | 변수 - SpringEL | 08m 22s | ❌ | |
+| Chapter 1-5 | 기본 객체들 | 06m 45s | ❌ | |
+| Chapter 1-6 | 유틸리티 객체와 날짜 | 05m 02s | ❌ | | 
+| Chapter 1-7 | URL 링크 | 06m 22s | ❌ | | 
+| Chapter 1-8 | 리터럴 | 05m 58s | ❌ | |
+| Chapter 1-9 | 연산 | 06m 27s | ❌ | | 
+| Chapter 1-10 | 속성 값 설정 | 12m 05s | ❌ | |
+| Chapter 1-11 | 반복 | 08m 48s | ❌ | |
+| Chapter 1-12 | 조건부 평가 | 04m 05s | ❌ | | 
+| Chapter 1-13 | 주석 | 06m 47s | ❌ | | 
+| Chapter 1-14 | 블록 | 04m 15s | ❌ | |
+| Chapter 1-15 | 자바스크립트 인라인 | 14m 23s | ❌ | | 
+| Chapter 1-16 | 템플릿 조각 | 09m 27s | ❌ | |
+| Chapter 1-17 | 템플릿 레이아웃1 | 09m 11s | ❌ | |
+| Chapter 1-18 | 템플릿 레이아웃2 | 07m 52s | ❌ | | 
+| Chapter 1-19 | 정리 | 11m 34s | ❌ | | 
 | | | | | |
-| Section 2 | 데이터 접근 기술 - 스프링 JdbcTemplate | 10 Lectures / 1h 17m | ❌ | |
-| Chapter 2-1 | JdbcTemplate 소개와 설정 | 03m 50s | ❌ | | 
-| Chapter 2-2 | JdbcTemplate 적용 1 - 기본 | 19m 20s | ❌ | |
-| Chapter 2-3 | JdbcTemplate 적용 2 - 동적 쿼리 문제 | 04m 47s | ❌ | | 
-| Chapter 2-4 | JdbcTemplate 적용 3 - 구성과 실행 | 07m 47s | ❌ | | 
-| Chapter 2-5 | JdbcTemplate - 이름 지정 파라미터 1 | 13m 09s | ❌ | |
-| Chapter 2-6 | JdbcTemplate - 이름 지정 파라미터 2 | 11m 02s | ❌ | | 
-| Chapter 2-7 | JdbcTemplate - 이름 지정 파라미터 3 | 02m 44s | ❌ | | 
-| Chapter 2-8 | JdbcTemplate - SimpleJdbcInsert | 06m 56s | ❌ | |
-| Chapter 2-9 | JdbcTemplate 기능 정리 | 03m 43s | ❌ | | 
-| Chapter 2-10 | 정리 | 03m 52s | ❌ | | 
+| Section 2 | 타임리프 - 스프링 통합과 폼 | 10 Lectures / 1h 39m | ❌ | |
+| Chapter 2-1 | 프로젝트 설정 | 04m 14s | ❌ | | 
+| Chapter 2-2 | 타임리프 스프링 통합 | 06m 00s | ❌ | |
+| Chapter 2-3 | 입력 폼 처리 | 14m 57s | ❌ | | 
+| Chapter 2-4 | 요구사항 추가 | 05m 23s | ❌ | | 
+| Chapter 2-5 | 체크 박스 - 단일 1 | 12m 45s | ❌ | |
+| Chapter 2-6 | 체크 박스 - 단일 2 | 11m 54s | ❌ | | 
+| Chapter 2-7 | 체크 박스 - 멀티 | 20m 59s | ❌ | | 
+| Chapter 2-8 | 라디오 버튼 | 11m 13s | ❌ | |
+| Chapter 2-9 | 셀렉트 박스 | 07m 13s | ❌ | | 
+| Chapter 2-10 | 정리 | 04m 39s | ❌ | | 
 | | | | | |
-| Section 3 | 데이터 접근 기술 - 테스트 | 7 Lectures / 59m | ❌ | |
-| Chapter 3-1 | 테스트 - 데이터베이스 연동 | 10m 24s | ❌ | | 
-| Chapter 3-2 | 테스트 - 데이터베이스 분리 | 07m 29s | ❌ | |
-| Chapter 3-3 | 테스트 - 데이터 롤백 | 09m 29s | ❌ | | 
-| Chapter 3-4 | 테스트 - @Transactional | 11m 50s | ❌ | | 
-| Chapter 3-5 | 테스트 - 임베디드 모드 DB | 10m 59s | ❌ | | 
-| Chapter 3-6 | 테스트 - 스프링 부트와 임베디드 모드 | 05m 36s | ❌ | | 
-| Chapter 3-7 | 정리 | 03m 42s | ❌ | |
+| Section 3 | 메시지, 국제화 | 7 Lectures / 52m | ❌ | |
+| Chapter 3-1 | 프로젝트 설정 | 03m 01s | ❌ | | 
+| Chapter 3-2 | 메시지, 국제화 소개 | 07m 15s | ❌ | |
+| Chapter 3-3 | 스프링 메시지 소스 설정 | 07m 36s | ❌ | | 
+| Chapter 3-4 | 스프링 메시지 소스 사용 | 11m 14s | ❌ | | 
+| Chapter 3-5 | 웹 애플리케이션에 메시지 적용하기 | 10m 37s | ❌ | | 
+| Chapter 3-6 | 웹 애플리케이션에 국제화 적용하기 | 08m 33s | ❌ | | 
+| Chapter 3-7 | 정리 | 04m 15s | ❌ | |
 | | | | | |
-| Section 4 | 데이터 접근 기술 - MyBatis | 8 Lectures / 1h 04m | ❌ | | 
-| Chapter 4-1 | MyBatis 소개 | 05m 22s | ❌ | | 
-| Chapter 4-2 | MyBatis 설정 | 08m 52s | ❌ | | 
-| Chapter 4-3 | MyBatis 적용1 - 기본 | 20m 37s | ❌ | | 
-| Chapter 4-4 | MyBatis 적용2 - 설정과 실행 | 06m 38s | ❌ | | 
-| Chapter 4-5 | MyBatis 적용3 - 분석 | 07m 19s | ❌ | | 
-| Chapter 4-6 | MyBatis 기능 정리1 - 동적 쿼리 | 04m 08s | ❌ | | 
-| Chapter 4-7 | MyBatis 기능 정리2 - 기타 기능 | 06m 59s | ❌ | | 
-| Chapter 4-8 | 정리 | 04m 12s | ❌ | | 
+| Section 4 | 검증 1 - Validation | 17 Lectures / 3h 3m | ❌ | | 
+| Chapter 4-1 | 검증 요구사항 | 07m 04s | ❌ | | 
+| Chapter 4-2 | 프로젝트 설정 V1 | 02m 19s | ❌ | | 
+| Chapter 4-3 | 검증 직접 처리 - 소개 | 05m 10s | ❌ | | 
+| Chapter 4-4 | 검증 직접 처리 - 개발 | 31m 20s | ❌ | | 
+| Chapter 4-5 | 프로젝트 준비 V2 | 05m 10s | ❌ | | 
+| Chapter 4-6 | BindingResult 1 | 18m 58s | ❌ | | 
+| Chapter 4-7 | BindingResult 2 | 09m 46s | ❌ | | 
+| Chapter 4-8 | FieldError, ObjectError | 11m 25s | ❌ | | 
+| Chapter 4-9 | 오류 코드와 메시지 처리 1 | 13m 43s | ❌ | | 
+| Chapter 4-10 | 오류 코드와 메시지 처리 2 | 10m 58s | ❌ | | 
+| Chapter 4-11 | 오류 코드와 메시지 처리 3 | 10m 01s | ❌ | | 
+| Chapter 4-12 | 오류 코드와 메시지 처리 4 | 13m 42s | ❌ | | 
+| Chapter 4-13 | 오류 코드와 메시지 처리 5 | 10m 11s | ❌ | | 
+| Chapter 4-14 | 오류 코드와 메시지 처리 6 | 06m 27s | ❌ | | 
+| Chapter 4-15 | Validator 분리 1 | 10m 15s | ❌ | | 
+| Chapter 4-16 | Validator 분리 2 | 10m 39s | ❌ | | 
+| Chapter 4-17 | 정리 | 06m 07s | ❌ | | 
 | | | | | |
-| Section 5 | 데이터 접근 기술 - JPA | 8 Lectures / 1h 20m | ❌ | | 
-| Chapter 5-1 | JPA 시작 | 04m 36s | ❌ | | 
-| Chapter 5-2 | ORM 개념1 - SQL 중심적인 개발의 문제점 | 14m 58s | ❌ | | 
-| Chapter 5-3 | ORM 개념2 - JPA 소개 | 16m 08s | ❌ | | 
-| Chapter 5-4 | JPA 설정 | 03m 34s | ❌ | | 
-| Chapter 5-5 | JPA 적용1 - 개발 | 20m 08s | ❌ | | 
-| Chapter 5-6 | JPA 적용2 - 리포지토리 분석 | 06m 02s | ❌ | | 
-| Chapter 5-7 | JPA 적용3 - 예외 변환 | 10m 07s | ❌ | | 
-| Chapter 5-8 | 정리 | 04m 58s | ❌ | | 
+| Section 5 | 검증 2 - Bean Validation | 14 Lectures / 1h 43m | ❌ | | 
+| Chapter 5-1 | Bean Validation - 소개 | 04m 53s | ❌ | | 
+| Chapter 5-2 | Bean Validation - 시작 | 09m 37s | ❌ | | 
+| Chapter 5-3 | Bean Validation - 프로젝트 준비 V3 | 02m 53s | ❌ | | 
+| Chapter 5-4 | Bean Validation - 스프링 적용 | 13m 11s | ❌ | | 
+| Chapter 5-5 | Bean Validation - 에러 코드 | 05m 25s | ❌ | | 
+| Chapter 5-6 | Bean Validation - 오브젝트 오류 | 05m 31s | ❌ | | 
+| Chapter 5-7 | Bean Validation - 수정에 적용 | 04m 43s | ❌ | | 
+| Chapter 5-8 | Bean Validation - 한계 | 06m 09s | ❌ | | 
+| Chapter 5-9 | Bean Validation - groups | 10m 28s | ❌ | | 
+| Chapter 5-10 | Form 전송 객체 분리 - 프로젝트 준비 V4 | 01m 47s | ❌ | | 
+| Chapter 5-11 | Form 전송 객체 분리 - 소개 | 06m 44s | ❌ | | 
+| Chapter 5-12 | Form 전송 객체 분리 - 개발 | 13m 33s | ❌ | | 
+| Chapter 5-13 | Bean Validation - HTTP 메시지 컨버터 | 13m 21s | ❌ | | 
+| Chapter 5-14 | 정리 | 04m 50s | ❌ | | 
 | | | | | |
-| Section 6 | 데이터 접근 기술 - 스프링 데이터 JPA | 6 Lectures / 1h 10m | ❌ | | 
-| Chapter 6-1 | 스프링 데이터 JPA 소개 1 - 등장 이유 | 12m 47s | ❌ | | 
-| Chapter 6-2 | 스프링 데이터 JPA 소개 2 - 기능 | 10m 47s | ❌ | | 
-| Chapter 6-3 | 스프링 데이터 JPA 주요 기능 | 09m 26s | ❌ | | 
-| Chapter 6-4 | 스프링 데이터 JPA 적용 1 | 09m 23s | ❌ | | 
-| Chapter 6-5 | 스프링 데이터 JPA 적용 2 | 25m 00s | ❌ | | 
-| Chapter 6-6 | 정리 | 03m 23s | ❌ | | 
+| Section 6 | 로그인 처리 1 - 쿠키, 세션 | 14 Lectures / 2h 20m | ❌ | | 
+| Chapter 6-1 | 로그인 요구사항 | 02m 51s | ❌ | | 
+| Chapter 6-2 | 프로젝트 생성 | 07m 36s | ❌ | | 
+| Chapter 6-3 | 홈 화면 | 01m 01s | ❌ | | 
+| Chapter 6-4 | 회원 가입 | 14m 45s | ❌ | | 
+| Chapter 6-5 | 로그인 기능 | 12m 04s | ❌ | | 
+| Chapter 6-6 | 로그인 처리하기 - 쿠키 사용 | 17m 39s | ❌ | | 
+| Chapter 6-7 | 쿠키와 보안 문제 | 08m 26s | ❌ | | 
+| Chapter 6-8 | 로그인 처리하기 - 세션 동작 방식 | 08m 18s | ❌ | | 
+| Chapter 6-9 | 로그인 처리하기 - 세션 직접 만들기 | 19m 33s | ❌ | | 
+| Chapter 6-10 | 로그인 처리하기 - 직접 만든 세션 적용 | 09m 15s | ❌ | | 
+| Chapter 6-11 | 로그인 처리하기 - 서블릿 HTTP 세션 1 | 11m 01s | ❌ | | 
+| Chapter 6-12 | 로그인 처리하기 - 서블릿 HTTP 세션 2 | 07m 38s | ❌ | | 
+| Chapter 6-13 | 세션 정보와 타임아웃 설정 | 16m 36s | ❌ | | 
+| Chapter 6-14 | 정리 | 03m 38s | ❌ | | 
 | | | | | |
-| Section 7 | 데이터 접근 기술 - Querydsl | 5 Lectures / 46m | ❌ | | 
-| Chapter 7-1 | Querydsl 소개 1 - 기존 방식의 문제점 | 09m 27s | ❌ | | 
-| Chapter 7-2 | Querydsl 소개 2 - 해결 | 07m 58s | ❌ | | 
-| Chapter 7-3 | Querydsl 설정 | 10m 14s | ❌ | | 
-| Chapter 7-4 | Querydsl 적용 | 15m 55s | ❌ | | 
-| Chapter 7-5 | 정리 | 02m 49s | ❌ | | 
+| Section 7 | 로그인 처리 2 - 필터, 인터셉터 | 8 Lectures / 1h 39m | ❌ | | 
+| Chapter 7-1 | 서블릿 필터 - 소개 | 09m 52s | ❌ | | 
+| Chapter 7-2 | 서블릿 필터 - 요청 로그 | 14m 26s | ❌ | | 
+| Chapter 7-3 | 서블릿 필터 - 인증 체크 | 22m 45s | ❌ | | 
+| Chapter 7-4 | 스프링 인터셉터 - 소개 | 08m 52s | ❌ | | 
+| Chapter 7-5 | 스프링 인터셉터 - 요청 로그 | 16m 18s | ❌ | | 
+| Chapter 7-6 | 스프링 인터셉터 - 인증 체크 | 08m 40s | ❌ | | 
+| Chapter 7-7 | ArgumentResolver 활용 | 11m 17s | ❌ | | 
+| Chapter 7-8 | 정리 | 07m 20s | ❌ | | 
 | | | | | |
-| Section 8 | 데이터 접근 기술 - 활용 방안 | 4 Lectures / 44m | ❌ | | 
-| Chapter 8-1 | 스프링 데이터 JPA 예제와 트레이드 오프 | 16m 47s | ❌ | | 
-| Chapter 8-2 | 실용적인 구조 | 18m 27s | ❌ | | 
-| Chapter 8-3 | 다양한 데이터 접근 기술 조합 | 07m 06s | ❌ | | 
-| Chapter 8-4 | 정리 | 02m 26s | ❌ | | 
+| Section 8 | 예외 처리와 오류 페이지 | 9 Lectures / 1h 22m | ❌ | | 
+| Chapter 8-1 | 프로젝트 생성 | 03m 41s | ❌ | | 
+| Chapter 8-2 | 서블릿 예외 처리 - 시작 | 13m 58s | ❌ | | 
+| Chapter 8-3 | 서블릿 예외 처리 - 오류 화면 제공 | 10m 52s | ❌ | | 
+| Chapter 8-4 | 서블릿 예외 처리 - 오류 페이지 작동 원리 | 09m 49s | ❌ | | 
+| Chapter 8-5 | 서블릿 예외 처리 - 필터 | 12m 26s | ❌ | | 
+| Chapter 8-6 | 서블릿 예외 처리 - 인터셉터 | 07m 49s | ❌ | | 
+| Chapter 8-7 | 스프링 부트 - 오류 페이지 1 | 08m 33s | ❌ | | 
+| Chapter 8-8 | 스프링 부트 - 오류 페이지 2 | 08m 14s | ❌ | | 
+| Chapter 8-9 | 정리 | 07m 08s | ❌ | | 
 | | | | | |
-| Section 9 | 스프링 트랜잭션 이해 | 11 Lectures / 2h 13m | ❌ | | 
-| Chapter 9-1 | 스프링 트랜잭션 소개 | 09m 45s | ❌ | | 
-| Chapter 9-2 | 프로젝트 생성 | 02m 33s | ❌ | | 
-| Chapter 9-3 | 트랜잭션 적용 확인 | 13m 54s | ❌ | | 
-| Chapter 9-4 | 트랜잭션 적용 위치 | 13m 46s | ❌ | | 
-| Chapter 9-5 | 트랜잭션 AOP 주의 사항 - 프록시 내부 호출1 | 18m 24s | ❌ | | 
-| Chapter 9-6 | 트랜잭션 AOP 주의 사항 - 프록시 내부 호출2 | 08m 57s | ❌ | | 
-| Chapter 9-7 | 트랜잭션 AOP 주의 사항 - 초기화 시점 | 06m 51s | ❌ | | 
-| Chapter 9-8 | 트랜잭션 옵션 소개 | 12m 18s | ❌ | | 
-| Chapter 9-9 | 예외와 트랜잭션 커밋, 롤백 - 기본 | 11m 54s | ❌ | | 
-| Chapter 9-10 | 예외와 트랜잭션 커밋, 롤백 - 활용 | 30m 19s | ❌ | | 
-| Chapter 9-11 | 정리 | 04m 50s | ❌ | | 
+| Section 9 | API 예외 처리 | 9 Lectures / 2h 13m | ❌ | | 
+| Chapter 9-1 | 시작 | 17m 53s | ❌ | | 
+| Chapter 9-2 | 스프링 부트 기본 오류 처리 | 10m 41s | ❌ | | 
+| Chapter 9-3 | HandlerExceptionResolver 시작 | 19m 56s | ❌ | | 
+| Chapter 9-4 | HandlerExceptionResolver 활용 | 14m 28s | ❌ | | 
+| Chapter 9-5 | 스프링이 제공하는 ExceptionResolver 1 | 16m 11s | ❌ | | 
+| Chapter 9-6 | 스프링이 제공하는 ExceptionResolver 2 | 10m 16s | ❌ | | 
+| Chapter 9-7 | @ExceptionHandler | 26m 40s | ❌ | | 
+| Chapter 9-8 | @ControllerAdvice | 07m 36s | ❌ | | 
+| Chapter 9-9 | 정리 | 09m 36s | ❌ | | 
 | | | | | |
-| Section 10 | 스프링 트랜잭션 전파 1 - 기본 | 9 Lectures / 1h 39m | ❌ | | 
-| Chapter 10-1 | 스프링 트랜잭션 전파 1 - 커밋, 롤백 | 06m 44s | ❌ | | 
-| Chapter 10-2 | 스프링 트랜잭션 전파 2 - 트랜잭션 두 번 사용 | 10m 45s | ❌ | | 
-| Chapter 10-3 | 스프링 트랜잭션 전파 3 - 전파 기본 | 09m 06s | ❌ | | 
-| Chapter 10-4 | 스프링 트랜잭션 전파 4 - 전파 예제 | 21m 34s | ❌ | | 
-| Chapter 10-5 | 스프링 트랜잭션 전파 5 - 외부 롤백 | 07m 06s | ❌ | | 
-| Chapter 10-6 | 스프링 트랜잭션 전파 6 - 내부 롤백 | 15m 02s | ❌ | | 
-| Chapter 10-7 | 스프링 트랜잭션 전파 7 - REQUIRES_NEW | 17m 47s | ❌ | | 
-| Chapter 10-8 | 스프링 트랜잭션 전파 8 - 다양한 전파 옵션 | 05m 27s | ❌ | | 
-| Chapter 10-9 | 정리 | 05m 55s | ❌ | | 
+| Section 10 | 스프링 타입 컨버터 | 11 Lectures / 1h 43m | ❌ | | 
+| Chapter 10-1 | 프로젝트 생성 | 01m 39s | ❌ | | 
+| Chapter 10-2 | 스프링 타입 컨버터 소개 | 09m 37s | ❌ | | 
+| Chapter 10-3 | 타입 컨버터 - Converter | 18m 42s | ❌ | | 
+| Chapter 10-4 | 컨버전 서비스 - ConversionService | 12m 01s | ❌ | | 
+| Chapter 10-5 | 스프링에 Converter 적용하기 | 09m 49s | ❌ | | 
+| Chapter 10-6 | 뷰 템플릿에 컨버터 적용하기 | 13m 40s | ❌ | | 
+| Chapter 10-7 | 포맷터 - Formatter | 10m 49s | ❌ | | 
+| Chapter 10-8 | 포맷터를 지원하는 컨버전 서비스 | 05m 54s | ❌ | | 
+| Chapter 10-9 | 포맷터 적용하기 | 04m 49s | ❌ | | 
+| Chapter 10-10 | 스프링이 제공하는 기본 포맷터 | 09m 40s | ❌ | | 
+| Chapter 10-11 | 정리 | 06m 57s | ❌ | | 
 | | | | | |
-| Section 11 | 스프링 트랜잭션 전파 2 - 활용 | 8 Lectures / 1h 16m | ❌ | | 
-| Chapter 11-1 | 트랜잭션 전파 활용 1 - 예제 프로젝트 시작 | 17m 57s | ❌ | | 
-| Chapter 11-2 | 트랜잭션 전파 활용 2 - 커밋, 롤백 | 09m 16s | ❌ | | 
-| Chapter 11-3 | 트랜잭션 전파 활용 3 - 단일 트랜잭션 | 09m 42s | ❌ | | 
-| Chapter 11-4 | 트랜잭션 전파 활용 4 - 전파 커밋 | 04m 50s | ❌ | | 
-| Chapter 11-5 | 트랜잭션 전파 활용 5 - 전파 롤백 | 07m 19s | ❌ | | 
-| Chapter 11-6 | 트랜잭션 전파 활용 6 - 복구 REQUIRED | 10m 06s | ❌ | | 
-| Chapter 11-7 | 트랜잭션 전파 활용 7 - 복구 REQUIRES_NEW | 10m 08s | ❌ | | 
-| Chapter 11-8 | 정리 | 07m 01s | ❌ | | 
+| Section 11 | 파일 업로드 | 7 Lectures / 1h 34m | ❌ | | 
+| Chapter 11-1 | 파일 업로드 소개 | 08m 16s | ❌ | | 
+| Chapter 11-2 | 프로젝트 생성 | 02m 22s | ❌ | | 
+| Chapter 11-3 | 서블릿과 파일 업로드 1 | 17m 42s | ❌ | | 
+| Chapter 11-4 | 서블릿과 파일 업로드 2 | 13m 39s | ❌ | | 
+| Chapter 11-5 | 스프링과 파일 업로드 | 06m 01s | ❌ | | 
+| Chapter 11-6 | 예제로 구현하는 파일 업로드, 다운로드 | 42m 04s | ❌ | | 
+| Chapter 11-7 | 정리 | 04m 45s | ❌ | | 
 | | | | | |
-| Section 12 | 다음으로 | 1 Lecture / 24m | ❌ | | 
-| Chapter 12-1 | 다음으로 | 24m 47s | ❌ | | 
+| Section 12 | 다음으로 | 1 Lecture / 17m | ❌ | | 
+| Chapter 12-1 | 다음으로 | 17m 02s | ❌ | | 
