--- a/Web/workbook/0x0E.md
+++ b/Web/workbook/0x0E.md
@@ -1,71 +1,51 @@
-# 0x0E. 실전! Querydsl [링크](https://www.inflearn.com/course/Querydsl-%EC%8B%A4%EC%A0%84)
+# 0x0E. 실전! 스프링 부트와 JPA 활용2 - API 개발과 성능 최적화 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-JPA-API%EA%B0%9C%EB%B0%9C-%EC%84%B1%EB%8A%A5%EC%B5%9C%EC%A0%81%ED%99%94)
 
-## 총 41강 ( 6 hours 24 minutes)
+## 총 24강 ( 6 hours 35 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=41&title=progress&width=500&color=babaca&suffix=/41)
+![100%](https://progress-bar.dev/0/?scale=24&title=progress&width=500&color=babaca&suffix=/24)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | Querydsl 소개 | 2 Lectures / 5m | ❌ |  |
-| Chapter 0-1 | 소개 | 05m 31s | ❌ | |
-| Chapter 0-2 | 강의 자료 |  | ❌ | |
+| Section 0 | 강좌 소개 |  Lectures / 2m | ❌ |  |
+| Chapter 0-1 | 미리보기 | 02m 27s | ❌ | |
+| Chapter 0-2 | 수업 자료 |  | ❌ | |
+| Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
+| Chapter 0-4 | 2편 추가 자료 |  | ❌ | | 
 | | | | | |
-| Section 1 | 프로젝트 환경설정 | 5 Lectures / 39m | ❌ | |
-| Chapter 1-1 | 프로젝트 생성 | 09m 11s | ❌ | | 
-| Chapter 1-2 | Querydsl 설정과 검증 | 13m 31s | ❌ | |
-| Chapter 1-3 | 라이브러리 살펴보기 | 06m 03s | ❌ | | 
-| Chapter 1-4 | H2 데이터베이스 설치 | 03m 13s | ❌ | |
-| Chapter 1-5 | 스프링 부트 설정 - JPA, DB | 07m 54s | ❌ | |
+| Section 1 | API 개발 기본 | 3 Lectures / 54m | ❌ | |
+| Chapter 1-1 | 회원 등록 API | 25m 46s | ❌ | | 
+| Chapter 1-2 | 회원 수정 API | 11m 29s | ❌ | |
+| Chapter 1-3 | 회원 조회 API | 16m 52s | ❌ | | 
 | | | | | |
-| Section 2 | 예제 도메인 모델 | 1 Lecture / 17m | ❌ | |
-| Chapter 2-1 | 예제 도메인 모델과 동작확인 | 17m 22s | ❌ | | 
+| Section 2 | API 개발 고급 - 준비 | 2 Lectures / 21m | ❌ | |
+| Chapter 2-1 | API 개발 고급 소개 | 05m 11s | ❌ | | 
+| Chapter 2-2 | 조회용 샘플 데이터 입력 | 16m 08s | ❌ | |
 | | | | | |
-| Section 3 | 기본 문법 | 13 Lectures / 1h 44m | ❌ | |
-| Chapter 3-1 | 시작 - JPQL vs Querydsl | 12m 04s | ❌ | | 
-| Chapter 3-2 | 기본 Q-Type 활용 | 05m 10s | ❌ | |
-| Chapter 3-3 | 검색 조건 쿼리 | 06m 07s | ❌ | | 
-| Chapter 3-4 | 결과 조회 | 06m 08s | ❌ | | 
-| Chapter 3-5 | 정렬 | 03m 58s | ❌ | | 
-| Chapter 3-6 | 페이징 | 04m 12s | ❌ | | 
-| Chapter 3-7 | 집합 | 08m 27s | ❌ | |
-| Chapter 3-8 | 조인 - 기본 조인 | 09m 32s | ❌ | | 
-| Chapter 3-9 | 조인 - on절 | 17m 00s | ❌ | | 
-| Chapter 3-10 | 조인 - 페치 조인 | 06m 05s | ❌ | | 
-| Chapter 3-11 | 서브 쿼리 | 16m 54s | ❌ | | 
-| Chapter 3-12 | Case 문 | 04m 57s | ❌ | | 
-| Chapter 3-13 | 상수, 문자 더하기 | 04m 19s | ❌ | | 
+| Section 3 | API 개발 고급 - 지연 로딩과 조회 성능 최적화 | 4 Lectures / 1h 21m | ❌ | |
+| Chapter 3-1 | 간단한 주문 조회 V1: 엔티티를 직접 노출 | 27m 54s | ❌ | | 
+| Chapter 3-2 | 간단한 주문 조회 V2: 엔티티를 DTO로 변환 | 21m 29s | ❌ | |
+| Chapter 3-3 | 간단한 주문 조회 V3: 엔티티를 DTO로 변환 - 페치 조인 최적화 | 09m 13s | ❌ | | 
+| Chapter 3-4 | 간단한 주문 조회 V4: JPA에서 DTO로 바로 조회 | 22m 24s | ❌ | | 
 | | | | | |
-| Section 4 | 중급 문법 | 7 Lectures / 1h 15m | ❌ | | 
-| Chapter 4-1 | 프로젝션과 결과 반환 - 기본 | 19m 10s | ❌ | | 
-| Chapter 4-2 | 프로젝션과 결과 반환 - DTO 조회 | 06m 33s | ❌ | | 
-| Chapter 4-3 | 프로젝션과 결과 반환 - @QueryProjection | 08m 56s | ❌ | | 
-| Chapter 4-4 | 동적 쿼리 - BooleanBuilder 사용 | 06m 52s | ❌ | | 
-| Chapter 4-5 | 동적 쿼리 - Where 다중 파라미터 사용 | 12m 38s | ❌ | | 
-| Chapter 4-6 | 수정, 삭제 벌크 연산 | 12m 54s | ❌ | | 
-| Chapter 4-7 | SQL function 호출하기 | 08m 22s | ❌ | | 
+| Section 4 | API 개발 고급 - 컬렉션 조회 최적화 | 8 Lectures / 2h 44m | ❌ | | 
+| Chapter 4-1 | 주문 조회 V1: 엔티티 직접 노출 | 11m 12s | ❌ | | 
+| Chapter 4-2 | 주문 조회 V2: 엔티티를 DTO로 변환 | 16m 27s | ❌ | | 
+| Chapter 4-3 | 주문 조회 V3: 엔티티를 DTO로 변환 - 페치 조인 최적화 | 25m 20s | ❌ | | 
+| Chapter 4-4 | 주문 조회 V3.1: 엔티티를 DTO로 변환 - 페이징과 한계 돌파 | 42m 41s | ❌ | | 
+| Chapter 4-5 | 주문 조회 V4: JPA에서 DTO 직접 조회 | 20m 30s | ❌ | | 
+| Chapter 4-6 | 주문 조회 V5: JPA에서 DTO 직접 조회 - 컬렉션 조회 최적화 | 11m 09s | ❌ | | 
+| Chapter 4-7 | 주문 조회 V6: JPA에서 DTO로 직접 조회, 플랫 데이터 최적화 | 15m 04s | ❌ | | 
+| Chapter 4-8 | API 개발 고급 정리 | 22m 05s | ❌ | | 
 | | | | | |
-| Section 5 | 실무 활용 - 순수 JPA와 Querydsl | 4 Lectures / 53m | ❌ | | 
-| Chapter 5-1 | 순수 JPA 리포지토리와 Querydsl | 15m 55s | ❌ | | 
-| Chapter 5-2 | 동적 쿼리와 성능 최적화 조회 - Builder 사용 | 14m 42s | ❌ | | 
-| Chapter 5-3 | 동적 쿼리와 성능 최적화 조회 - Where절 파라미터 사용 | 10m 27s | ❌ | | 
-| Chapter 5-4 | 조회 API 컨트롤러 개발 | 12m 16s | ❌ | | 
+| Section 5 | API 개발 고급 - 실무 필수 최적화 | 1 Lecture / 31m | ❌ | | 
+| Chapter 5-1 | OSIV와 성능 최적화 | 31m 19s | ❌ | | 
 | | | | | |
-| Section 6 | 실무 활용 - 스프링 데이터 JPA와 Querydsl | 5 Lectures / 40m | ❌ | | 
-| Chapter 6-1 | 스프링 데이터 JPA 리포지토리로 변경 | 06m 06s | ❌ | | 
-| Chapter 6-2 | 사용자 정의 리포지토리 | 09m 30s | ❌ | | 
-| Chapter 6-3 | 스프링 데이터 페이징 활용1 - Querydsl 페이징 연동 | 13m 23s | ❌ | | 
-| Chapter 6-4 | 스프링 데이터 페이징 활용2 - CountQuery 최적화 | 03m 46s | ❌ | | 
-| Chapter 6-5 | 스프링 데이터 페이징 활용3 - 컨트롤러 개발 | 07m 27s | ❌ | | 
-| | | | | |
-| Section 7 | 스프링 데이터 JPA가 제공하는 Querydsl 기능 | 4 Lectures / 48m | ❌ | | 
-| Chapter 7-1 | 인터페이스 지원 - QuerydslPredicateExecutor | 08m 16s | ❌ | | 
-| Chapter 7-2 | Querydsl Web 지원 | 05m 22s | ❌ | | 
-| Chapter 7-3 | 리포지토리 지원 - QuerydslRepositorySupport | 13m 31s | ❌ | | 
-| Chapter 7-4 | Querydsl 지원 클래스 직접 만들기 | 21m 03s | ❌ | | 
-
+| Section 6 | 다음으로 | 2 Lectures / 40m | ❌ | | 
+| Chapter 6-1 | 스프링 데이터 JPA 소개 | 18m 03s | ❌ | | 
+| Chapter 6-2 | QueryDSL 소개 | 22m 37s | ❌ | | 
