--- a/Web/workbook/0x0F.md
+++ b/Web/workbook/0x0F.md
@@ -1,144 +1,61 @@
-# 0x0F. 스프링 부트 - 핵심 원리와 활용 [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-%ED%95%B5%EC%8B%AC%EC%9B%90%EB%A6%AC-%ED%99%9C%EC%9A%A9)
+# 0x0F. 실전! 스프링 데이터 JPA [링크](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%EB%8D%B0%EC%9D%B4%ED%84%B0-JPA-%EC%8B%A4%EC%A0%84)
 
-## 총 107 강 ( 15 hours 45 minutes)
+## 총 32강 ( 7 hours 17 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=107&title=progress&width=500&color=babaca&suffix=/107)
+![100%](https://progress-bar.dev/0/?scale=32&title=progress&width=500&color=babaca&suffix=/32)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 오리엔테이션 | 4 Lectures / 6m | ❌ |  |
-| Chapter 0-1 | 강의 소개 | 06:57 | ❌ | |
-| Chapter 0-2 | 수업 자료 |  | ❌ | |
-| Chapter 0-3 | 강의 소스 코드 |  | ❌ | | 
-| Chapter 0-4 | 스프링 부트 소개 PPT 자료 |  | ❌ | | 
+| Section 0 | 스프링 데이터 JPA 소개 | 2 Lectures / 3m | ❌ |  |
+| Chapter 0-1 | 소개 | 03m 16s | ❌ | |
+| Chapter 0-2 | 강의 자료 |  | ❌ | |
 | | | | | |
-| Section 1 | 스프링 부트 소개 | 2 Lectures / 30m | ❌ | |
-| Chapter 1-1 | 스프링 프레임워크의 등장 | 13m 59s | ❌ | | 
-| Chapter 1-2 | 스프링 부트의 등장 | 16m 08s | ❌ | |
+| Section 1 | 프로젝트 환경설정 | 4 Lectures / 48m | ❌ | |
+| Chapter 1-1 | 프로젝트 생성 | 08m 01s | ❌ | | 
+| Chapter 1-2 | 라이브러리 살펴보기 | 09m 06s | ❌ | |
+| Chapter 1-3 | H2 데이터베이스 설치 | 05m 02s | ❌ | | 
+| Chapter 1-4 | 스프링 데이터 JPA와 DB 설정, 동작확인 | 26m 20s | ❌ | |
 | | | | | |
-| Section 2 | 웹 서버와 서블릿 컨테이너 | 11 Lectures / 1h 37m | ❌ | |
-| Chapter 2-1 | 웹 서버와 스프링 부트 소개 | 06m 27s | ❌ | | 
-| Chapter 2-2 | 톰캣 설치 | 04m 49s | ❌ | |
-| Chapter 2-3 | 프로젝트 설정 | 06m 31s | ❌ | | 
-| Chapter 2-4 | WAR 빌드와 배포 | 11m 30s | ❌ | | 
-| Chapter 2-5 | 톰캣 설정 - 인텔리J 유료 버전 | 04m 31s | ❌ | |
-| Chapter 2-6 | 톰캣 설정 - 인텔리J 무료 버전 | 06m 38s | ❌ | | 
-| Chapter 2-7 | 서블릿 컨테이너 초기화1 | 07m 33s | ❌ | | 
-| Chapter 2-8 | 서블릿 컨테이너 초기화2 | 20m 01s | ❌ | |
-| Chapter 2-9 | 스프링 컨테이너 등록 | 13m 29s | ❌ | | 
-| Chapter 2-10 | 스프링 MVC 서블릿 컨테이너 초기화 지원 | 11m 05s | ❌ | |
-| Chapter 2-11 | 정리 | 04m 58s | ❌ | | 
+| Section 2 | 예제 도메인 모델 | 1 Lecture / 19m | ❌ | |
+| Chapter 2-1 | 예제 도메인 모델과 동작확인 | 19m 42s | ❌ | | 
 | | | | | |
-| Section 3 | 스프링 부트와 내장 톰캣 | 12 Lectures / 1h 31m | ❌ | |
-| Chapter 3-1 | WAR 배포 방식의 단점 | 05m 20s | ❌ | | 
-| Chapter 3-2 | 내장 톰캣1 - 설정 | 02m 34s | ❌ | |
-| Chapter 3-3 | 내장 톰캣2 - 서블릿 | 07m 08s | ❌ | | 
-| Chapter 3-4 | 내장 톰캣3 - 스프링 | 06m 12s | ❌ | | 
-| Chapter 3-5 | 내장 톰캣4 - 빌드와 배포1 | 07m 44s | ❌ | | 
-| Chapter 3-6 | 내장 톰캣5 - 빌드와 배포2 | 13m 37s | ❌ | | 
-| Chapter 3-7 | 편리한 부트 클래스 만들기 | 11m 10s | ❌ | |
-| Chapter 3-8 | 스프링 부트와 웹 서버 - 프로젝트 생성 | 05m 12s | ❌ | | 
-| Chapter 3-9 | 스프링 부트와 웹 서버 - 실행 과정 | 08m 45s | ❌ | | 
-| Chapter 3-10 | 스프링 부트와 웹 서버 - 빌드와 배포 | 05m 51s | ❌ | | 
-| Chapter 3-11 | 스프링 부트 실행 가능 Jar | 11m 46s | ❌ | | 
-| Chapter 3-12 | 정리 | 05m 56s | ❌ | | 
+| Section 3 | 공통 인터페이스 기능 | 4 Lectures / 38m | ❌ | |
+| Chapter 3-1 | 순수 JPA 기반 리포지토리 만들기 | 17m 05s | ❌ | | 
+| Chapter 3-2 | 공통 인터페이스 설정 | 07m 51s | ❌ | |
+| Chapter 3-3 | 공통 인터페이스 적용 | 03m 59s | ❌ | | 
+| Chapter 3-4 | 공통 인터페이스 분석 | 09m 59s | ❌ | | 
 | | | | | |
-| Section 4 | 스프링 부트 스타터와 라이브러리 관리 | 4 Lectures / 28m | ❌ | | 
-| Chapter 4-1 | 라이브러리 직접 관리 | 06m 09s | ❌ | | 
-| Chapter 4-2 | 스프링 부트 라이브러리 버전 관리 | 09m 43s | ❌ | | 
-| Chapter 4-3 | 스프링 부트 스타터 | 09m 22s | ❌ | | 
-| Chapter 4-4 | 정리 | 03m 25s | ❌ | | 
+| Section 4 | 쿼리 메소드 기능 | 11 Lectures / 2h 41m | ❌ | | 
+| Chapter 4-1 | 메소드 이름으로 쿼리 생성 | 17m 27s | ❌ | | 
+| Chapter 4-2 | JPA NamedQuery | 13m 07s | ❌ | | 
+| Chapter 4-3 | @Query, 리포지토리 메소드에 쿼리 정의하기 | 05m 45s | ❌ | | 
+| Chapter 4-4 | @Query, 값, DTO 조회하기 | 08m 37s | ❌ | | 
+| Chapter 4-5 | 파라미터 바인딩 | 03m 52s | ❌ | | 
+| Chapter 4-6 | 반환 타입 | 12m 40s | ❌ | | 
+| Chapter 4-7 | 순수 JPA 페이징과 정렬 | 12m 53s | ❌ | | 
+| Chapter 4-8 | 스프링 데이터 JPA 페이징과 정렬 | 29m 59s | ❌ | | 
+| Chapter 4-9 | 벌크성 수정 쿼리 | 16m 06s | ❌ | | 
+| Chapter 4-10 | @EntityGraph | 24m 13s | ❌ | | 
+| Chapter 4-11 | JPA Hint & Lock | 16m 40s | ❌ | | 
 | | | | | |
-| Section 5 | 자동 구성(Auto Configuration) | 16 Lectures / 2h 12m | ❌ | | 
-| Chapter 5-1 | 프로젝트 설정 | 01m 55s | ❌ | | 
-| Chapter 5-2 | 예제 만들기 | 14m 00s | ❌ | | 
-| Chapter 5-3 | 자동 구성 확인 | 06m 03s | ❌ | | 
-| Chapter 5-4 | 스프링 부트의 자동 구성 | 13m 59s | ❌ | | 
-| Chapter 5-5 | 자동 구성 직접 만들기 - 기반 예제 | 08m 55s | ❌ | | 
-| Chapter 5-6 | @Conditional | 08m 53s | ❌ | | 
-| Chapter 5-7 | @Conditional - 다양한 기능 | 07m 08s | ❌ | | 
-| Chapter 5-8 | 순수 라이브러리 만들기 | 07m 02s | ❌ | | 
-| Chapter 5-9 | 순수 라이브러리 사용하기1 | 01m 42s | ❌ | | 
-| Chapter 5-10 | 순수 라이브러리 사용하기2 | 08m 01s | ❌ | | 
-| Chapter 5-11 | 자동 구성 라이브러리 만들기 | 08m 17s | ❌ | | 
-| Chapter 5-12 | 자동 구성 라이브러리 사용하기1 | 01m 43s | ❌ | | 
-| Chapter 5-13 | 자동 구성 라이브러리 사용하기2 | 06m 10s | ❌ | | 
-| Chapter 5-14 | 자동 구성 이해1 - 스프링 부트의 동작 | 05m 19s | ❌ | | 
-| Chapter 5-15 | 자동 구성 이해2 - ImportSelector | 19m 52s | ❌ | | 
-| Chapter 5-16 | 정리 | 13m 29s | ❌ | | 
+| Section 5 | 확장 기능 | 4 Lectures / 1h 07m | ❌ | | 
+| Chapter 5-1 | 사용자 정의 리포지토리 구현 | 15m 31s | ❌ | | 
+| Chapter 5-2 | Auditing | 23m 44s | ❌ | | 
+| Chapter 5-3 | Web 확장 - 도메인 클래스 컨버터 | 05m 42s | ❌ | | 
+| Chapter 5-4 | Web 확장 - 페이징과 정렬 | 22m 33s | ❌ | | 
 | | | | | |
-| Section 6 | 외부설정과 프로필 1 | 14 Lectures / 2h 10m | ❌ | | 
-| Chapter 6-1 | 프로젝트 설정 | 01m 45s | ❌ | | 
-| Chapter 6-2 | 외부 설정이란? | 16m 37s | ❌ | | 
-| Chapter 6-3 | 외부 설정 - OS 환경 변수 | 06m 13s | ❌ | | 
-| Chapter 6-4 | 외부 설정 - 자바 시스템 속성 | 10m 22s | ❌ | | 
-| Chapter 6-5 | 외부 설정 - 커맨드 라인 인수 | 05m 15s | ❌ | | 
-| Chapter 6-6 | 외부 설정 - 커맨드 라인 옵션 인수 | 10m 57s | ❌ | | 
-| Chapter 6-7 | 외부 설정 - 커맨드 라인 옵션 인수와 스프링 부트 | 06m 32s | ❌ | | 
-| Chapter 6-8 | 외부 설정 - 스프링 통합 | 15m 38s | ❌ | | 
-| Chapter 6-9 | 설정 데이터1 - 외부 파일 | 09m 31s | ❌ | | 
-| Chapter 6-10 | 설정 데이터2 - 내부 파일 분리 | 09m 14s | ❌ | | 
-| Chapter 6-11 | 설정 데이터3 - 내부 파일 합체 | 07m 20s | ❌ | | 
-| Chapter 6-12 | 우선순위 - 설정 데이터 | 14m 11s | ❌ | | 
-| Chapter 6-13 | 우선순위 - 전체 | 10m 09s | ❌ | | 
-| Chapter 6-14 | 정리 | 06m 37s | ❌ | | 
+| Section 6 | 스프링 데이터 JPA 분석 | 2 Lectures / 29m | ❌ | | 
+| Chapter 6-1 | 스프링 데이터 JPA 구현체 분석 | 13m 39s | ❌ | | 
+| Chapter 6-2 | 새로운 엔티티를 구별하는 방법 | 16m 17s | ❌ | | 
 | | | | | |
-| Section 7 | 외부설정과 프로필 2 | 9 Lectures / 1h 27m | ❌ | | 
-| Chapter 7-1 | 프로젝트 설정 | 01m 31s | ❌ | | 
-| Chapter 7-2 | 외부 설정 사용 - Environment | 16m 07s | ❌ | | 
-| Chapter 7-3 | 외부설정 사용 - @Value | 09m 00s | ❌ | | 
-| Chapter 7-4 | 외부설정 사용 - @ConfigurationProperties 시작 | 19m 10s | ❌ | | 
-| Chapter 7-5 | 외부설정 사용 - @ConfigurationProperties 생성자 | 09m 00s | ❌ | | 
-| Chapter 7-6 | 외부설정 사용 - @ConfigurationProperties 검증 | 08m 22s | ❌ | | 
-| Chapter 7-7 | YAML | 08m 44s | ❌ | | 
-| Chapter 7-8 | @Profile | 10m 52s | ❌ | | 
-| Chapter 7-9 | 정리 | 04m 55s | ❌ | | 
-| | | | | |
-| Section 8 | 액츄에이터 | 11 Lectures / 1h 10m | ❌ | | 
-| Chapter 8-1 | 프로덕션 준비 기능이란? | 07m 36s | ❌ | | 
-| Chapter 8-2 | 프로젝트 설정 | 01m 23s | ❌ | | 
-| Chapter 8-3 | 액츄에이터 시작 | 07m 31s | ❌ | | 
-| Chapter 8-4 | 엔드포인트 설정 | 06m 51s | ❌ | | 
-| Chapter 8-5 | 다양한 엔드포인트 | 07m 59s | ❌ | | 
-| Chapter 8-6 | 헬스 정보 | 06m 36s | ❌ | | 
-| Chapter 8-7 | 애플리케이션 정보 | 09m 57s | ❌ | | 
-| Chapter 8-8 | 로거 | 10m 43s | ❌ | | 
-| Chapter 8-9 | HTTP 요청 응답 기록 | 03m 12s | ❌ | | 
-| Chapter 8-10 | 액츄에이터와 보안 | 05m 06s | ❌ | | 
-| Chapter 8-11 | 정리 | 03m 08s | ❌ | | 
-| | | | | |
-| Section 9 | 마이크로미터, 프로메테우스, 그라파나 | 15 Lectures / 2h 27m | ❌ | | 
-| Chapter 9-1 | 마이크로미터 소개 | 09m 04s | ❌ | | 
-| Chapter 9-2 | 메트릭 확인하기 | 08m 22s | ❌ | | 
-| Chapter 9-3 | 다양한 메트릭 | 16m 50s | ❌ | | 
-| Chapter 9-4 | 프로메테우스와 그라파나 소개 | 05m 45s | ❌ | | 
-| Chapter 9-5 | 프로메테우스 - 설치 | 03m 08s | ❌ | | 
-| Chapter 9-6 | 프로메테우스 - 애플리케이션 설정 | 14m 59s | ❌ | | 
-| Chapter 9-7 | 프로메테우스 - 수집 설정 | 05m 03s | ❌ | | 
-| Chapter 9-8 | 프로메테우스 - 기본 기능 | 12m 49s | ❌ | | 
-| Chapter 9-9 | 프로메테우스 - 게이지와 카운터 | 16m 37s | ❌ | | 
-| Chapter 9-10 | 그라파나 - 설치 | 02m 32s | ❌ | | 
-| Chapter 9-11 | 그라파나 - 연동 | 02m 25s | ❌ | | 
-| Chapter 9-12 | 그라파나 - 대시보드 만들기 | 09m 08s | ❌ | | 
-| Chapter 9-13 | 그라파나 - 공유 대시보드 활용 | 12m 51s | ❌ | | 
-| Chapter 9-14 | 그라파나 - 메트릭을 통한 문제 확인 | 20m 26s | ❌ | | 
-| Chapter 9-15 | 정리 | 07m 14s | ❌ | | 
-| | | | | |
-| Section 10 | 모니터링 메트릭 활용 | 8 Lectures / 1h 38m | ❌ | | 
-| Chapter 10-1 | 메트릭 등록 - 예제 만들기 | 12m 21s | ❌ | | 
-| Chapter 10-2 | 메트릭 등록1 - 카운터 | 16m 32s | ❌ | | 
-| Chapter 10-3 | 메트릭 등록2 - @Counted | 07m 17s | ❌ | | 
-| Chapter 10-4 | 메트릭 등록3 - Timer | 17m 48s | ❌ | | 
-| Chapter 10-5 | 메트릭 등록4 - @Timed | 05m 16s | ❌ | | 
-| Chapter 10-6 | 메트릭 등록5 - 게이지 | 13m 18s | ❌ | | 
-| Chapter 10-7 | 정리 | 05m 24s | ❌ | | 
-| Chapter 10-8 | 실무 모니터링 환경 구성 팁 | 20m 18s | ❌ | | 
-| | | | | |
-| Section 11 | 다음으로 | 1 Lecture / 25m | ❌ | | 
-| Chapter 11-1 | 다음으로 | 25m 16s | ❌ | | 
+| Section 7 | 나머지 기능들 | 4 Lectures / 1h 08m | ❌ | | 
+| Chapter 7-1 | Specifications (명세) | 18m 42s | ❌ | | 
+| Chapter 7-2 | Query By Example | 14m 16s | ❌ | | 
+| Chapter 7-3 | Projections | 19m 33s | ❌ | | 
+| Chapter 7-4 | 네이티브 쿼리 | 15m 45s | ❌ | | 
